@@ -1,4 +1,5 @@
-/*******************************************************************************
+/*
+ * *****************************************************************************
  *     Cloud Foundry
  *     Copyright (c) [2009-2016] Pivotal Software, Inc. All Rights Reserved.
  *
@@ -12,11 +13,9 @@
  *******************************************************************************/
 package org.cloudfoundry.identity.uaa.impl.config;
 
-
-import org.cloudfoundry.identity.uaa.provider.JdbcIdentityProviderProvisioning;
-import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.Getter;
+import lombok.Setter;
+import lombok.extern.slf4j.Slf4j;
 import org.cloudfoundry.identity.uaa.audit.event.EntityDeletedEvent;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
 import org.cloudfoundry.identity.uaa.provider.AbstractIdentityProviderDefinition;
@@ -32,8 +31,8 @@ import org.cloudfoundry.identity.uaa.provider.saml.BootstrapSamlIdentityProvider
 import org.cloudfoundry.identity.uaa.util.LdapUtils;
 import org.cloudfoundry.identity.uaa.util.UaaMapUtils;
 import org.cloudfoundry.identity.uaa.zone.IdentityZone;
+import org.cloudfoundry.identity.uaa.zone.beans.IdentityZoneManager;
 import org.springframework.beans.factory.InitializingBean;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.context.ApplicationEventPublisherAware;
 import org.springframework.context.ApplicationListener;
@@ -51,39 +50,48 @@ import java.util.Map;
 
 import static java.util.Collections.emptyList;
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 import static org.cloudfoundry.identity.uaa.authentication.SystemAuthentication.SYSTEM_AUTHENTICATION;
 import static org.cloudfoundry.identity.uaa.constants.OriginKeys.LDAP;
 import static org.cloudfoundry.identity.uaa.constants.OriginKeys.UAA;
 import static org.cloudfoundry.identity.uaa.provider.LdapIdentityProviderDefinition.LDAP_PROPERTY_NAMES;
 import static org.cloudfoundry.identity.uaa.provider.LdapIdentityProviderDefinition.LDAP_PROPERTY_TYPES;
 
+@Slf4j
 public class IdentityProviderBootstrap
-    implements InitializingBean, ApplicationListener<ContextRefreshedEvent>, ApplicationEventPublisherAware {
-    private static Logger logger = LoggerFactory.getLogger(IdentityProviderBootstrap.class);
+        implements InitializingBean, ApplicationListener<ContextRefreshedEvent>, ApplicationEventPublisherAware {
 
-    private IdentityProviderProvisioning provisioning;
-    private List<IdentityProviderWrapper> providers = new LinkedList<>();
+    private final IdentityProviderProvisioning provisioning;
+    private final List<IdentityProviderWrapper<?>> providers = new LinkedList<>();
+    private final Environment environment;
+    private final IdentityZoneManager identityZoneManager;
     private BootstrapSamlIdentityProviderData configurator;
     private List<IdentityProviderWrapper> oauthIdpDefintions;
+    @Setter
     private Map<String, Object> ldapConfig;
+    @Setter
     private Map<String, Object> keystoneConfig;
-    private Environment environment;
+    @Setter
     private PasswordPolicy defaultPasswordPolicy;
+    @Setter
     private LockoutPolicy defaultLockoutPolicy;
+    @Getter
+    @Setter
     private boolean disableInternalUserManagement;
 
-    private List<String> originsToDelete = null;
+    @Setter
+    private List<String> originsToDelete;
     private ApplicationEventPublisher publisher;
 
     public IdentityProviderBootstrap(
-            final @Qualifier("identityProviderProvisioning") IdentityProviderProvisioning provisioning,
+            final IdentityProviderProvisioning provisioning,
+            final IdentityZoneManager identityZoneManager,
             Environment environment) {
-        if (provisioning==null) {
+        if (provisioning == null) {
             throw new NullPointerException("Constructor argument can't be null.");
         }
         this.provisioning = provisioning;
         this.environment = environment;
+        this.identityZoneManager = identityZoneManager;
 
     }
 
@@ -91,14 +99,14 @@ public class IdentityProviderBootstrap
         if (oauthIdpDefintions == null) {
             return;
         }
-        for (IdentityProviderWrapper wrapper : oauthIdpDefintions) {
+        for (IdentityProviderWrapper<AbstractIdentityProviderDefinition> wrapper : oauthIdpDefintions) {
             validateDuplicateAlias(wrapper.getProvider().getOriginKey());
             providers.add(wrapper);
         }
     }
 
     public void validateDuplicateAlias(String originKey) {
-        for (IdentityProvider provider: providers.stream().map(IdentityProviderWrapper::getProvider).collect(toList())) {
+        for (IdentityProvider<?> provider : providers.stream().map(IdentityProviderWrapper::getProvider).toList()) {
             if (provider.getOriginKey().equals(originKey)) {
                 throw new IllegalArgumentException("Provider alias " + originKey + " is not unique.");
             }
@@ -108,31 +116,28 @@ public class IdentityProviderBootstrap
     public void setSamlProviders(BootstrapSamlIdentityProviderData configurator) {
         this.configurator = configurator;
     }
+
     protected void addSamlProviders() {
-        if (configurator==null) {
+        if (configurator == null) {
             return;
         }
-        for (IdentityProviderWrapper wrapper : configurator.getSamlProviders()) {
+        for (IdentityProviderWrapper<?> wrapper : configurator.getSamlProviders()) {
             validateDuplicateAlias(wrapper.getProvider().getOriginKey());
             providers.add(wrapper);
         }
 
     }
 
-    public void setLdapConfig(HashMap<String, Object> ldapConfig) {
-        this.ldapConfig = ldapConfig;
-    }
-
     protected void addLdapProvider() {
         boolean ldapProfile = Arrays.asList(environment.getActiveProfiles()).contains(LDAP);
         //the LDAP provider has to be there
         //and we activate, deactivate based on the `ldap` profile presence
-        IdentityProvider provider = new IdentityProvider();
+        IdentityProvider<LdapIdentityProviderDefinition> provider = new IdentityProvider<>();
         provider.setActive(ldapProfile);
         provider.setOriginKey(LDAP);
         provider.setType(LDAP);
         provider.setName("UAA LDAP Provider");
-        Map<String,Object> ldap = new HashMap<>();
+        Map<String, Object> ldap = new HashMap<>();
         ldap.put(LdapIdentityProviderDefinition.LDAP, ldapConfig);
         LdapIdentityProviderDefinition json = getLdapConfigAsDefinition(ldap);
         provider.setConfig(json);
@@ -141,17 +146,15 @@ public class IdentityProviderBootstrap
           LDAP is a bit tricky. We have a Flyway conversion (2.0.2) that always adds an LDAP provider.
           So we have to assume that if LDAP config == null, then we should override it
          */
-        boolean override = ldapConfig == null || ldapConfig.get("override") == null ? true : (boolean) ldapConfig.get("override");
+        boolean override = ldapConfig == null || ldapConfig.get("override") == null || (boolean) ldapConfig.get("override");
         if (!override) {
-            IdentityProvider existing = getProviderByOriginIgnoreActiveFlag(LDAP, IdentityZone.getUaaZoneId());
+            IdentityProvider<AbstractIdentityProviderDefinition> existing = getProviderByOriginIgnoreActiveFlag(LDAP, IdentityZone.getUaaZoneId());
             override = existing == null || existing.getConfig() == null;
         }
-        IdentityProviderWrapper wrapper = new IdentityProviderWrapper(provider);
+        IdentityProviderWrapper<LdapIdentityProviderDefinition> wrapper = new IdentityProviderWrapper<>(provider);
         wrapper.setOverride(override);
         providers.add(wrapper);
     }
-
-
 
     protected LdapIdentityProviderDefinition getLdapConfigAsDefinition(Map<String, Object> ldapConfig) {
         ldapConfig = UaaMapUtils.flatten(ldapConfig);
@@ -164,25 +167,21 @@ public class IdentityProviderBootstrap
 
     protected void populateLdapEnvironment(Map<String, Object> ldapConfig) {
         //this method reads the environment and overwrites values (needed by LdapMockMvcTests that overrides properties through env)
-        AbstractEnvironment env = (AbstractEnvironment)environment;
+        AbstractEnvironment env = (AbstractEnvironment) environment;
         //these are our known complex data structures in the properties
         for (String property : LDAP_PROPERTY_NAMES) {
-            if (env.containsProperty(property) && LDAP_PROPERTY_TYPES.get(property)!=null) {
+            if (env.containsProperty(property) && LDAP_PROPERTY_TYPES.get(property) != null) {
                 ldapConfig.put(property, env.getProperty(property, LDAP_PROPERTY_TYPES.get(property)));
             }
         }
 
         //but we can also have string properties like ldap.attributeMappings.user.attribute.mapToAttributeName=mapFromAttributeName
-        Map<String,Object> stringProperties = UaaMapUtils.getPropertiesStartingWith(env, "ldap.");
+        Map<String, Object> stringProperties = UaaMapUtils.getPropertiesStartingWith(env, "ldap.");
         for (Map.Entry<String, Object> entry : stringProperties.entrySet()) {
             if (!LDAP_PROPERTY_NAMES.contains(entry.getKey())) {
                 ldapConfig.put(entry.getKey(), entry.getValue());
             }
         }
-    }
-
-    public void setKeystoneConfig(HashMap<String, Object> keystoneConfig) {
-        this.keystoneConfig = keystoneConfig;
     }
 
     protected AbstractIdentityProviderDefinition getKeystoneDefinition(Map<String, Object> config) {
@@ -192,14 +191,14 @@ public class IdentityProviderBootstrap
     protected void addKeystoneProvider() {
         boolean keystoneProfile = Arrays.asList(environment.getActiveProfiles()).contains(OriginKeys.KEYSTONE);
         if (keystoneConfig != null || keystoneProfile) {
-            boolean active = keystoneProfile && keystoneConfig!=null;
-            IdentityProvider provider = new IdentityProvider();
+            boolean active = keystoneProfile && keystoneConfig != null;
+            IdentityProvider<AbstractIdentityProviderDefinition> provider = new IdentityProvider<>();
             provider.setOriginKey(OriginKeys.KEYSTONE);
             provider.setType(OriginKeys.KEYSTONE);
             provider.setName("UAA Keystone Provider");
             provider.setActive(active);
             provider.setConfig(getKeystoneDefinition(keystoneConfig));
-            providers.add(new IdentityProviderWrapper(provider));
+            providers.add(new IdentityProviderWrapper<>(provider));
         }
     }
 
@@ -224,15 +223,15 @@ public class IdentityProviderBootstrap
 
         String zoneId = IdentityZone.getUaaZoneId();
 
-        for (IdentityProviderWrapper wrapper: providers) {
-            IdentityProvider provider = wrapper.getProvider();
+        for (IdentityProviderWrapper<?> wrapper : providers) {
+            IdentityProvider<?> provider = wrapper.getProvider();
             if (getOriginsToDelete().contains(provider.getOriginKey())) {
                 //dont process origins slated for deletion
                 continue;
             }
-            IdentityProvider existing = getProviderByOriginIgnoreActiveFlag(provider.getOriginKey(), zoneId);
+            IdentityProvider<AbstractIdentityProviderDefinition> existing = getProviderByOriginIgnoreActiveFlag(provider.getOriginKey(), zoneId);
             provider.setIdentityZoneId(zoneId);
-            if (existing==null) {
+            if (existing == null) {
                 provisioning.create(provider, zoneId);
             } else if (wrapper.isOverride()) {
                 provider.setId(existing.getId());
@@ -245,31 +244,27 @@ public class IdentityProviderBootstrap
         updateDefaultZoneUaaIDP();
     }
 
-    public IdentityProvider getProviderByOriginIgnoreActiveFlag(String origin, String zoneId) {
+    public IdentityProvider<AbstractIdentityProviderDefinition> getProviderByOriginIgnoreActiveFlag(String origin, String zoneId) {
         try {
             return provisioning.retrieveByOriginIgnoreActiveFlag(origin, zoneId);
-        }catch (EmptyResultDataAccessException ignored){
+        } catch (EmptyResultDataAccessException ignored) {
+            return null;
         }
-        return null;
-
     }
 
     private void deleteIdentityProviders(String zoneId) {
         for (String origin : getOriginsToDelete()) {
             if (!UAA.equals(origin) && !LDAP.equals(origin)) {
-                logger.debug("Attempting to deactivating identity provider:"+origin);
-                IdentityProvider provider = getProviderByOriginIgnoreActiveFlag(origin, zoneId);
+                log.debug("Attempting to deactivating identity provider: {}", origin);
+                IdentityProvider<AbstractIdentityProviderDefinition> provider = getProviderByOriginIgnoreActiveFlag(origin, zoneId);
                 //delete provider
                 if (provider != null) {
-                    EntityDeletedEvent<IdentityProvider> event = new EntityDeletedEvent<>(provider, SYSTEM_AUTHENTICATION, IdentityZoneHolder.getCurrentZoneId());
+                    EntityDeletedEvent<IdentityProvider<AbstractIdentityProviderDefinition>> event = new EntityDeletedEvent<>(provider, SYSTEM_AUTHENTICATION, identityZoneManager.getCurrentIdentityZoneId());
                     if (this.publisher != null) {
                         publisher.publishEvent(event);
-                        logger.debug("Identity provider deactivated:" + origin);
+                        log.debug("Identity provider deactivated: {}", origin);
                     } else {
-                        logger.warn(
-                                String.format("Unable to delete identity provider with origin '%s', no application publisher",
-                                        origin)
-                        );
+                        log.warn("Unable to delete identity provider with origin '{}', no application publisher", origin);
                     }
                 }
             }
@@ -278,7 +273,7 @@ public class IdentityProviderBootstrap
 
     protected void updateDefaultZoneUaaIDP() {
         String zoneId = IdentityZone.getUaaZoneId();
-        IdentityProvider internalIDP = getProviderByOriginIgnoreActiveFlag(UAA, IdentityZone.getUaaZoneId());
+        IdentityProvider<AbstractIdentityProviderDefinition> internalIDP = getProviderByOriginIgnoreActiveFlag(UAA, IdentityZone.getUaaZoneId());
         UaaIdentityProviderDefinition identityProviderDefinition = new UaaIdentityProviderDefinition(defaultPasswordPolicy, defaultLockoutPolicy, disableInternalUserManagement);
         internalIDP.setConfig(identityProviderDefinition);
         String disableInternalAuth = environment.getProperty("disableInternalAuth");
@@ -294,32 +289,11 @@ public class IdentityProviderBootstrap
         }
     }
 
-    public void setDefaultPasswordPolicy(PasswordPolicy defaultPasswordPolicy) {
-        this.defaultPasswordPolicy = defaultPasswordPolicy;
-    }
-
-    public void setDefaultLockoutPolicy(LockoutPolicy defaultLockoutPolicy) {
-        this.defaultLockoutPolicy = defaultLockoutPolicy;
-    }
-
-    public boolean isDisableInternalUserManagement() {
-        return disableInternalUserManagement;
-    }
-
-    public void setDisableInternalUserManagement(boolean disableInternalUserManagement) {
-        this.disableInternalUserManagement = disableInternalUserManagement;
-    }
-
     public void setOauthIdpDefinitions(List<IdentityProviderWrapper> oauthIdpDefintions) {
         this.oauthIdpDefintions = oauthIdpDefintions;
-    }
-
-    public void setOriginsToDelete(List<String> originsToDelete) {
-        this.originsToDelete = originsToDelete;
     }
 
     public List<String> getOriginsToDelete() {
         return ofNullable(originsToDelete).orElse(emptyList());
     }
-
 }
