@@ -1,16 +1,16 @@
 package org.cloudfoundry.identity.uaa.security;
 
-import org.apache.directory.api.util.Strings;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
 import org.cloudfoundry.identity.uaa.scim.ScimUser;
 import org.cloudfoundry.identity.uaa.scim.ScimUserProvisioning;
 import org.cloudfoundry.identity.uaa.scim.exception.ScimResourceNotFoundException;
+import org.cloudfoundry.identity.uaa.util.UaaStringUtils;
 import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
 
 import java.util.Objects;
 
 public class ScimUserUpdateDiff {
-    private ScimUserProvisioning scimUserProvisioning;
+    private final ScimUserProvisioning scimUserProvisioning;
 
     public ScimUserUpdateDiff(ScimUserProvisioning scimUserProvisioning) {
         this.scimUserProvisioning = scimUserProvisioning;
@@ -40,12 +40,12 @@ public class ScimUserUpdateDiff {
 
     private boolean originsEquivalent(ScimUser scimUserFromRequest, ScimUser scimUserFromDb) {
         return scimUserFromDb.getOrigin().equals(scimUserFromRequest.getOrigin()) ||
-                (scimUserFromDb.getOrigin().equals(OriginKeys.UAA) && Strings.isEmpty(scimUserFromRequest.getOrigin()));
+                (scimUserFromDb.getOrigin().equals(OriginKeys.UAA) && UaaStringUtils.isNullOrEmpty(scimUserFromRequest.getOrigin()));
     }
 
     private boolean phoneNumbersEquivalent(ScimUser scimUserFromRequest, ScimUser scimUserFromDb) {
-        Object firstPhoneNumberFromDb = scimUserFromDb.getPhoneNumbers() == null ? null : (scimUserFromDb.getPhoneNumbers().isEmpty() ? null : scimUserFromDb.getPhoneNumbers().get(0));
-        Object firstPhoneNumberFromRequest = scimUserFromRequest.getPhoneNumbers() == null ? null : (scimUserFromRequest.getPhoneNumbers().isEmpty() ? null : scimUserFromRequest.getPhoneNumbers().get(0));
+        Object firstPhoneNumberFromDb = scimUserFromDb.getPhoneNumbers() == null ? null : (scimUserFromDb.getPhoneNumbers().isEmpty() ? null : scimUserFromDb.getPhoneNumbers().getFirst());
+        Object firstPhoneNumberFromRequest = scimUserFromRequest.getPhoneNumbers() == null ? null : (scimUserFromRequest.getPhoneNumbers().isEmpty() ? null : scimUserFromRequest.getPhoneNumbers().getFirst());
         return Objects.equals(firstPhoneNumberFromDb, firstPhoneNumberFromRequest);
     }
 
