@@ -1,4 +1,5 @@
-/*******************************************************************************
+/*
+ * *****************************************************************************
  *     Cloud Foundry
  *     Copyright (c) [2009-2015] Pivotal Software, Inc. All Rights Reserved.
  *
@@ -12,25 +13,20 @@
  *******************************************************************************/
 package org.cloudfoundry.identity.uaa.util;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.cloudfoundry.identity.uaa.oauth.client.ClientConstants;
+import org.cloudfoundry.identity.uaa.oauth.provider.ClientDetails;
 import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
-import org.springframework.security.oauth2.provider.ClientDetails;
 import org.springframework.util.StringUtils;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
-import static java.util.Collections.EMPTY_LIST;
+import static java.util.Collections.emptyList;
 import static org.cloudfoundry.identity.uaa.constants.OriginKeys.UAA;
 
 public class DomainFilter {
-
-    private static Logger logger = LoggerFactory.getLogger(DomainFilter.class);
 
     public static List<IdentityProvider> filter(List<IdentityProvider> activeProviders, ClientDetails client, String email) {
         return filter(activeProviders, client, email, true);
@@ -38,48 +34,47 @@ public class DomainFilter {
 
     public static List<IdentityProvider> filter(List<IdentityProvider> activeProviders, ClientDetails client, String email, boolean useUaaFallback) {
         if (!StringUtils.hasText(email)) {
-            return EMPTY_LIST;
+            return emptyList();
         }
 
-        if (activeProviders!=null && activeProviders.size()>0) {
+        if (activeProviders != null && !activeProviders.isEmpty()) {
             //filter client providers
             List<String> clientFilter = getProvidersForClient(client);
-            if (clientFilter!=null) {
-                activeProviders =
-                    activeProviders.stream().filter(
-                        p -> clientFilter.contains(p.getOriginKey())
-                    ).collect(Collectors.toList());
+            if (clientFilter != null) {
+                activeProviders = activeProviders.stream()
+                        .filter(p -> clientFilter.contains(p.getOriginKey()))
+                        .toList();
             }
             //filter for email domain
-            if (email!=null && email.contains("@")) {
+            if (email.contains("@")) {
                 final String domain = email.substring(email.indexOf('@') + 1);
-                List<IdentityProvider> explicitlyMatched =
-                    activeProviders.stream().filter(
-                        p -> doesEmailDomainMatchProvider(p, domain, true)
-                    ).collect(Collectors.toList());
-                if (explicitlyMatched.size()>0 || !useUaaFallback) {
+                List<IdentityProvider> explicitlyMatched = activeProviders.stream()
+                        .filter(p -> doesEmailDomainMatchProvider(p, domain, true))
+                        .toList();
+                if (!explicitlyMatched.isEmpty() || !useUaaFallback) {
                     return explicitlyMatched;
                 }
 
-                activeProviders =
-                    activeProviders.stream().filter(
-                        p -> doesEmailDomainMatchProvider(p, domain, false)
-                    ).collect(Collectors.toList());
+                activeProviders = activeProviders.stream()
+                        .filter(p -> doesEmailDomainMatchProvider(p, domain, false))
+                        .toList();
             }
         }
-        return activeProviders != null ? activeProviders : EMPTY_LIST;
+        return activeProviders != null ? activeProviders : emptyList();
     }
 
     public static List<IdentityProvider> getIdpsForEmailDomain(List<IdentityProvider> activeProviders, String email) {
         if (!StringUtils.hasText(email) || !email.contains("@")) {
-            return EMPTY_LIST;
+            return emptyList();
         }
         final String domain = email.substring(email.indexOf('@') + 1);
-        return activeProviders.stream().filter(provider -> doesEmailDomainMatchProvider(provider, domain, true)).collect(Collectors.toList());
+        return activeProviders.stream()
+                .filter(provider -> doesEmailDomainMatchProvider(provider, domain, true))
+                .toList();
     }
 
     protected static List<String> getProvidersForClient(ClientDetails client) {
-        if (client==null) {
+        if (client == null) {
             return null;
         } else {
             return (List<String>) client.getAdditionalInformation().get(ClientConstants.ALLOWED_PROVIDERS);
@@ -87,7 +82,7 @@ public class DomainFilter {
     }
 
     protected static List<String> getEmailDomain(IdentityProvider provider) {
-        if (provider.getConfig()!=null) {
+        if (provider.getConfig() != null) {
             return provider.getConfig().getEmailDomain();
         }
         return null;
@@ -104,7 +99,7 @@ public class DomainFilter {
             }
         }
 
-        if (wildcardList==null) {
+        if (wildcardList == null) {
             return false;
         } else {
             Set<Pattern> patterns = UaaStringUtils.constructWildcards(wildcardList);
