@@ -5,62 +5,57 @@ import org.cloudfoundry.identity.uaa.authentication.ProviderConfigurationExcepti
 import org.cloudfoundry.identity.uaa.authentication.UaaAuthenticationDetails;
 import org.cloudfoundry.identity.uaa.authentication.UaaLoginHint;
 import org.cloudfoundry.identity.uaa.authentication.event.IdentityProviderAuthenticationFailureEvent;
+import org.cloudfoundry.identity.uaa.client.UaaClient;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
-import org.cloudfoundry.identity.uaa.impl.config.RestTemplateConfig;
-import org.cloudfoundry.identity.uaa.login.Prompt;
+import org.cloudfoundry.identity.uaa.extensions.PollutionPreventionExtension;
 import org.cloudfoundry.identity.uaa.oauth.client.ClientConstants;
 import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
 import org.cloudfoundry.identity.uaa.provider.IdentityProviderProvisioning;
 import org.cloudfoundry.identity.uaa.provider.OIDCIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.provider.oauth.ExternalOAuthAuthenticationManager;
 import org.cloudfoundry.identity.uaa.provider.oauth.ExternalOAuthCodeToken;
-import org.cloudfoundry.identity.uaa.provider.oauth.ExternalOAuthProviderConfigurator;
-import org.cloudfoundry.identity.uaa.extensions.PollutionPreventionExtension;
-import org.cloudfoundry.identity.uaa.zone.MultitenantClientServices;
 import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.ArgumentCaptor;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.oauth2.provider.ClientDetails;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 
-import java.net.URL;
-import java.util.ArrayList;
+import java.net.MalformedURLException;
+import java.net.URI;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import static org.hamcrest.Matchers.startsWith;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.fail;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
+import static org.cloudfoundry.identity.uaa.oauth.token.TokenConstants.GRANT_TYPE_PASSWORD;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.anyString;
+import static org.mockito.Mockito.atLeast;
+import static org.mockito.Mockito.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static org.springframework.http.MediaType.APPLICATION_JSON;
 
 @ExtendWith(PollutionPreventionExtension.class)
 class PasswordGrantAuthenticationManagerTest {
@@ -69,58 +64,58 @@ class PasswordGrantAuthenticationManagerTest {
 
     private DynamicZoneAwareAuthenticationManager zoneAwareAuthzAuthenticationManager;
     private IdentityProviderProvisioning identityProviderProvisioning;
-    private RestTemplateConfig restTemplateConfig;
     private ExternalOAuthAuthenticationManager externalOAuthAuthenticationManager;
-    private MultitenantClientServices clientDetailsService;
-    private ExternalOAuthProviderConfigurator externalOAuthProviderConfigurator;
     private ApplicationEventPublisher eventPublisher;
 
     private IdentityProvider idp;
     private IdentityProvider uaaProvider;
     private IdentityProvider ldapProvider;
     private OIDCIdentityProviderDefinition idpConfig;
-    private ClientDetails clientDetails;
+    private UaaClient uaaClient;
 
     @BeforeEach
     void setUp() throws Exception {
         zoneAwareAuthzAuthenticationManager = mock(DynamicZoneAwareAuthenticationManager.class);
         identityProviderProvisioning = mock(IdentityProviderProvisioning.class);
-        restTemplateConfig = mock(RestTemplateConfig.class);
         externalOAuthAuthenticationManager = mock(ExternalOAuthAuthenticationManager.class);
-        clientDetailsService = mock(MultitenantClientServices.class);
-        externalOAuthProviderConfigurator = mock(ExternalOAuthProviderConfigurator.class);
 
         idp = mock(IdentityProvider.class);
         idpConfig = mock(OIDCIdentityProviderDefinition.class);
         when(idp.getOriginKey()).thenReturn("oidcprovider");
         when(idp.getConfig()).thenReturn(idpConfig);
         when(idp.getType()).thenReturn(OriginKeys.OIDC10);
+        when(idp.isActive()).thenReturn(true);
         when(idpConfig.isPasswordGrantEnabled()).thenReturn(true);
-        when(idpConfig.getTokenUrl()).thenReturn(new URL("http://localhost:8080/uaa/oauth/token"));
+        when(idpConfig.getTokenUrl()).thenReturn(URI.create("http://localhost:8080/uaa/oauth/token").toURL());
         when(idpConfig.getRelyingPartyId()).thenReturn("identity");
         when(idpConfig.getRelyingPartySecret()).thenReturn("identitysecret");
 
         uaaProvider = mock(IdentityProvider.class);
         when(uaaProvider.getType()).thenReturn(OriginKeys.UAA);
         when(uaaProvider.getOriginKey()).thenReturn(OriginKeys.UAA);
+        when(uaaProvider.isActive()).thenReturn(true);
         ldapProvider = mock(IdentityProvider.class);
         when(ldapProvider.getType()).thenReturn(OriginKeys.LDAP);
         when(ldapProvider.getOriginKey()).thenReturn(OriginKeys.LDAP);
+        when(ldapProvider.isActive()).thenReturn(true);
 
         when(identityProviderProvisioning.retrieveActive("uaa")).thenReturn(Arrays.asList(idp, uaaProvider, ldapProvider));
-        when(externalOAuthProviderConfigurator.retrieveByOrigin("oidcprovider", "uaa")).thenReturn(idp);
+        when(identityProviderProvisioning.retrieveByOrigin("oidcprovider", "uaa")).thenReturn(idp);
+        when(identityProviderProvisioning.retrieveByOrigin("uaa", "uaa")).thenReturn(uaaProvider);
+        when(identityProviderProvisioning.retrieveByOrigin("ldap", "uaa")).thenReturn(ldapProvider);
 
         Authentication clientAuth = mock(Authentication.class);
         when(clientAuth.getName()).thenReturn("clientid");
         SecurityContextHolder.getContext().setAuthentication(clientAuth);
-        clientDetails = mock(ClientDetails.class);
-        when(clientDetails.getAdditionalInformation()).thenReturn(mock(Map.class));
-        when(clientDetailsService.loadClientByClientId("clientid", "uaa")).thenReturn(clientDetails);
+        uaaClient = mock(UaaClient.class);
+        when(clientAuth.getPrincipal()).thenReturn(uaaClient);
+        when(uaaClient.getAdditionalInformation()).thenReturn(mock(Map.class));
 
-        instance = new PasswordGrantAuthenticationManager(zoneAwareAuthzAuthenticationManager, identityProviderProvisioning, restTemplateConfig, externalOAuthAuthenticationManager, clientDetailsService, externalOAuthProviderConfigurator);
+        instance = new PasswordGrantAuthenticationManager(zoneAwareAuthzAuthenticationManager, identityProviderProvisioning, externalOAuthAuthenticationManager);
         IdentityZoneHolder.clear();
         eventPublisher = mock(ApplicationEventPublisher.class);
         instance.setApplicationEventPublisher(eventPublisher);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(null);
     }
 
     @AfterEach
@@ -130,20 +125,24 @@ class PasswordGrantAuthenticationManagerTest {
     }
 
     @Test
-    void testPasswordGrantNoLoginHint() {
+    void passwordGrantNoLoginHint() {
         Authentication auth = mock(Authentication.class);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(Arrays.asList("uaa", "ldap"));
 
         instance.authenticate(auth);
 
         verify(zoneAwareAuthzAuthenticationManager, times(1)).authenticate(auth);
+        verify(identityProviderProvisioning, times(0)).retrieveByOrigin(any(), any());
+        verify(identityProviderProvisioning, times(1)).retrieveActive(any());
     }
 
     @Test
-    void testUaaPasswordGrant() {
+    void uaaPasswordGrant() {
         UaaLoginHint loginHint = mock(UaaLoginHint.class);
         when(loginHint.getOrigin()).thenReturn("uaa");
         Authentication auth = mock(Authentication.class);
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(Arrays.asList("uaa", "ldap"));
 
         instance.authenticate(auth);
 
@@ -151,108 +150,39 @@ class PasswordGrantAuthenticationManagerTest {
     }
 
     @Test
-    void testOIDCPasswordGrant() {
+    void oidcPasswordGrant() {
         UaaLoginHint loginHint = mock(UaaLoginHint.class);
         when(loginHint.getOrigin()).thenReturn("oidcprovider");
         Authentication auth = mock(Authentication.class);
-        when(auth.getPrincipal()).thenReturn("marissa");
-        when(auth.getCredentials()).thenReturn("koala");
-        when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
-
-        RestTemplate rt = mock(RestTemplate.class);
-        when(restTemplateConfig.nonTrustingRestTemplate()).thenReturn(rt);
-
-        ResponseEntity<Map<String,String>> response = mock(ResponseEntity.class);
-        when(response.hasBody()).thenReturn(true);
-        when(response.getBody()).thenReturn(Collections.singletonMap("id_token", "mytoken"));
-        when(rt.exchange(anyString(),any(HttpMethod.class),any(HttpEntity.class),any(ParameterizedTypeReference.class))).thenReturn(response);
-
-        instance.authenticate(auth);
-
-        ArgumentCaptor<HttpEntity> httpEntityArgumentCaptor = ArgumentCaptor.forClass(HttpEntity.class);
-        verify(rt, times(1)).exchange(eq("http://localhost:8080/uaa/oauth/token"), eq(HttpMethod.POST), httpEntityArgumentCaptor.capture(),eq(new ParameterizedTypeReference<Map<String,String>>(){}));
-        ArgumentCaptor<ExternalOAuthCodeToken> tokenArgumentCaptor = ArgumentCaptor.forClass(ExternalOAuthCodeToken.class);
-        verify(externalOAuthAuthenticationManager, times(1)).authenticate(tokenArgumentCaptor.capture());
-        verify(zoneAwareAuthzAuthenticationManager, times(0)).authenticate(any());
-
-        HttpEntity httpEntity = httpEntityArgumentCaptor.getValue();
-        assertNotNull(httpEntity);
-        assertTrue(httpEntity.hasBody());
-        assertTrue(httpEntity.getBody() instanceof MultiValueMap);
-        MultiValueMap<String,String> body = (MultiValueMap<String, String>)httpEntity.getBody();
-        assertEquals(4, body.size());
-        assertEquals(Collections.singletonList("password"), body.get("grant_type"));
-        assertEquals(Collections.singletonList("id_token"), body.get("response_type"));
-        assertEquals(Collections.singletonList("marissa"), body.get("username"));
-        assertEquals(Collections.singletonList("koala"), body.get("password"));
-
-        HttpHeaders headers = httpEntity.getHeaders();
-        assertEquals(Collections.singletonList(APPLICATION_JSON), headers.getAccept());
-        assertEquals(MediaType.APPLICATION_FORM_URLENCODED, headers.getContentType());
-        assertNotNull(headers.get("Authorization"));
-        assertEquals(1, headers.get("Authorization").size());
-        assertThat(headers.get("Authorization").get(0), startsWith("Basic "));
-        assertNull(headers.get("X-Forwarded-For"));
-
-        assertEquals("mytoken", tokenArgumentCaptor.getValue().getIdToken());
-    }
-
-    @Test
-    void testOIDCPasswordGrantWithForwardHeader() {
-        UaaLoginHint loginHint = mock(UaaLoginHint.class);
-        when(loginHint.getOrigin()).thenReturn("oidcprovider");
-        Authentication auth = mock(Authentication.class);
-        when(auth.getPrincipal()).thenReturn("marissa");
-        when(auth.getCredentials()).thenReturn("koala");
         UaaAuthenticationDetails details = mock(UaaAuthenticationDetails.class);
-        when(details.getOrigin()).thenReturn("203.0.113.1");
         when(auth.getDetails()).thenReturn(details);
+        when(auth.getPrincipal()).thenReturn("marissa");
+        when(auth.getCredentials()).thenReturn("koala");
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(null);
+        when(externalOAuthAuthenticationManager.oauthTokenRequest(eq(details), eq(idp), eq(GRANT_TYPE_PASSWORD), any(MultiValueMap.class))).thenReturn("mytoken");
 
         RestTemplate rt = mock(RestTemplate.class);
-        when(restTemplateConfig.nonTrustingRestTemplate()).thenReturn(rt);
 
-        ResponseEntity<Map<String,String>> response = mock(ResponseEntity.class);
+        ResponseEntity<Map<String, String>> response = mock(ResponseEntity.class);
         when(response.hasBody()).thenReturn(true);
         when(response.getBody()).thenReturn(Collections.singletonMap("id_token", "mytoken"));
-        when(rt.exchange(anyString(),any(HttpMethod.class),any(HttpEntity.class),any(ParameterizedTypeReference.class))).thenReturn(response);
-
-        when(idpConfig.isSetForwardHeader()).thenReturn(true);
+        when(rt.exchange(anyString(), any(HttpMethod.class), any(HttpEntity.class), any(ParameterizedTypeReference.class))).thenReturn(response);
 
         instance.authenticate(auth);
 
-        ArgumentCaptor<HttpEntity> httpEntityArgumentCaptor = ArgumentCaptor.forClass(HttpEntity.class);
-        verify(rt, times(1)).exchange(eq("http://localhost:8080/uaa/oauth/token"), eq(HttpMethod.POST), httpEntityArgumentCaptor.capture(),eq(new ParameterizedTypeReference<Map<String,String>>(){}));
         ArgumentCaptor<ExternalOAuthCodeToken> tokenArgumentCaptor = ArgumentCaptor.forClass(ExternalOAuthCodeToken.class);
         verify(externalOAuthAuthenticationManager, times(1)).authenticate(tokenArgumentCaptor.capture());
+        verify(externalOAuthAuthenticationManager, times(1)).oauthTokenRequest(eq(details), eq(idp), eq(GRANT_TYPE_PASSWORD), any(MultiValueMap.class));
         verify(zoneAwareAuthzAuthenticationManager, times(0)).authenticate(any());
+        verify(identityProviderProvisioning, times(1)).retrieveByOrigin(any(), any());
+        verify(identityProviderProvisioning, times(0)).retrieveActive(any());
 
-        HttpEntity httpEntity = httpEntityArgumentCaptor.getValue();
-        assertNotNull(httpEntity);
-        assertTrue(httpEntity.hasBody());
-        assertTrue(httpEntity.getBody() instanceof MultiValueMap);
-        MultiValueMap<String,String> body = (MultiValueMap<String, String>)httpEntity.getBody();
-        assertEquals(4, body.size());
-        assertEquals(Collections.singletonList("password"), body.get("grant_type"));
-        assertEquals(Collections.singletonList("id_token"), body.get("response_type"));
-        assertEquals(Collections.singletonList("marissa"), body.get("username"));
-        assertEquals(Collections.singletonList("koala"), body.get("password"));
-
-        HttpHeaders headers = httpEntity.getHeaders();
-        assertEquals(Collections.singletonList(APPLICATION_JSON), headers.getAccept());
-        assertEquals(MediaType.APPLICATION_FORM_URLENCODED, headers.getContentType());
-        assertNotNull(headers.get("Authorization"));
-        assertEquals(1, headers.get("Authorization").size());
-        assertThat(headers.get("Authorization").get(0), startsWith("Basic "));
-        assertNotNull(headers.get("X-Forwarded-For"));
-        assertEquals(1, headers.get("X-Forwarded-For").size());
-        assertEquals("203.0.113.1", headers.get("X-Forwarded-For").get(0));
-
-        assertEquals("mytoken", tokenArgumentCaptor.getValue().getIdToken());
+        assertThat(tokenArgumentCaptor.getValue().getIdToken()).isEqualTo("mytoken");
     }
 
     @Test
-    void testOIDCPasswordGrantInvalidLogin() {
+    void oidcPasswordGrantInvalidLogin() {
         UaaLoginHint loginHint = mock(UaaLoginHint.class);
         when(loginHint.getOrigin()).thenReturn("oidcprovider");
         Authentication auth = mock(Authentication.class);
@@ -261,13 +191,13 @@ class PasswordGrantAuthenticationManagerTest {
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
 
         RestTemplate rt = mock(RestTemplate.class);
-        when(restTemplateConfig.nonTrustingRestTemplate()).thenReturn(rt);
 
-        ResponseEntity<Map<String,String>> response = mock(ResponseEntity.class);
+        ResponseEntity<Map<String, String>> response = mock(ResponseEntity.class);
         when(response.hasBody()).thenReturn(true);
         when(response.getBody()).thenReturn(Collections.singletonMap("id_token", "mytoken"));
         HttpClientErrorException exception = mock(HttpClientErrorException.class);
-        when(rt.exchange(anyString(),any(HttpMethod.class),any(HttpEntity.class),any(ParameterizedTypeReference.class))).thenThrow(exception);
+        when(rt.exchange(anyString(), any(HttpMethod.class), any(HttpEntity.class), any(ParameterizedTypeReference.class))).thenThrow(exception);
+        when(externalOAuthAuthenticationManager.oauthTokenRequest(eq(null), eq(idp), eq(GRANT_TYPE_PASSWORD), any(MultiValueMap.class))).thenThrow(exception);
 
         try {
             instance.authenticate(auth);
@@ -278,27 +208,45 @@ class PasswordGrantAuthenticationManagerTest {
         ArgumentCaptor<AbstractUaaEvent> eventArgumentCaptor = ArgumentCaptor.forClass(AbstractUaaEvent.class);
         verify(eventPublisher, times(1)).publishEvent(eventArgumentCaptor.capture());
 
-        assertEquals(1, eventArgumentCaptor.getAllValues().size());
-        assertTrue(eventArgumentCaptor.getValue() instanceof IdentityProviderAuthenticationFailureEvent);
+        assertThat(eventArgumentCaptor.getAllValues()).hasSize(1);
+        assertThat(eventArgumentCaptor.getValue()).isInstanceOf(IdentityProviderAuthenticationFailureEvent.class);
     }
 
     @Test
-    void testOIDCPasswordGrantProviderNotFound() {
+    void oidcPasswordGrantProviderNotFound() {
         UaaLoginHint loginHint = mock(UaaLoginHint.class);
         when(loginHint.getOrigin()).thenReturn("oidcprovider2");
         Authentication auth = mock(Authentication.class);
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(null);
 
         try {
             instance.authenticate(auth);
-            fail();
+            fail("");
         } catch (ProviderConfigurationException e) {
-            assertEquals("The origin provided in the login_hint does not match an active Identity Provider, that supports password grant.", e.getMessage());
+            assertThat(e.getMessage()).isEqualTo("The origin provided in the login_hint does not match an active Identity Provider, that supports password grant.");
         }
     }
 
     @Test
-    void testOIDCPasswordGrantProviderTypeNotOidc() {
+    void oidcPasswordGrantProviderNotFoundInDB() {
+        UaaLoginHint loginHint = mock(UaaLoginHint.class);
+        when(loginHint.getOrigin()).thenReturn("oidcprovider2");
+        Authentication auth = mock(Authentication.class);
+        when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
+        when(identityProviderProvisioning.retrieveByOrigin(any(), any())).thenThrow(new EmptyResultDataAccessException(1));
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(null);
+
+        try {
+            instance.authenticate(auth);
+            fail("");
+        } catch (ProviderConfigurationException e) {
+            assertThat(e.getMessage()).isEqualTo("The origin provided in the login_hint does not match an active Identity Provider, that supports password grant.");
+        }
+    }
+
+    @Test
+    void oidcPasswordGrantProviderTypeNotOidc() {
         IdentityProvider localIdp = mock(IdentityProvider.class);
         OIDCIdentityProviderDefinition idpConfig = mock(OIDCIdentityProviderDefinition.class);
         when(localIdp.getOriginKey()).thenReturn("oidcprovider");
@@ -307,6 +255,7 @@ class PasswordGrantAuthenticationManagerTest {
         when(localIdp.getType()).thenReturn(OriginKeys.SAML);
 
         when(identityProviderProvisioning.retrieveActive("uaa")).thenReturn(Arrays.asList(uaaProvider, ldapProvider, localIdp));
+        when(identityProviderProvisioning.retrieveByOrigin("oidcprovider", "uaa")).thenReturn(localIdp);
         UaaLoginHint loginHint = mock(UaaLoginHint.class);
         when(loginHint.getOrigin()).thenReturn("oidcprovider");
         Authentication auth = mock(Authentication.class);
@@ -314,22 +263,24 @@ class PasswordGrantAuthenticationManagerTest {
 
         try {
             instance.authenticate(auth);
-            fail();
+            fail("");
         } catch (ProviderConfigurationException e) {
-            assertEquals("The origin provided in the login_hint does not match an active Identity Provider, that supports password grant.", e.getMessage());
+            assertThat(e.getMessage()).isEqualTo("The origin provided in the login_hint does not match an active Identity Provider, that supports password grant.");
         }
     }
 
     @Test
-    void testOIDCPasswordGrantProviderDoesNotSupportPassword() {
+    void oidcPasswordGrantProviderDoesNotSupportPassword() {
         IdentityProvider localIdp = mock(IdentityProvider.class);
         OIDCIdentityProviderDefinition idpConfig = mock(OIDCIdentityProviderDefinition.class);
         when(localIdp.getOriginKey()).thenReturn("oidcprovider");
         when(localIdp.getConfig()).thenReturn(idpConfig);
         when(localIdp.getType()).thenReturn(OriginKeys.OIDC10);
+        when(localIdp.isActive()).thenReturn(true);
         when(idpConfig.isPasswordGrantEnabled()).thenReturn(false);
 
         when(identityProviderProvisioning.retrieveActive("uaa")).thenReturn(Arrays.asList(uaaProvider, ldapProvider, localIdp));
+        when(identityProviderProvisioning.retrieveByOrigin("oidcprovider", "uaa")).thenReturn(localIdp);
         UaaLoginHint loginHint = mock(UaaLoginHint.class);
         when(loginHint.getOrigin()).thenReturn("oidcprovider");
         Authentication auth = mock(Authentication.class);
@@ -337,53 +288,30 @@ class PasswordGrantAuthenticationManagerTest {
 
         try {
             instance.authenticate(auth);
-            fail();
+            fail("");
         } catch (ProviderConfigurationException e) {
-            assertEquals("The origin provided in the login_hint does not match an active Identity Provider, that supports password grant.", e.getMessage());
+            assertThat(e.getMessage()).isEqualTo("The origin provided in the login_hint does not match an active Identity Provider, that supports password grant.");
         }
     }
 
     @Test
-    void testOIDCPasswordGrantProviderNoRelyingPartyCredentials() {
-        IdentityProvider localIdp = mock(IdentityProvider.class);
-        OIDCIdentityProviderDefinition idpConfig = mock(OIDCIdentityProviderDefinition.class);
-        when(localIdp.getOriginKey()).thenReturn("oidcprovider");
-        when(localIdp.getConfig()).thenReturn(idpConfig);
-        when(localIdp.getType()).thenReturn(OriginKeys.OIDC10);
-        when(idpConfig.isPasswordGrantEnabled()).thenReturn(true);
-
-        when(identityProviderProvisioning.retrieveActive("uaa")).thenReturn(Arrays.asList(uaaProvider, ldapProvider, localIdp));
-        when(externalOAuthProviderConfigurator.retrieveByOrigin("oidcprovider", "uaa")).thenReturn(localIdp);
+    void oidcPasswordGrantNoUserCredentials() throws MalformedURLException {
         UaaLoginHint loginHint = mock(UaaLoginHint.class);
         when(loginHint.getOrigin()).thenReturn("oidcprovider");
         Authentication auth = mock(Authentication.class);
+        when(idpConfig.getTokenUrl()).thenReturn(null).thenReturn(URI.create("http://localhost:8080/uaa/oauth/token").toURL());
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
 
         try {
             instance.authenticate(auth);
-            fail();
-        } catch (ProviderConfigurationException e) {
-            assertEquals("External OpenID Connect provider configuration is missing relyingPartyId or relyingPartySecret.", e.getMessage());
-        }
-    }
-
-    @Test
-    void testOIDCPasswordGrantNoUserCredentials() {
-        UaaLoginHint loginHint = mock(UaaLoginHint.class);
-        when(loginHint.getOrigin()).thenReturn("oidcprovider");
-        Authentication auth = mock(Authentication.class);
-        when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
-
-        try {
-            instance.authenticate(auth);
-            fail();
+            fail("");
         } catch (BadCredentialsException e) {
-            assertEquals("Request is missing username or password.", e.getMessage());
+            assertThat(e.getMessage()).isEqualTo("Request is missing username or password.");
         }
     }
 
     @Test
-    void testOIDCPasswordGrantNoBody() {
+    void oidcPasswordGrantNoBody() {
         UaaLoginHint loginHint = mock(UaaLoginHint.class);
         when(loginHint.getOrigin()).thenReturn("oidcprovider");
         Authentication auth = mock(Authentication.class);
@@ -392,22 +320,21 @@ class PasswordGrantAuthenticationManagerTest {
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
 
         RestTemplate rt = mock(RestTemplate.class);
-        when(restTemplateConfig.nonTrustingRestTemplate()).thenReturn(rt);
 
-        ResponseEntity<Map<String,String>> response = mock(ResponseEntity.class);
+        ResponseEntity<Map<String, String>> response = mock(ResponseEntity.class);
         when(response.hasBody()).thenReturn(false);
-        when(rt.exchange(anyString(),any(HttpMethod.class),any(HttpEntity.class),any(ParameterizedTypeReference.class))).thenReturn(response);
+        when(rt.exchange(anyString(), any(HttpMethod.class), any(HttpEntity.class), any(ParameterizedTypeReference.class))).thenReturn(response);
 
         try {
             instance.authenticate(auth);
-            fail();
+            fail("");
         } catch (BadCredentialsException e) {
-            assertEquals("Could not obtain id_token from external OpenID Connect provider.", e.getMessage());
+            assertThat(e.getMessage()).isEqualTo("Could not obtain id_token from external OpenID Connect provider.");
         }
     }
 
     @Test
-    void testOIDCPasswordGrantNoIdToken() {
+    void oidcPasswordGrantNoIdToken() {
         UaaLoginHint loginHint = mock(UaaLoginHint.class);
         when(loginHint.getOrigin()).thenReturn("oidcprovider");
         Authentication auth = mock(Authentication.class);
@@ -416,174 +343,114 @@ class PasswordGrantAuthenticationManagerTest {
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
 
         RestTemplate rt = mock(RestTemplate.class);
-        when(restTemplateConfig.nonTrustingRestTemplate()).thenReturn(rt);
 
-        ResponseEntity<Map<String,String>> response = mock(ResponseEntity.class);
+        ResponseEntity<Map<String, String>> response = mock(ResponseEntity.class);
         when(response.hasBody()).thenReturn(true);
         when(response.getBody()).thenReturn(Collections.emptyMap());
-        when(rt.exchange(anyString(),any(HttpMethod.class),any(HttpEntity.class),any(ParameterizedTypeReference.class))).thenReturn(response);
+        when(rt.exchange(anyString(), any(HttpMethod.class), any(HttpEntity.class), any(ParameterizedTypeReference.class))).thenReturn(response);
 
         try {
             instance.authenticate(auth);
-            fail();
+            fail("");
         } catch (BadCredentialsException e) {
-            assertEquals("Could not obtain id_token from external OpenID Connect provider.", e.getMessage());
+            assertThat(e.getMessage()).isEqualTo("Could not obtain id_token from external OpenID Connect provider.");
         }
     }
 
-    @Test
-    void testOIDCPasswordGrantWithPrompts() {
-        UaaLoginHint loginHint = mock(UaaLoginHint.class);
-        when(loginHint.getOrigin()).thenReturn("oidcprovider");
-        Authentication auth = mock(Authentication.class);
-        when(auth.getPrincipal()).thenReturn("marissa");
-        when(auth.getCredentials()).thenReturn("koala");
-        UaaAuthenticationDetails uaaAuthDetails = mock(UaaAuthenticationDetails.class);
-        Map<String, String[]> params = new HashMap<>();
-        params.put("mfacode", new String[]{"123456"});
-        params.put("multivalue", new String[]{"123456","654321"});
-        params.put("emptyvalue", new String[0]);
-        params.put("emptystring", new String[]{""});
-        params.put("junk", new String[]{"true"});
-        when(uaaAuthDetails.getParameterMap()).thenReturn(params);
-        when(auth.getDetails()).thenReturn(uaaAuthDetails);
-        when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
 
-        List<Prompt> prompts = new ArrayList<>();
-        prompts.add(new Prompt("username","text", "Email"));
-        prompts.add(new Prompt("password","password", "Password"));
-        prompts.add(new Prompt("passcode","password", "Temporary Authentication Code"));
-        prompts.add(new Prompt("mfacode","password", "TOTP-Code"));
-        prompts.add(new Prompt("multivalue","password", "TOTP-Code"));
-        prompts.add(new Prompt("emptyvalue","password", "TOTP-Code"));
-        prompts.add(new Prompt("emptystring","password", "TOTP-Code"));
-        prompts.add(new Prompt("missingvalue","password", "TOTP-Code"));
-        when(idpConfig.getPrompts()).thenReturn(prompts);
-
-        RestTemplate rt = mock(RestTemplate.class);
-        when(restTemplateConfig.nonTrustingRestTemplate()).thenReturn(rt);
-
-        ResponseEntity<Map<String,String>> response = mock(ResponseEntity.class);
-        when(response.hasBody()).thenReturn(true);
-        when(response.getBody()).thenReturn(Collections.singletonMap("id_token", "mytoken"));
-        when(rt.exchange(anyString(),any(HttpMethod.class),any(HttpEntity.class),any(ParameterizedTypeReference.class))).thenReturn(response);
-
-        instance.authenticate(auth);
-
-        ArgumentCaptor<HttpEntity> httpEntityArgumentCaptor = ArgumentCaptor.forClass(HttpEntity.class);
-        verify(rt, times(1)).exchange(eq("http://localhost:8080/uaa/oauth/token"), eq(HttpMethod.POST), httpEntityArgumentCaptor.capture(),eq(new ParameterizedTypeReference<Map<String,String>>(){}));
-        ArgumentCaptor<ExternalOAuthCodeToken> tokenArgumentCaptor = ArgumentCaptor.forClass(ExternalOAuthCodeToken.class);
-        verify(externalOAuthAuthenticationManager, times(1)).authenticate(tokenArgumentCaptor.capture());
-        verify(zoneAwareAuthzAuthenticationManager, times(0)).authenticate(any());
-
-        HttpEntity httpEntity = httpEntityArgumentCaptor.getValue();
-        assertNotNull(httpEntity);
-        assertTrue(httpEntity.hasBody());
-        assertTrue(httpEntity.getBody() instanceof MultiValueMap);
-        MultiValueMap<String,String> body = (MultiValueMap<String, String>)httpEntity.getBody();
-        assertEquals(5, body.size());
-        assertEquals(Collections.singletonList("password"), body.get("grant_type"));
-        assertEquals(Collections.singletonList("id_token"), body.get("response_type"));
-        assertEquals(Collections.singletonList("marissa"), body.get("username"));
-        assertEquals(Collections.singletonList("koala"), body.get("password"));
-        assertEquals(Collections.singletonList("123456"), body.get("mfacode"));
-        assertNull(body.get("passcode"));
-        assertNull(body.get("multivalue"));
-        assertNull(body.get("emptyvalue"));
-        assertNull(body.get("emptystring"));
-        assertNull(body.get("missingvalue"));
-
-        HttpHeaders headers = httpEntity.getHeaders();
-        assertEquals(Collections.singletonList(APPLICATION_JSON), headers.getAccept());
-        assertEquals(MediaType.APPLICATION_FORM_URLENCODED, headers.getContentType());
-        assertNotNull(headers.get("Authorization"));
-        assertEquals(1, headers.get("Authorization").size());
-        assertThat(headers.get("Authorization").get(0), startsWith("Basic "));
-
-        assertEquals("mytoken", tokenArgumentCaptor.getValue().getIdToken());
-    }
 
     @Test
-    void testUaaPasswordGrant_allowedProvidersOnlyUaa() {
+    void uaaPasswordGrantAllowedProvidersOnlyUaa() {
         Authentication auth = mock(Authentication.class);
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(null);
         Map<String, Object> additionalInformation = new HashMap<>();
         additionalInformation.put(ClientConstants.ALLOWED_PROVIDERS, Collections.singletonList("uaa"));
-        when(clientDetails.getAdditionalInformation()).thenReturn(additionalInformation);
+        when(uaaClient.getAdditionalInformation()).thenReturn(additionalInformation);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(Arrays.asList("uaa"));
 
         instance.authenticate(auth);
 
         verify(zoneAwareAuthzAuthenticationManager, times(1)).authenticate(auth);
         ArgumentCaptor<UaaLoginHint> captor = ArgumentCaptor.forClass(UaaLoginHint.class);
         verify(zoneAwareAuthzAuthenticationManager, times(1)).setLoginHint(eq(auth), captor.capture());
-        assertNotNull(captor.getValue());
-        assertEquals("uaa", captor.getValue().getOrigin());
+        assertThat(captor.getValue()).isNotNull();
+        assertThat(captor.getValue().getOrigin()).isEqualTo("uaa");
     }
 
     @Test
-    void testUaaPasswordGrant_allowedProvidersOnlyLdap() {
+    void uaaPasswordGrantAllowedProvidersOnlyLdap() {
         Authentication auth = mock(Authentication.class);
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(null);
         Map<String, Object> additionalInformation = new HashMap<>();
         additionalInformation.put(ClientConstants.ALLOWED_PROVIDERS, Collections.singletonList("ldap"));
-        when(clientDetails.getAdditionalInformation()).thenReturn(additionalInformation);
+        when(uaaClient.getAdditionalInformation()).thenReturn(additionalInformation);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(Arrays.asList("ldap"));
 
         instance.authenticate(auth);
 
         verify(zoneAwareAuthzAuthenticationManager, times(1)).authenticate(auth);
         ArgumentCaptor<UaaLoginHint> captor = ArgumentCaptor.forClass(UaaLoginHint.class);
         verify(zoneAwareAuthzAuthenticationManager, times(1)).setLoginHint(eq(auth), captor.capture());
-        assertNotNull(captor.getValue());
-        assertEquals("ldap", captor.getValue().getOrigin());
+        assertThat(captor.getValue()).isNotNull();
+        assertThat(captor.getValue().getOrigin()).isEqualTo("ldap");
     }
 
     @Test
-    void testUaaPasswordGrant_allowedProvidersUaaAndLdap() {
+    void uaaPasswordGrantAllowedProvidersUaaAndLdap() {
         Authentication auth = mock(Authentication.class);
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(null);
         Map<String, Object> additionalInformation = new HashMap<>();
-        additionalInformation.put(ClientConstants.ALLOWED_PROVIDERS, Arrays.asList("uaa","ldap"));
-        when(clientDetails.getAdditionalInformation()).thenReturn(additionalInformation);
+        additionalInformation.put(ClientConstants.ALLOWED_PROVIDERS, Arrays.asList("uaa", "ldap"));
+        when(uaaClient.getAdditionalInformation()).thenReturn(additionalInformation);
+        when(identityProviderProvisioning.retrieveActive("uaa")).thenReturn(Arrays.asList(uaaProvider, ldapProvider));
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(Arrays.asList("uaa", "ldap"));
 
         instance.authenticate(auth);
 
         verify(zoneAwareAuthzAuthenticationManager, times(1)).authenticate(auth);
-        ArgumentCaptor<UaaLoginHint> captor = ArgumentCaptor.forClass(UaaLoginHint.class);
         verify(zoneAwareAuthzAuthenticationManager, times(0)).setLoginHint(any(), any());
     }
 
     @Test
-    void testUaaPasswordGrant_defaultProviderUaa() {
+    void uaaPasswordGrantDefaultProviderUaa() {
         Authentication auth = mock(Authentication.class);
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(null);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(null);
 
         instance.authenticate(auth);
 
         verify(zoneAwareAuthzAuthenticationManager, times(1)).authenticate(auth);
-        ArgumentCaptor<UaaLoginHint> captor = ArgumentCaptor.forClass(UaaLoginHint.class);
         verify(zoneAwareAuthzAuthenticationManager, times(0)).setLoginHint(any(), any());
     }
 
-    @Test
-    void testPasswordGrant_NoLoginHintWithDefaultUaa() {
+    @ParameterizedTest
+    @ValueSource(strings = {OriginKeys.UAA, OriginKeys.LDAP})
+    void passwordGrantNoLoginHintWithDefaultUaaOrLdap(final String loginHintOrigin) {
         Authentication auth = mock(Authentication.class);
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(null);
         Map<String, Object> additionalInformation = new HashMap<>();
-        additionalInformation.put(ClientConstants.ALLOWED_PROVIDERS, Collections.singletonList("uaa"));
-        when(clientDetails.getAdditionalInformation()).thenReturn(additionalInformation);
-        IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("uaa");
+        additionalInformation.put(ClientConstants.ALLOWED_PROVIDERS, Collections.singletonList(loginHintOrigin));
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(Collections.singletonList(loginHintOrigin));
+        when(uaaClient.getAdditionalInformation()).thenReturn(additionalInformation);
+        IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider(loginHintOrigin);
 
         instance.authenticate(auth);
+
+        /* should not read all in the zone during lookup of possible providers
+         * - "uaa" or "ldap" is used, but not as login hint */
+        final String idzId = IdentityZoneHolder.get().getId();
+        verify(identityProviderProvisioning, times(0)).retrieveActive(idzId);
+        verify(identityProviderProvisioning, times(1)).retrieveByOrigin(loginHintOrigin, idzId);
 
         verify(zoneAwareAuthzAuthenticationManager, times(1)).authenticate(auth);
         ArgumentCaptor<UaaLoginHint> captor = ArgumentCaptor.forClass(UaaLoginHint.class);
         verify(zoneAwareAuthzAuthenticationManager, times(1)).setLoginHint(eq(auth), captor.capture());
-        assertNotNull(captor.getValue());
-        assertEquals("uaa", captor.getValue().getOrigin());
+        assertThat(captor.getValue()).isNotNull();
+        assertThat(captor.getValue().getOrigin()).isEqualTo(loginHintOrigin);
     }
 
     @Test
-    void testOIDCPasswordGrant_NoLoginHintWithDefaultOIDC() {
+    void oidcPasswordGrantNoLoginHintWithDefaultOIDC() {
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("oidcprovider");
         Authentication auth = mock(Authentication.class);
         when(auth.getPrincipal()).thenReturn("marissa");
@@ -591,44 +458,25 @@ class PasswordGrantAuthenticationManagerTest {
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(null);
 
         RestTemplate rt = mock(RestTemplate.class);
-        when(restTemplateConfig.nonTrustingRestTemplate()).thenReturn(rt);
 
-        ResponseEntity<Map<String,String>> response = mock(ResponseEntity.class);
+        ResponseEntity<Map<String, String>> response = mock(ResponseEntity.class);
         when(response.hasBody()).thenReturn(true);
         when(response.getBody()).thenReturn(Collections.singletonMap("id_token", "mytoken"));
-        when(rt.exchange(anyString(),any(HttpMethod.class),any(HttpEntity.class),any(ParameterizedTypeReference.class))).thenReturn(response);
+        when(rt.exchange(anyString(), any(HttpMethod.class), any(HttpEntity.class), any(ParameterizedTypeReference.class))).thenReturn(response);
+        when(externalOAuthAuthenticationManager.oauthTokenRequest(eq(null), eq(idp), eq(GRANT_TYPE_PASSWORD), any(MultiValueMap.class))).thenReturn("mytoken");
 
         instance.authenticate(auth);
 
-        ArgumentCaptor<HttpEntity> httpEntityArgumentCaptor = ArgumentCaptor.forClass(HttpEntity.class);
-        verify(rt, times(1)).exchange(eq("http://localhost:8080/uaa/oauth/token"), eq(HttpMethod.POST), httpEntityArgumentCaptor.capture(),eq(new ParameterizedTypeReference<Map<String,String>>(){}));
         ArgumentCaptor<ExternalOAuthCodeToken> tokenArgumentCaptor = ArgumentCaptor.forClass(ExternalOAuthCodeToken.class);
         verify(externalOAuthAuthenticationManager, times(1)).authenticate(tokenArgumentCaptor.capture());
+        verify(externalOAuthAuthenticationManager, times(1)).oauthTokenRequest(eq(null), eq(idp), eq(GRANT_TYPE_PASSWORD), any(MultiValueMap.class));
         verify(zoneAwareAuthzAuthenticationManager, times(0)).authenticate(any());
-
-        HttpEntity httpEntity = httpEntityArgumentCaptor.getValue();
-        assertNotNull(httpEntity);
-        assertTrue(httpEntity.hasBody());
-        assertTrue(httpEntity.getBody() instanceof MultiValueMap);
-        MultiValueMap<String,String> body = (MultiValueMap<String, String>)httpEntity.getBody();
-        assertEquals(4, body.size());
-        assertEquals(Collections.singletonList("password"), body.get("grant_type"));
-        assertEquals(Collections.singletonList("id_token"), body.get("response_type"));
-        assertEquals(Collections.singletonList("marissa"), body.get("username"));
-        assertEquals(Collections.singletonList("koala"), body.get("password"));
-
-        HttpHeaders headers = httpEntity.getHeaders();
-        assertEquals(Collections.singletonList(APPLICATION_JSON), headers.getAccept());
-        assertEquals(MediaType.APPLICATION_FORM_URLENCODED, headers.getContentType());
-        assertNotNull(headers.get("Authorization"));
-        assertEquals(1, headers.get("Authorization").size());
-        assertThat(headers.get("Authorization").get(0), startsWith("Basic "));
-
-        assertEquals("mytoken", tokenArgumentCaptor.getValue().getIdToken());
+        verify(identityProviderProvisioning, times(1)).retrieveByOrigin(any(), any());
+        verify(identityProviderProvisioning, times(0)).retrieveActive(any());
     }
 
     @Test
-    void testOIDCPasswordGrant_LoginHintOidcOverridesDefaultUaa() {
+    void oidcPasswordGrantLoginHintOidcOverridesDefaultUaa() {
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("uaa");
         UaaLoginHint loginHint = mock(UaaLoginHint.class);
         when(loginHint.getOrigin()).thenReturn("oidcprovider");
@@ -638,72 +486,81 @@ class PasswordGrantAuthenticationManagerTest {
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
 
         RestTemplate rt = mock(RestTemplate.class);
-        when(restTemplateConfig.nonTrustingRestTemplate()).thenReturn(rt);
 
-        ResponseEntity<Map<String,String>> response = mock(ResponseEntity.class);
+        ResponseEntity<Map<String, String>> response = mock(ResponseEntity.class);
         when(response.hasBody()).thenReturn(true);
         when(response.getBody()).thenReturn(Collections.singletonMap("id_token", "mytoken"));
-        when(rt.exchange(anyString(),any(HttpMethod.class),any(HttpEntity.class),any(ParameterizedTypeReference.class))).thenReturn(response);
+        when(rt.exchange(anyString(), any(HttpMethod.class), any(HttpEntity.class), any(ParameterizedTypeReference.class))).thenReturn(response);
+        when(externalOAuthAuthenticationManager.oauthTokenRequest(eq(null), eq(idp), eq(GRANT_TYPE_PASSWORD), any(MultiValueMap.class))).thenReturn("mytoken");
 
         instance.authenticate(auth);
 
-        verify(rt, times(1)).exchange(eq("http://localhost:8080/uaa/oauth/token"), eq(HttpMethod.POST), any(HttpEntity.class),eq(new ParameterizedTypeReference<Map<String,String>>(){}));
         verify(externalOAuthAuthenticationManager, times(1)).authenticate(any(ExternalOAuthCodeToken.class));
         verify(zoneAwareAuthzAuthenticationManager, times(0)).authenticate(any());
+        verify(identityProviderProvisioning, times(1)).retrieveByOrigin(any(), any());
+        verify(identityProviderProvisioning, times(0)).retrieveActive(any());
     }
 
-    @Test
-    void testOIDCPasswordGrant_LoginHintUaaOverridesDefaultOidc() {
+    @ParameterizedTest
+    @ValueSource(strings = {OriginKeys.UAA, OriginKeys.LDAP})
+    void oidcPasswordGrantLoginHintUaaOrLdapOverridesDefaultOidc(final String loginHintOrigin) {
         UaaLoginHint loginHint = mock(UaaLoginHint.class);
-        when(loginHint.getOrigin()).thenReturn("uaa");
+        when(loginHint.getOrigin()).thenReturn(loginHintOrigin);
         Authentication auth = mock(Authentication.class);
-        when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(null);
+        when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
         Map<String, Object> additionalInformation = new HashMap<>();
-        additionalInformation.put(ClientConstants.ALLOWED_PROVIDERS, Collections.singletonList("uaa"));
-        when(clientDetails.getAdditionalInformation()).thenReturn(additionalInformation);
+        additionalInformation.put(ClientConstants.ALLOWED_PROVIDERS, Collections.singletonList(loginHintOrigin));
+        when(uaaClient.getAdditionalInformation()).thenReturn(additionalInformation);
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("oidcprovider");
 
         instance.authenticate(auth);
 
+        // should read only "uaa" or "ldap" IdP during lookup of possible providers
+        final String idzId = IdentityZoneHolder.get().getId();
+        verify(identityProviderProvisioning, times(0)).retrieveActive(idzId);
+        verify(identityProviderProvisioning, times(1)).retrieveByOrigin(loginHintOrigin, idzId);
+
         verify(zoneAwareAuthzAuthenticationManager, times(1)).authenticate(auth);
         ArgumentCaptor<UaaLoginHint> captor = ArgumentCaptor.forClass(UaaLoginHint.class);
         verify(zoneAwareAuthzAuthenticationManager, times(1)).setLoginHint(eq(auth), captor.capture());
-        assertNotNull(captor.getValue());
-        assertEquals("uaa", captor.getValue().getOrigin());
+        assertThat(captor.getValue()).isNotNull();
+        assertThat(captor.getValue().getOrigin()).isEqualTo(loginHintOrigin);
     }
 
     @Test
-    void testOIDCPasswordGrant_NoLoginHintDefaultNotAllowedSingleIdpOIDC() {
+    void oidcPasswordGrantNoLoginHintDefaultNotAllowedSingleIdpOIDC() {
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("uaa");
         Authentication auth = mock(Authentication.class);
         when(auth.getPrincipal()).thenReturn("marissa");
         when(auth.getCredentials()).thenReturn("koala");
         Map<String, Object> additionalInfo = Collections.singletonMap(ClientConstants.ALLOWED_PROVIDERS, Collections.singletonList("oidcprovider"));
-        when(clientDetails.getAdditionalInformation()).thenReturn(additionalInfo);
+        when(uaaClient.getAdditionalInformation()).thenReturn(additionalInfo);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(Arrays.asList("oidcprovider"));
 
         RestTemplate rt = mock(RestTemplate.class);
-        when(restTemplateConfig.nonTrustingRestTemplate()).thenReturn(rt);
-
-        ResponseEntity<Map<String,String>> response = mock(ResponseEntity.class);
+        ResponseEntity<Map<String, String>> response = mock(ResponseEntity.class);
         when(response.hasBody()).thenReturn(true);
         when(response.getBody()).thenReturn(Collections.singletonMap("id_token", "mytoken"));
-        when(rt.exchange(anyString(),any(HttpMethod.class),any(HttpEntity.class),any(ParameterizedTypeReference.class))).thenReturn(response);
+        when(rt.exchange(anyString(), any(HttpMethod.class), any(HttpEntity.class), any(ParameterizedTypeReference.class))).thenReturn(response);
+        when(externalOAuthAuthenticationManager.oauthTokenRequest(eq(null), eq(idp), eq(GRANT_TYPE_PASSWORD), any(MultiValueMap.class))).thenReturn("mytoken");
 
         instance.authenticate(auth);
 
-        verify(rt, times(1)).exchange(eq("http://localhost:8080/uaa/oauth/token"), eq(HttpMethod.POST), any(HttpEntity.class),eq(new ParameterizedTypeReference<Map<String,String>>(){}));
         verify(externalOAuthAuthenticationManager, times(1)).authenticate(any(ExternalOAuthCodeToken.class));
         verify(zoneAwareAuthzAuthenticationManager, times(0)).authenticate(any());
+        verify(identityProviderProvisioning, atLeast(1)).retrieveByOrigin(any(), any());
+        verify(identityProviderProvisioning, times(1)).retrieveActive(any());
     }
 
     @Test
-    void testOIDCPasswordGrant_NoLoginHintDefaultNotAllowedSingleIdpDoesNotSupportPassword() {
+    void oidcPasswordGrantNoLoginHintDefaultNotAllowedSingleIdpDoesNotSupportPassword() {
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("uaa");
         Authentication auth = mock(Authentication.class);
         when(auth.getPrincipal()).thenReturn("marissa");
         when(auth.getCredentials()).thenReturn("koala");
         Map<String, Object> additionalInfo = Collections.singletonMap(ClientConstants.ALLOWED_PROVIDERS, Collections.singletonList("oidcprovider"));
-        when(clientDetails.getAdditionalInformation()).thenReturn(additionalInfo);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(Arrays.asList("oidcprovider"));
+        when(uaaClient.getAdditionalInformation()).thenReturn(additionalInfo);
         IdentityProvider localIdp = mock(IdentityProvider.class);
         OIDCIdentityProviderDefinition idpConfig = mock(OIDCIdentityProviderDefinition.class);
         when(localIdp.getOriginKey()).thenReturn("oidcprovider");
@@ -711,71 +568,77 @@ class PasswordGrantAuthenticationManagerTest {
         when(localIdp.getType()).thenReturn(OriginKeys.OIDC10);
         when(idpConfig.isPasswordGrantEnabled()).thenReturn(false);
         when(identityProviderProvisioning.retrieveActive("uaa")).thenReturn(Arrays.asList(uaaProvider, ldapProvider, localIdp));
-        when(externalOAuthProviderConfigurator.retrieveByOrigin("oidcprovider","uaa")).thenReturn(localIdp);
+        when(identityProviderProvisioning.retrieveByOrigin("oidcprovider", "uaa")).thenReturn(localIdp);
 
         try {
             instance.authenticate(auth);
-            fail();
+            fail("");
         } catch (BadCredentialsException e) {
-            assertEquals("The client is not authorized for any identity provider that supports password grant.", e.getMessage());
+            assertThat(e.getMessage()).isEqualTo("The client is not authorized for any identity provider that supports password grant.");
         }
     }
 
     @Test
-    void testOIDCPasswordGrant_NoLoginHintDefaultNotAllowedSingleIdpUAA() {
+    void oidcPasswordGrantNoLoginHintDefaultNotAllowedSingleIdpUAA() {
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("oidcprovider");
         Authentication auth = mock(Authentication.class);
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(null);
         Map<String, Object> additionalInfo = Collections.singletonMap(ClientConstants.ALLOWED_PROVIDERS, Collections.singletonList("uaa"));
-        when(clientDetails.getAdditionalInformation()).thenReturn(additionalInfo);
+        when(uaaClient.getAdditionalInformation()).thenReturn(additionalInfo);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(Arrays.asList("uaa"));
 
         instance.authenticate(auth);
 
         verify(zoneAwareAuthzAuthenticationManager, times(1)).authenticate(auth);
         ArgumentCaptor<UaaLoginHint> captor = ArgumentCaptor.forClass(UaaLoginHint.class);
         verify(zoneAwareAuthzAuthenticationManager, times(1)).setLoginHint(eq(auth), captor.capture());
-        assertNotNull(captor.getValue());
-        assertEquals("uaa", captor.getValue().getOrigin());
+        assertThat(captor.getValue()).isNotNull();
+        assertThat(captor.getValue().getOrigin()).isEqualTo("uaa");
     }
 
     @Test
-    void testOIDCPasswordGrant_NoLoginHintDefaultNotAllowedChainedAuth() {
+    void oidcPasswordGrantNoLoginHintDefaultNotAllowedChainedAuth() {
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("oidcprovider");
         Authentication auth = mock(Authentication.class);
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(null);
         Map<String, Object> additionalInfo = Collections.singletonMap(ClientConstants.ALLOWED_PROVIDERS, Arrays.asList("uaa", "ldap"));
-        when(clientDetails.getAdditionalInformation()).thenReturn(additionalInfo);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(Arrays.asList("uaa", "ldap"));
+        when(uaaClient.getAdditionalInformation()).thenReturn(additionalInfo);
 
         instance.authenticate(auth);
 
         verify(zoneAwareAuthzAuthenticationManager, times(1)).authenticate(auth);
         verify(zoneAwareAuthzAuthenticationManager, times(0)).setLoginHint(any(), any());
+        verify(identityProviderProvisioning, times(1)).retrieveByOrigin(any(), any());
+        verify(identityProviderProvisioning, times(1)).retrieveActive(any());
     }
 
     @Test
-    void testOIDCPasswordGrant_NoLoginHintDefaultNotAllowedMultipleIdpsWithUaa() {
+    void oidcPasswordGrantNoLoginHintDefaultNotAllowedMultipleIdpsWithUaa() {
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("oidcprovider2");
         Authentication auth = mock(Authentication.class);
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(null);
         Map<String, Object> additionalInfo = Collections.singletonMap(ClientConstants.ALLOWED_PROVIDERS, Arrays.asList("uaa", "oidcprovider"));
-        when(clientDetails.getAdditionalInformation()).thenReturn(additionalInfo);
+        when(uaaClient.getAdditionalInformation()).thenReturn(additionalInfo);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(Arrays.asList("uaa", "oidcprovider"));
 
         instance.authenticate(auth);
 
         verify(zoneAwareAuthzAuthenticationManager, times(1)).authenticate(auth);
         ArgumentCaptor<UaaLoginHint> captor = ArgumentCaptor.forClass(UaaLoginHint.class);
         verify(zoneAwareAuthzAuthenticationManager, times(1)).setLoginHint(eq(auth), captor.capture());
-        assertNotNull(captor.getValue());
-        assertEquals("uaa", captor.getValue().getOrigin());
+        assertThat(captor.getValue()).isNotNull();
+        assertThat(captor.getValue().getOrigin()).isEqualTo("uaa");
     }
 
     @Test
-    void testOIDCPasswordGrant_NoLoginHintDefaultNotAllowedMultipleIdpsOnlyOIDC() {
+    void oidcPasswordGrantNoLoginHintDefaultNotAllowedMultipleIdpsOnlyOIDC() {
         IdentityZoneHolder.get().getConfig().setDefaultIdentityProvider("oidcprovider3");
         Authentication auth = mock(Authentication.class);
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(null);
         Map<String, Object> additionalInfo = Collections.singletonMap(ClientConstants.ALLOWED_PROVIDERS, Arrays.asList("oidcprovider", "oidcprovider2"));
-        when(clientDetails.getAdditionalInformation()).thenReturn(additionalInfo);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(Arrays.asList("oidcprovider", "oidcprovider2"));
+        when(uaaClient.getAdditionalInformation()).thenReturn(additionalInfo);
 
         IdentityProvider localIdp = mock(IdentityProvider.class);
         OIDCIdentityProviderDefinition idpConfig = mock(OIDCIdentityProviderDefinition.class);
@@ -788,37 +651,59 @@ class PasswordGrantAuthenticationManagerTest {
 
         try {
             instance.authenticate(auth);
-            fail();
+            fail("");
         } catch (BadCredentialsException e) {
-            assertEquals("The client is authorized for multiple identity providers that support password grant and could not determine which identity provider to use.", e.getMessage());
+            assertThat(e.getMessage()).isEqualTo("The client is authorized for multiple identity providers that support password grant and could not determine which identity provider to use.");
         }
     }
 
     @Test
-    void testPasswordGrant_NoLoginHintNoDefaultTriesChainedAuth() {
+    void passwordGrantNoLoginHintNoDefaultTriesChainedAuth() {
         Authentication auth = mock(Authentication.class);
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(null);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(null);
 
         instance.authenticate(auth);
 
         verify(zoneAwareAuthzAuthenticationManager, times(1)).authenticate(auth);
         verify(zoneAwareAuthzAuthenticationManager, times(0)).setLoginHint(any(), any());
+        verify(identityProviderProvisioning, times(0)).retrieveByOrigin(any(), any());
+        verify(identityProviderProvisioning, times(1)).retrieveActive(any());
     }
 
     @Test
-    void testOIDCPasswordGrant_LoginHintProviderNotAllowed() {
+    void oidcPasswordGrantLoginHintProviderNotAllowed() {
         UaaLoginHint loginHint = mock(UaaLoginHint.class);
         when(loginHint.getOrigin()).thenReturn("oidcprovider2");
         Authentication auth = mock(Authentication.class);
         when(zoneAwareAuthzAuthenticationManager.extractLoginHint(auth)).thenReturn(loginHint);
-        Map<String, Object> additionalInfo = Collections.singletonMap(ClientConstants.ALLOWED_PROVIDERS, Arrays.asList("uaa", "oidcprovider"));
-        when(clientDetails.getAdditionalInformation()).thenReturn(additionalInfo);
+        when(externalOAuthAuthenticationManager.getAllowedProviders()).thenReturn(List.of("uaa", "oidcprovider"));
 
         try {
             instance.authenticate(auth);
-            fail();
+            fail("");
         } catch (ProviderConfigurationException e) {
-            assertEquals("Client is not authorized for specified user's identity provider.", e.getMessage());
+            assertThat(e.getMessage()).isEqualTo("Client is not authorized for specified user's identity provider.");
         }
+    }
+
+    @Test
+    void oidcPasswordGrant_credentialsMustNotBeNull() {
+        UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken("user", null);
+        OIDCIdentityProviderDefinition config = new OIDCIdentityProviderDefinition()
+                .setRelyingPartyId("client-id")
+                .setRelyingPartySecret("client-secret");
+        idp.setConfig(config);
+        assertThatExceptionOfType(BadCredentialsException.class).isThrownBy(() -> instance.oidcPasswordGrant(authentication, idp));
+    }
+
+    @Test
+    void oidcPasswordGrant_credentialsMustBeString() {
+        UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken("user", new Object());
+        OIDCIdentityProviderDefinition config = new OIDCIdentityProviderDefinition()
+                .setRelyingPartyId("client-id")
+                .setRelyingPartySecret("client-secret");
+        idp.setConfig(config);
+        assertThatExceptionOfType(BadCredentialsException.class).isThrownBy(() -> instance.oidcPasswordGrant(authentication, idp));
     }
 }
