@@ -20,8 +20,8 @@ import org.cloudfoundry.identity.uaa.provider.UaaIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.provider.oauth.OauthIDPWrapperFactoryBean;
 import org.cloudfoundry.identity.uaa.provider.saml.BootstrapSamlIdentityProviderData;
 import org.cloudfoundry.identity.uaa.test.TestUtils;
-import org.cloudfoundry.identity.uaa.util.PredicateMatcher;
 import org.cloudfoundry.identity.uaa.zone.IdentityZone;
+import org.cloudfoundry.identity.uaa.zone.beans.IdentityZoneManagerImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
@@ -34,7 +34,7 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.mock.env.MockEnvironment;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -43,25 +43,19 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
-import static java.util.stream.Collectors.toList;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.fail;
 import static org.cloudfoundry.identity.uaa.constants.OriginKeys.KEYSTONE;
 import static org.cloudfoundry.identity.uaa.constants.OriginKeys.LDAP;
 import static org.cloudfoundry.identity.uaa.constants.OriginKeys.OAUTH20;
 import static org.cloudfoundry.identity.uaa.constants.OriginKeys.OIDC10;
+import static org.cloudfoundry.identity.uaa.constants.OriginKeys.SAML;
 import static org.cloudfoundry.identity.uaa.provider.AbstractIdentityProviderDefinition.EMAIL_DOMAIN_ATTR;
 import static org.cloudfoundry.identity.uaa.provider.AbstractIdentityProviderDefinition.PROVIDER_DESCRIPTION;
 import static org.cloudfoundry.identity.uaa.provider.ExternalIdentityProviderDefinition.ATTRIBUTE_MAPPINGS;
 import static org.cloudfoundry.identity.uaa.provider.ExternalIdentityProviderDefinition.EXTERNAL_GROUPS_WHITELIST;
 import static org.cloudfoundry.identity.uaa.provider.ExternalIdentityProviderDefinition.STORE_CUSTOM_ATTRIBUTES_NAME;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.times;
@@ -78,8 +72,8 @@ class IdentityProviderBootstrapTest {
     private IdentityProviderProvisioning provisioning;
     private IdentityProviderBootstrap bootstrap;
     private MockEnvironment environment;
-    private AbstractExternalOAuthIdentityProviderDefinition oauthProvider;
-    private AbstractExternalOAuthIdentityProviderDefinition oidcProvider;
+    private RawExternalOAuthIdentityProviderDefinition oauthProvider;
+    private OIDCIdentityProviderDefinition oidcProvider;
     private HashMap<String, AbstractExternalOAuthIdentityProviderDefinition> oauthProviderConfig;
 
     @Autowired
@@ -96,9 +90,11 @@ class IdentityProviderBootstrapTest {
         samlIdentityProviderDefinition.setNameID("nameId");
         samlIdentityProviderDefinition.setShowSamlLink(true);
         samlIdentityProviderDefinition.setMetadataTrustCheck(true);
+        samlIdentityProviderDefinition.setIdpEntityId("alias");
 
         samlIdentityProviderDefinition1 = samlIdentityProviderDefinition.clone();
         samlIdentityProviderDefinition1.setIdpEntityAlias("alias2");
+        samlIdentityProviderDefinition1.setIdpEntityId("alias2");
         samlIdentityProviderDefinition1.setMetaDataLocation("http://location2");
 
         oauthProvider = new RawExternalOAuthIdentityProviderDefinition();
@@ -115,7 +111,7 @@ class IdentityProviderBootstrapTest {
         publisher = mock(ApplicationEventPublisher.class);
         provisioning = new JdbcIdentityProviderProvisioning(jdbcTemplate);
         environment = new MockEnvironment();
-        bootstrap = new IdentityProviderBootstrap(provisioning, environment);
+        bootstrap = new IdentityProviderBootstrap(provisioning, new IdentityZoneManagerImpl(), environment);
         bootstrap.setApplicationEventPublisher(publisher);
 
     }
@@ -133,18 +129,17 @@ class IdentityProviderBootstrapTest {
         bootstrap.afterPropertiesSet();
 
         IdentityProvider<LdapIdentityProviderDefinition> ldapProvider = provisioning.retrieveByOriginIgnoreActiveFlag(LDAP, IdentityZone.getUaaZoneId());
-        assertNotNull(ldapProvider);
-        assertNotNull(ldapProvider.getCreated());
-        assertNotNull(ldapProvider.getLastModified());
-        assertEquals(LDAP, ldapProvider.getType());
+        assertThat(ldapProvider).isNotNull();
+        assertThat(ldapProvider.getCreated()).isNotNull();
+        assertThat(ldapProvider.getLastModified()).isNotNull();
+        assertThat(ldapProvider.getType()).isEqualTo(LDAP);
         LdapIdentityProviderDefinition definition = ldapProvider.getConfig();
-        assertNotNull(definition);
-        assertFalse(definition.isConfigured());
+        assertThat(definition).isNotNull();
+        assertThat(definition.isConfigured()).isFalse();
     }
 
     @Test
     void ldapBootstrap() throws Exception {
-        final String idpDescription = "Test LDAP Provider Description";
         HashMap<String, Object> ldapConfig = getGenericLdapConfig();
 
         bootstrap.setLdapConfig(ldapConfig);
@@ -156,15 +151,15 @@ class IdentityProviderBootstrapTest {
 
     private static void validateGenericLdapProvider(
             IdentityProvider<LdapIdentityProviderDefinition> ldapProvider) {
-        assertNotNull(ldapProvider);
-        assertNotNull(ldapProvider.getCreated());
-        assertNotNull(ldapProvider.getLastModified());
-        assertEquals(LDAP, ldapProvider.getType());
-        assertThat(ldapProvider.getConfig().getEmailDomain(), containsInAnyOrder("test.domain"));
-        assertEquals(Collections.singletonList("value"), ldapProvider.getConfig().getExternalGroupsWhitelist());
-        assertEquals("first_name", ldapProvider.getConfig().getAttributeMappings().get("given_name"));
-        assertEquals("Test LDAP Provider Description", ldapProvider.getConfig().getProviderDescription());
-        assertFalse(ldapProvider.getConfig().isStoreCustomAttributes());
+        assertThat(ldapProvider).isNotNull();
+        assertThat(ldapProvider.getCreated()).isNotNull();
+        assertThat(ldapProvider.getLastModified()).isNotNull();
+        assertThat(ldapProvider.getType()).isEqualTo(LDAP);
+        assertThat(ldapProvider.getConfig().getEmailDomain()).contains("test.domain");
+        assertThat(ldapProvider.getConfig().getExternalGroupsWhitelist()).isEqualTo(Collections.singletonList("value"));
+        assertThat(ldapProvider.getConfig().getAttributeMappings()).containsEntry("given_name", "first_name");
+        assertThat(ldapProvider.getConfig().getProviderDescription()).isEqualTo("Test LDAP Provider Description");
+        assertThat(ldapProvider.getConfig().isStoreCustomAttributes()).isFalse();
     }
 
     private static HashMap<String, Object> getGenericLdapConfig() {
@@ -213,38 +208,38 @@ class IdentityProviderBootstrapTest {
         bootstrap.afterPropertiesSet();
 
         IdentityProvider ldapProvider = provisioning.retrieveByOriginIgnoreActiveFlag(LDAP, IdentityZone.getUaaZoneId());
-        assertNotNull(ldapProvider);
-        assertNotNull(ldapProvider.getCreated());
-        assertNotNull(ldapProvider.getLastModified());
-        assertEquals(LDAP, ldapProvider.getType());
-        assertTrue(ldapProvider.isActive());
+        assertThat(ldapProvider).isNotNull();
+        assertThat(ldapProvider.getCreated()).isNotNull();
+        assertThat(ldapProvider.getLastModified()).isNotNull();
+        assertThat(ldapProvider.getType()).isEqualTo(LDAP);
+        assertThat(ldapProvider.isActive()).isTrue();
 
         bootstrap.setLdapConfig(null);
         bootstrap.afterPropertiesSet();
         ldapProvider = provisioning.retrieveByOriginIgnoreActiveFlag(LDAP, IdentityZone.getUaaZoneId());
-        assertNotNull(ldapProvider);
-        assertNotNull(ldapProvider.getCreated());
-        assertNotNull(ldapProvider.getLastModified());
-        assertEquals(LDAP, ldapProvider.getType());
-        assertFalse(ldapProvider.isActive());
+        assertThat(ldapProvider).isNotNull();
+        assertThat(ldapProvider.getCreated()).isNotNull();
+        assertThat(ldapProvider.getLastModified()).isNotNull();
+        assertThat(ldapProvider.getType()).isEqualTo(LDAP);
+        assertThat(ldapProvider.isActive()).isFalse();
 
         bootstrap.setLdapConfig(ldapConfig);
         bootstrap.afterPropertiesSet();
         ldapProvider = provisioning.retrieveByOriginIgnoreActiveFlag(LDAP, IdentityZone.getUaaZoneId());
-        assertNotNull(ldapProvider);
-        assertNotNull(ldapProvider.getCreated());
-        assertNotNull(ldapProvider.getLastModified());
-        assertEquals(LDAP, ldapProvider.getType());
-        assertTrue(ldapProvider.isActive());
+        assertThat(ldapProvider).isNotNull();
+        assertThat(ldapProvider.getCreated()).isNotNull();
+        assertThat(ldapProvider.getLastModified()).isNotNull();
+        assertThat(ldapProvider.getType()).isEqualTo(LDAP);
+        assertThat(ldapProvider.isActive()).isTrue();
 
-        environment.setActiveProfiles("default");
+        environment.setActiveProfiles("hsqldb");
         bootstrap.afterPropertiesSet();
         ldapProvider = provisioning.retrieveByOriginIgnoreActiveFlag(LDAP, IdentityZone.getUaaZoneId());
-        assertNotNull(ldapProvider);
-        assertNotNull(ldapProvider.getCreated());
-        assertNotNull(ldapProvider.getLastModified());
-        assertEquals(LDAP, ldapProvider.getType());
-        assertFalse(ldapProvider.isActive());
+        assertThat(ldapProvider).isNotNull();
+        assertThat(ldapProvider.getCreated()).isNotNull();
+        assertThat(ldapProvider.getLastModified()).isNotNull();
+        assertThat(ldapProvider.getType()).isEqualTo(LDAP);
+        assertThat(ldapProvider.isActive()).isFalse();
     }
 
     @Test
@@ -253,13 +248,13 @@ class IdentityProviderBootstrapTest {
         bootstrap.afterPropertiesSet();
 
         IdentityProvider<KeystoneIdentityProviderDefinition> keystoneProvider = provisioning.retrieveByOriginIgnoreActiveFlag(KEYSTONE, IdentityZone.getUaaZoneId());
-        assertNotNull(keystoneProvider);
-        assertEquals(new KeystoneIdentityProviderDefinition(), keystoneProvider.getConfig());
-        assertNotNull(keystoneProvider.getCreated());
-        assertNotNull(keystoneProvider.getLastModified());
-        assertEquals(KEYSTONE, keystoneProvider.getType());
-        assertNotNull(keystoneProvider.getConfig());
-        assertNull(keystoneProvider.getConfig().getAdditionalConfiguration());
+        assertThat(keystoneProvider).isNotNull();
+        assertThat(keystoneProvider.getConfig()).isEqualTo(new KeystoneIdentityProviderDefinition());
+        assertThat(keystoneProvider.getCreated()).isNotNull();
+        assertThat(keystoneProvider.getLastModified()).isNotNull();
+        assertThat(keystoneProvider.getType()).isEqualTo(KEYSTONE);
+        assertThat(keystoneProvider.getConfig()).isNotNull();
+        assertThat(keystoneProvider.getConfig().getAdditionalConfiguration()).isNull();
     }
 
     @Test
@@ -270,11 +265,11 @@ class IdentityProviderBootstrapTest {
         bootstrap.afterPropertiesSet();
 
         IdentityProvider keystoneProvider = provisioning.retrieveByOriginIgnoreActiveFlag(KEYSTONE, IdentityZone.getUaaZoneId());
-        assertNotNull(keystoneProvider);
-        assertEquals(new KeystoneIdentityProviderDefinition(keystoneConfig), keystoneProvider.getConfig());
-        assertNotNull(keystoneProvider.getCreated());
-        assertNotNull(keystoneProvider.getLastModified());
-        assertEquals(KEYSTONE, keystoneProvider.getType());
+        assertThat(keystoneProvider).isNotNull();
+        assertThat(keystoneProvider.getConfig()).isEqualTo(new KeystoneIdentityProviderDefinition(keystoneConfig));
+        assertThat(keystoneProvider.getCreated()).isNotNull();
+        assertThat(keystoneProvider.getLastModified()).isNotNull();
+        assertThat(keystoneProvider.getType()).isEqualTo(KEYSTONE);
     }
 
     @Test
@@ -286,43 +281,43 @@ class IdentityProviderBootstrapTest {
         bootstrap.afterPropertiesSet();
 
         IdentityProvider<KeystoneIdentityProviderDefinition> keystoneProvider = provisioning.retrieveByOriginIgnoreActiveFlag(KEYSTONE, IdentityZone.getUaaZoneId());
-        assertNotNull(keystoneProvider);
-        assertEquals(new KeystoneIdentityProviderDefinition(keystoneConfig), keystoneProvider.getConfig());
-        assertNotNull(keystoneProvider.getCreated());
-        assertNotNull(keystoneProvider.getLastModified());
-        assertEquals(KEYSTONE, keystoneProvider.getType());
-        assertTrue(keystoneProvider.isActive());
+        assertThat(keystoneProvider).isNotNull();
+        assertThat(keystoneProvider.getConfig()).isEqualTo(new KeystoneIdentityProviderDefinition(keystoneConfig));
+        assertThat(keystoneProvider.getCreated()).isNotNull();
+        assertThat(keystoneProvider.getLastModified()).isNotNull();
+        assertThat(keystoneProvider.getType()).isEqualTo(KEYSTONE);
+        assertThat(keystoneProvider.isActive()).isTrue();
 
         bootstrap.setKeystoneConfig(null);
         bootstrap.afterPropertiesSet();
         keystoneProvider = provisioning.retrieveByOriginIgnoreActiveFlag(KEYSTONE, IdentityZone.getUaaZoneId());
-        assertNotNull(keystoneProvider);
-        assertNotNull(keystoneProvider.getCreated());
-        assertNotNull(keystoneProvider.getLastModified());
-        assertEquals(KEYSTONE, keystoneProvider.getType());
-        assertFalse(keystoneProvider.isActive());
+        assertThat(keystoneProvider).isNotNull();
+        assertThat(keystoneProvider.getCreated()).isNotNull();
+        assertThat(keystoneProvider.getLastModified()).isNotNull();
+        assertThat(keystoneProvider.getType()).isEqualTo(KEYSTONE);
+        assertThat(keystoneProvider.isActive()).isFalse();
 
         bootstrap.setKeystoneConfig(keystoneConfig);
         bootstrap.afterPropertiesSet();
         keystoneProvider = provisioning.retrieveByOriginIgnoreActiveFlag(KEYSTONE, IdentityZone.getUaaZoneId());
-        assertNotNull(keystoneProvider);
-        assertEquals(new KeystoneIdentityProviderDefinition(keystoneConfig), keystoneProvider.getConfig());
-        assertNotNull(keystoneProvider.getCreated());
-        assertNotNull(keystoneProvider.getLastModified());
-        assertEquals(KEYSTONE, keystoneProvider.getType());
-        assertTrue(keystoneProvider.isActive());
+        assertThat(keystoneProvider).isNotNull();
+        assertThat(keystoneProvider.getConfig()).isEqualTo(new KeystoneIdentityProviderDefinition(keystoneConfig));
+        assertThat(keystoneProvider.getCreated()).isNotNull();
+        assertThat(keystoneProvider.getLastModified()).isNotNull();
+        assertThat(keystoneProvider.getType()).isEqualTo(KEYSTONE);
+        assertThat(keystoneProvider.isActive()).isTrue();
     }
 
     @Test
     void oauthAndOidcProviderDeletion() throws Exception {
         TestUtils.cleanAndSeedDb(jdbcTemplate);
         setOauthIDPWrappers();
-        bootstrap.setOriginsToDelete(new LinkedList(oauthProviderConfig.keySet()));
+        bootstrap.setOriginsToDelete(new LinkedList<>(oauthProviderConfig.keySet()));
         bootstrap.afterPropertiesSet();
         for (Map.Entry<String, AbstractExternalOAuthIdentityProviderDefinition> provider : oauthProviderConfig.entrySet()) {
             try {
                 provisioning.retrieveByOriginIgnoreActiveFlag(provider.getKey(), IdentityZone.getUaaZoneId());
-                fail(String.format("Provider '%s' should not exist.", provider.getKey()));
+                fail("Provider '%s' should not exist.".formatted(provider.getKey()));
             } catch (EmptyResultDataAccessException ignored) {
             }
 
@@ -330,27 +325,22 @@ class IdentityProviderBootstrapTest {
     }
 
     private void setOauthIDPWrappers() {
-        List<IdentityProviderWrapper> wrappers = new LinkedList<>();
-        oauthProviderConfig
-                .entrySet()
-                .forEach(
-                        p -> {
-                            IdentityProvider provider = new IdentityProvider();
-                            if (p.getValue() instanceof OIDCIdentityProviderDefinition) {
-                                provider.setType(OIDC10);
-                            } else if (p.getValue() instanceof RawExternalOAuthIdentityProviderDefinition) {
-                                provider.setType(OAUTH20);
-                            }
-                            wrappers.add(
-                                    OauthIDPWrapperFactoryBean.getIdentityProviderWrapper(
-                                            p.getKey(),
-                                            p.getValue(),
-                                            provider,
-                                            true
-                                    )
+        List<IdentityProviderWrapper> wrappers = oauthProviderConfig.entrySet().stream()
+                .map(e -> {
+                    IdentityProvider provider = new IdentityProvider<>();
+                    if (e.getValue() instanceof OIDCIdentityProviderDefinition) {
+                        provider.setType(OIDC10);
+                    } else if (e.getValue() instanceof RawExternalOAuthIdentityProviderDefinition) {
+                        provider.setType(OAUTH20);
+                    }
+                    return
+                            OauthIDPWrapperFactoryBean.getIdentityProviderWrapper(
+                                    e.getKey(),
+                                    e.getValue(),
+                                    provider,
+                                    true
                             );
-                        }
-                );
+                }).toList();
         bootstrap.setOauthIdpDefinitions(wrappers);
     }
 
@@ -369,28 +359,27 @@ class IdentityProviderBootstrapTest {
         bootstrap.afterPropertiesSet();
         for (Map.Entry<String, AbstractExternalOAuthIdentityProviderDefinition> provider : oauthProviderConfig.entrySet()) {
             IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> bootstrapOauthProvider = provisioning.retrieveByOriginIgnoreActiveFlag(provider.getKey(), IdentityZone.getUaaZoneId());
-            assertNotNull(bootstrapOauthProvider);
-            assertThat(oauthProviderConfig.values(), PredicateMatcher.has(c -> c.equals(bootstrapOauthProvider.getConfig())));
-            assertNotNull(bootstrapOauthProvider.getCreated());
-            assertNotNull(bootstrapOauthProvider.getLastModified());
-            assertEquals(provider.getKey(), bootstrapOauthProvider.getType());
-            assertTrue(bootstrapOauthProvider.isActive());
+            assertThat(bootstrapOauthProvider).isNotNull();
+            assertThat(oauthProviderConfig).containsValue(bootstrapOauthProvider.getConfig());
+            assertThat(bootstrapOauthProvider.getCreated()).isNotNull();
+            assertThat(bootstrapOauthProvider.getLastModified()).isNotNull();
+            assertThat(bootstrapOauthProvider.getType()).isEqualTo(provider.getKey());
+            assertThat(bootstrapOauthProvider.isActive()).isTrue();
         }
-
     }
 
     private void validateOauthOidcProvider(Map.Entry<String, AbstractExternalOAuthIdentityProviderDefinition> provider, IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> bootstrapOauthProvider) {
-        assertNotNull(bootstrapOauthProvider);
-        assertThat(oauthProviderConfig.values(), PredicateMatcher.has(c -> c.equals(bootstrapOauthProvider.getConfig())));
-        assertNotNull(bootstrapOauthProvider.getCreated());
-        assertNotNull(bootstrapOauthProvider.getLastModified());
-        assertEquals(provider.getKey(), bootstrapOauthProvider.getType());
-        assertTrue(bootstrapOauthProvider.isActive());
-        assertTrue(bootstrapOauthProvider.getConfig().isStoreCustomAttributes()); //default
+        assertThat(bootstrapOauthProvider).isNotNull();
+        assertThat(oauthProviderConfig).containsValue(bootstrapOauthProvider.getConfig());
+        assertThat(bootstrapOauthProvider.getCreated()).isNotNull();
+        assertThat(bootstrapOauthProvider.getLastModified()).isNotNull();
+        assertThat(bootstrapOauthProvider.getType()).isEqualTo(provider.getKey());
+        assertThat(bootstrapOauthProvider.isActive()).isTrue();
+        assertThat(bootstrapOauthProvider.getConfig().isStoreCustomAttributes()).isTrue(); //default
         if (OIDC10.equals(provider.getKey())) {
-            assertEquals("code id_token", bootstrapOauthProvider.getConfig().getResponseType());
+            assertThat(bootstrapOauthProvider.getConfig().getResponseType()).isEqualTo("code id_token");
         } else {
-            assertEquals("code", bootstrapOauthProvider.getConfig().getResponseType());
+            assertThat(bootstrapOauthProvider.getConfig().getResponseType()).isEqualTo("code");
         }
     }
 
@@ -416,19 +405,19 @@ class IdentityProviderBootstrapTest {
 
         setOauthIDPWrappers();
         bootstrap.setSamlProviders(configurator);
-        assertThrows(IllegalArgumentException.class, () -> bootstrap.afterPropertiesSet());
+        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> bootstrap.afterPropertiesSet());
     }
 
     private AbstractExternalOAuthIdentityProviderDefinition setCommonProperties(AbstractExternalOAuthIdentityProviderDefinition definition) throws MalformedURLException {
         return definition
-                .setAuthUrl(new URL("http://auth.url"))
+                .setAuthUrl(URI.create("http://auth.url").toURL())
                 .setLinkText("link text")
                 .setRelyingPartyId("relaying party id")
                 .setRelyingPartySecret("relaying party secret")
                 .setShowLinkText(true)
                 .setSkipSslValidation(true)
                 .setTokenKey("key")
-                .setTokenKeyUrl(new URL("http://token.key.url"));
+                .setTokenKeyUrl(URI.create("http://token.key.url").toURL());
     }
 
     @Test
@@ -438,13 +427,13 @@ class IdentityProviderBootstrapTest {
 
         bootstrap.afterPropertiesSet();
 
-        IdentityProvider samlProvider = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
-        assertNotNull(samlProvider);
+        IdentityProvider samlProvider = provisioning.retrieveByExternId(samlIdentityProviderDefinition.getIdpEntityAlias(), SAML, IdentityZone.getUaaZoneId());
+        assertThat(samlProvider).isNotNull();
         samlIdentityProviderDefinition.setZoneId(IdentityZone.getUaaZoneId());
-        assertEquals(samlIdentityProviderDefinition, samlProvider.getConfig());
-        assertNotNull(samlProvider.getCreated());
-        assertNotNull(samlProvider.getLastModified());
-        assertEquals(OriginKeys.SAML, samlProvider.getType());
+        assertThat(samlProvider.getConfig()).isEqualTo(samlIdentityProviderDefinition);
+        assertThat(samlProvider.getCreated()).isNotNull();
+        assertThat(samlProvider.getLastModified()).isNotNull();
+        assertThat(samlProvider.getType()).isEqualTo(OriginKeys.SAML);
     }
 
     @Test
@@ -466,16 +455,13 @@ class IdentityProviderBootstrapTest {
 
         ArgumentCaptor<EntityDeletedEvent<IdentityProvider>> captor = ArgumentCaptor.forClass(EntityDeletedEvent.class);
         verify(publisher, times(2)).publishEvent(captor.capture());
-        assertThat(
-                captor
-                        .getAllValues()
-                        .stream()
-                        .map(
-                                p -> p.getDeleted().getOriginKey()
-                        ).collect(toList()
-                ),
-                containsInAnyOrder(originsToDelete.toArray())
-        );
+        assertThat(captor
+                .getAllValues()
+                .stream()
+                .map(
+                        p -> p.getDeleted().getOriginKey()
+                ).toList())
+                .containsAll(originsToDelete);
     }
 
     private void configureSamlProviders(boolean override, SamlIdentityProviderDefinition... definitions) {
@@ -501,10 +487,10 @@ class IdentityProviderBootstrapTest {
 
         IdentityProvider<SamlIdentityProviderDefinition> samlProvider = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
         IdentityProvider<SamlIdentityProviderDefinition> samlProvider2 = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition1.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
-        assertNotNull(samlProvider);
-        assertNotNull(samlProvider2);
-        assertEquals("http://location", samlProvider.getConfig().getMetaDataLocation());
-        assertEquals("http://location2", samlProvider2.getConfig().getMetaDataLocation());
+        assertThat(samlProvider).isNotNull();
+        assertThat(samlProvider2).isNotNull();
+        assertThat(samlProvider.getConfig().getMetaDataLocation()).isEqualTo("http://location");
+        assertThat(samlProvider2.getConfig().getMetaDataLocation()).isEqualTo("http://location2");
 
         samlIdentityProviderDefinition.setMetaDataLocation("http://some.other.location");
         samlIdentityProviderDefinition1.setMetaDataLocation("http://some.other.location");
@@ -514,12 +500,10 @@ class IdentityProviderBootstrapTest {
 
         samlProvider = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
         samlProvider2 = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition1.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
-        assertNotNull(samlProvider);
-        assertNotNull(samlProvider2);
-        assertEquals("http://location", samlProvider.getConfig().getMetaDataLocation());
-        assertEquals("http://location2", samlProvider2.getConfig().getMetaDataLocation());
-
-
+        assertThat(samlProvider).isNotNull();
+        assertThat(samlProvider.getConfig().getMetaDataLocation()).isEqualTo("http://location");
+        assertThat(samlProvider2).isNotNull();
+        assertThat(samlProvider2.getConfig().getMetaDataLocation()).isEqualTo("http://location2");
     }
 
     @Test
@@ -529,62 +513,62 @@ class IdentityProviderBootstrapTest {
         bootstrap.afterPropertiesSet();
 
         IdentityProvider samlProvider = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
-        assertNotNull(samlProvider);
+        assertThat(samlProvider).isNotNull();
         samlIdentityProviderDefinition.setZoneId(IdentityZone.getUaaZoneId());
-        assertEquals(samlIdentityProviderDefinition, samlProvider.getConfig());
-        assertNotNull(samlProvider.getCreated());
-        assertNotNull(samlProvider.getLastModified());
-        assertEquals(OriginKeys.SAML, samlProvider.getType());
-        assertTrue(samlProvider.isActive());
+        assertThat(samlProvider.getConfig()).isEqualTo(samlIdentityProviderDefinition);
+        assertThat(samlProvider.getCreated()).isNotNull();
+        assertThat(samlProvider.getLastModified()).isNotNull();
+        assertThat(samlProvider.getType()).isEqualTo(OriginKeys.SAML);
+        assertThat(samlProvider.isActive()).isTrue();
 
         IdentityProvider samlProvider2 = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition1.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
-        assertNotNull(samlProvider2);
+        assertThat(samlProvider2).isNotNull();
         samlIdentityProviderDefinition1.setZoneId(IdentityZone.getUaaZoneId());
-        assertEquals(samlIdentityProviderDefinition1, samlProvider2.getConfig());
-        assertNotNull(samlProvider2.getCreated());
-        assertNotNull(samlProvider2.getLastModified());
-        assertEquals(OriginKeys.SAML, samlProvider2.getType());
-        assertTrue(samlProvider2.isActive());
+        assertThat(samlProvider2.getConfig()).isEqualTo(samlIdentityProviderDefinition1);
+        assertThat(samlProvider2.getCreated()).isNotNull();
+        assertThat(samlProvider2.getLastModified()).isNotNull();
+        assertThat(samlProvider2.getType()).isEqualTo(OriginKeys.SAML);
+        assertThat(samlProvider2.isActive()).isTrue();
 
         configureSamlProviders(true, samlIdentityProviderDefinition);
         bootstrap.setSamlProviders(configurator);
         bootstrap.afterPropertiesSet();
 
         samlProvider = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
-        assertNotNull(samlProvider);
-        assertEquals(samlIdentityProviderDefinition, samlProvider.getConfig());
-        assertNotNull(samlProvider.getCreated());
-        assertNotNull(samlProvider.getLastModified());
-        assertEquals(OriginKeys.SAML, samlProvider.getType());
-        assertTrue(samlProvider.isActive());
+        assertThat(samlProvider).isNotNull();
+        assertThat(samlProvider.getConfig()).isEqualTo(samlIdentityProviderDefinition);
+        assertThat(samlProvider.getCreated()).isNotNull();
+        assertThat(samlProvider.getLastModified()).isNotNull();
+        assertThat(samlProvider.getType()).isEqualTo(OriginKeys.SAML);
+        assertThat(samlProvider.isActive()).isTrue();
 
         samlProvider2 = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition1.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
-        assertNotNull(samlProvider2);
-        assertEquals(samlIdentityProviderDefinition1, samlProvider2.getConfig());
-        assertNotNull(samlProvider2.getCreated());
-        assertNotNull(samlProvider2.getLastModified());
-        assertEquals(OriginKeys.SAML, samlProvider2.getType());
-        assertTrue(samlProvider2.isActive());
+        assertThat(samlProvider2).isNotNull();
+        assertThat(samlProvider2.getConfig()).isEqualTo(samlIdentityProviderDefinition1);
+        assertThat(samlProvider2.getCreated()).isNotNull();
+        assertThat(samlProvider2.getLastModified()).isNotNull();
+        assertThat(samlProvider2.getType()).isEqualTo(OriginKeys.SAML);
+        assertThat(samlProvider2.isActive()).isTrue();
 
         configureSamlProviders(true, samlIdentityProviderDefinition1);
         bootstrap.setSamlProviders(configurator);
         bootstrap.afterPropertiesSet();
 
         samlProvider = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
-        assertNotNull(samlProvider);
-        assertEquals(samlIdentityProviderDefinition, samlProvider.getConfig());
-        assertNotNull(samlProvider.getCreated());
-        assertNotNull(samlProvider.getLastModified());
-        assertEquals(OriginKeys.SAML, samlProvider.getType());
-        assertTrue(samlProvider.isActive());
+        assertThat(samlProvider).isNotNull();
+        assertThat(samlProvider.getConfig()).isEqualTo(samlIdentityProviderDefinition);
+        assertThat(samlProvider.getCreated()).isNotNull();
+        assertThat(samlProvider.getLastModified()).isNotNull();
+        assertThat(samlProvider.getType()).isEqualTo(OriginKeys.SAML);
+        assertThat(samlProvider.isActive()).isTrue();
 
         samlProvider2 = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition1.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
-        assertNotNull(samlProvider2);
-        assertEquals(samlIdentityProviderDefinition1, samlProvider2.getConfig());
-        assertNotNull(samlProvider2.getCreated());
-        assertNotNull(samlProvider2.getLastModified());
-        assertEquals(OriginKeys.SAML, samlProvider2.getType());
-        assertTrue(samlProvider2.isActive());
+        assertThat(samlProvider2).isNotNull();
+        assertThat(samlProvider2.getConfig()).isEqualTo(samlIdentityProviderDefinition1);
+        assertThat(samlProvider2.getCreated()).isNotNull();
+        assertThat(samlProvider2.getLastModified()).isNotNull();
+        assertThat(samlProvider2.getType()).isEqualTo(OriginKeys.SAML);
+        assertThat(samlProvider2.isActive()).isTrue();
 
         configurator = mock(BootstrapSamlIdentityProviderData.class);
         when(configurator.getIdentityProviderDefinitions()).thenReturn(new LinkedList<>());
@@ -592,20 +576,20 @@ class IdentityProviderBootstrapTest {
         bootstrap.afterPropertiesSet();
 
         samlProvider = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
-        assertNotNull(samlProvider);
-        assertEquals(samlIdentityProviderDefinition, samlProvider.getConfig());
-        assertNotNull(samlProvider.getCreated());
-        assertNotNull(samlProvider.getLastModified());
-        assertEquals(OriginKeys.SAML, samlProvider.getType());
-        assertTrue(samlProvider.isActive());
+        assertThat(samlProvider).isNotNull();
+        assertThat(samlProvider.getConfig()).isEqualTo(samlIdentityProviderDefinition);
+        assertThat(samlProvider.getCreated()).isNotNull();
+        assertThat(samlProvider.getLastModified()).isNotNull();
+        assertThat(samlProvider.getType()).isEqualTo(OriginKeys.SAML);
+        assertThat(samlProvider.isActive()).isTrue();
 
         samlProvider2 = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition1.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
-        assertNotNull(samlProvider2);
-        assertEquals(samlIdentityProviderDefinition1, samlProvider2.getConfig());
-        assertNotNull(samlProvider2.getCreated());
-        assertNotNull(samlProvider2.getLastModified());
-        assertEquals(OriginKeys.SAML, samlProvider2.getType());
-        assertTrue(samlProvider2.isActive());
+        assertThat(samlProvider2).isNotNull();
+        assertThat(samlProvider2.getConfig()).isEqualTo(samlIdentityProviderDefinition1);
+        assertThat(samlProvider2.getCreated()).isNotNull();
+        assertThat(samlProvider2.getLastModified()).isNotNull();
+        assertThat(samlProvider2.getType()).isEqualTo(OriginKeys.SAML);
+        assertThat(samlProvider2.isActive()).isTrue();
 
         configurator = mock(BootstrapSamlIdentityProviderData.class);
         when(configurator.getIdentityProviderDefinitions()).thenReturn(Arrays.asList(samlIdentityProviderDefinition1, samlIdentityProviderDefinition));
@@ -613,20 +597,20 @@ class IdentityProviderBootstrapTest {
         bootstrap.afterPropertiesSet();
 
         samlProvider = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
-        assertNotNull(samlProvider);
-        assertEquals(samlIdentityProviderDefinition, samlProvider.getConfig());
-        assertNotNull(samlProvider.getCreated());
-        assertNotNull(samlProvider.getLastModified());
-        assertEquals(OriginKeys.SAML, samlProvider.getType());
-        assertTrue(samlProvider.isActive());
+        assertThat(samlProvider).isNotNull();
+        assertThat(samlProvider.getConfig()).isEqualTo(samlIdentityProviderDefinition);
+        assertThat(samlProvider.getCreated()).isNotNull();
+        assertThat(samlProvider.getLastModified()).isNotNull();
+        assertThat(samlProvider.getType()).isEqualTo(OriginKeys.SAML);
+        assertThat(samlProvider.isActive()).isTrue();
 
         samlProvider2 = provisioning.retrieveByOriginIgnoreActiveFlag(samlIdentityProviderDefinition1.getIdpEntityAlias(), IdentityZone.getUaaZoneId());
-        assertNotNull(samlProvider2);
-        assertEquals(samlIdentityProviderDefinition1, samlProvider2.getConfig());
-        assertNotNull(samlProvider2.getCreated());
-        assertNotNull(samlProvider2.getLastModified());
-        assertEquals(OriginKeys.SAML, samlProvider2.getType());
-        assertTrue(samlProvider2.isActive());
+        assertThat(samlProvider2).isNotNull();
+        assertThat(samlProvider2.getConfig()).isEqualTo(samlIdentityProviderDefinition1);
+        assertThat(samlProvider2.getCreated()).isNotNull();
+        assertThat(samlProvider2.getLastModified()).isNotNull();
+        assertThat(samlProvider2.getType()).isEqualTo(OriginKeys.SAML);
+        assertThat(samlProvider2.isActive()).isTrue();
     }
 
     @Test
@@ -652,7 +636,7 @@ class IdentityProviderBootstrapTest {
         if (expectedValue == null) {
             expectedValue = "false";
         }
-        assertEquals(Boolean.valueOf(expectedValue), internalIDP.getConfig().isDisableInternalUserManagement());
+        assertThat(internalIDP.getConfig().isDisableInternalUserManagement()).isEqualTo(Boolean.valueOf(expectedValue));
     }
 
     @Test
@@ -662,13 +646,13 @@ class IdentityProviderBootstrapTest {
 
         IdentityProvider<UaaIdentityProviderDefinition> internalIDP = provisioning.retrieveByOriginIgnoreActiveFlag(OriginKeys.UAA, IdentityZone.getUaaZoneId());
         PasswordPolicy passwordPolicy = internalIDP.getConfig().getPasswordPolicy();
-        assertEquals(123, passwordPolicy.getMinLength());
-        assertEquals(4567, passwordPolicy.getMaxLength());
-        assertEquals(1, passwordPolicy.getRequireUpperCaseCharacter());
-        assertEquals(0, passwordPolicy.getRequireLowerCaseCharacter());
-        assertEquals(1, passwordPolicy.getRequireDigit());
-        assertEquals(0, passwordPolicy.getRequireSpecialCharacter());
-        assertEquals(6, passwordPolicy.getExpirePasswordInMonths());
+        assertThat(passwordPolicy.getMinLength()).isEqualTo(123);
+        assertThat(passwordPolicy.getMaxLength()).isEqualTo(4567);
+        assertThat(passwordPolicy.getRequireUpperCaseCharacter()).isOne();
+        assertThat(passwordPolicy.getRequireLowerCaseCharacter()).isZero();
+        assertThat(passwordPolicy.getRequireDigit()).isOne();
+        assertThat(passwordPolicy.getRequireSpecialCharacter()).isZero();
+        assertThat(passwordPolicy.getExpirePasswordInMonths()).isEqualTo(6);
     }
 
     @Test
@@ -683,9 +667,9 @@ class IdentityProviderBootstrapTest {
         IdentityProvider<UaaIdentityProviderDefinition> internalIDP = provisioning.retrieveByOriginIgnoreActiveFlag(OriginKeys.UAA, IdentityZone.getUaaZoneId());
         lockoutPolicy = internalIDP.getConfig().getLockoutPolicy();
 
-        assertEquals(123, lockoutPolicy.getLockoutPeriodSeconds());
-        assertEquals(3, lockoutPolicy.getLockoutAfterFailures());
-        assertEquals(343, lockoutPolicy.getCountFailuresWithin());
+        assertThat(lockoutPolicy.getLockoutPeriodSeconds()).isEqualTo(123);
+        assertThat(lockoutPolicy.getLockoutAfterFailures()).isEqualTo(3);
+        assertThat(lockoutPolicy.getCountFailuresWithin()).isEqualTo(343);
     }
 
     @Test
@@ -694,19 +678,19 @@ class IdentityProviderBootstrapTest {
         bootstrap.afterPropertiesSet();
 
         IdentityProvider internalIdp = provisioning.retrieveByOriginIgnoreActiveFlag(OriginKeys.UAA, IdentityZone.getUaaZoneId());
-        assertFalse(internalIdp.isActive());
+        assertThat(internalIdp.isActive()).isFalse();
 
         environment.setProperty("disableInternalAuth", "false");
         bootstrap.afterPropertiesSet();
 
         internalIdp = provisioning.retrieveByOriginIgnoreActiveFlag(OriginKeys.UAA, IdentityZone.getUaaZoneId());
-        assertTrue(internalIdp.isActive());
+        assertThat(internalIdp.isActive()).isTrue();
     }
 
     @Test
     void defaultActiveFlagOnInternalIDP() throws Exception {
         bootstrap.afterPropertiesSet();
         IdentityProvider internalIdp = provisioning.retrieveByOriginIgnoreActiveFlag(OriginKeys.UAA, IdentityZone.getUaaZoneId());
-        assertTrue(internalIdp.isActive());
+        assertThat(internalIdp.isActive()).isTrue();
     }
 }
