@@ -1,9 +1,9 @@
 package org.cloudfoundry.identity.uaa.login;
 
+import org.cloudfoundry.identity.uaa.extensions.PollutionPreventionExtension;
 import org.cloudfoundry.identity.uaa.message.EmailService;
 import org.cloudfoundry.identity.uaa.message.MessageType;
 import org.cloudfoundry.identity.uaa.message.util.FakeJavaMailSender;
-import org.cloudfoundry.identity.uaa.extensions.PollutionPreventionExtension;
 import org.cloudfoundry.identity.uaa.zone.BrandingInformation;
 import org.cloudfoundry.identity.uaa.zone.IdentityZone;
 import org.cloudfoundry.identity.uaa.zone.IdentityZoneConfiguration;
@@ -13,12 +13,10 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 
-import javax.mail.Message;
-import javax.mail.internet.InternetAddress;
+import jakarta.mail.Message;
+import jakarta.mail.internet.InternetAddress;
 
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.hasSize;
-import static org.junit.Assert.assertThat;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -54,15 +52,15 @@ class EmailServiceTests {
                 "Test Message",
                 "<html><body>hi</body></html>");
 
-        assertThat(mailSender.getSentMessages(), hasSize(1));
-        FakeJavaMailSender.MimeMessageWrapper mimeMessageWrapper = mailSender.getSentMessages().get(0);
-        assertThat(mimeMessageWrapper.getFrom(), hasSize(1));
-        InternetAddress fromAddress = (InternetAddress) mimeMessageWrapper.getFrom().get(0);
-        assertThat(fromAddress.getAddress(), equalTo("admin@login.example.com"));
-        assertThat(fromAddress.getPersonal(), equalTo("Cloud Foundry"));
-        assertThat(mimeMessageWrapper.getRecipients(Message.RecipientType.TO), hasSize(1));
-        assertThat(mimeMessageWrapper.getRecipients(Message.RecipientType.TO).get(0), equalTo(new InternetAddress("user@example.com")));
-        assertThat(mimeMessageWrapper.getContentString(), equalTo("<html><body>hi</body></html>"));
+        assertThat(mailSender.getSentMessages()).hasSize(1);
+        FakeJavaMailSender.MimeMessageWrapper mimeMessageWrapper = mailSender.getSentMessages().getFirst();
+        assertThat(mimeMessageWrapper.getFrom()).hasSize(1);
+        InternetAddress fromAddress = (InternetAddress) mimeMessageWrapper.getFrom().getFirst();
+        assertThat(fromAddress.getAddress()).isEqualTo("admin@login.example.com");
+        assertThat(fromAddress.getPersonal()).isEqualTo("Cloud Foundry");
+        assertThat(mimeMessageWrapper.getRecipients(Message.RecipientType.TO)).hasSize(1);
+        assertThat(mimeMessageWrapper.getRecipients(Message.RecipientType.TO).getFirst()).isEqualTo(new InternetAddress("user@example.com"));
+        assertThat(mimeMessageWrapper.getContentString()).isEqualTo("<html><body>hi</body></html>");
     }
 
     @Test
@@ -87,10 +85,10 @@ class EmailServiceTests {
                 "Test Message",
                 "<html><body>hi</body></html>");
 
-        FakeJavaMailSender.MimeMessageWrapper mimeMessageWrapper = mailSender.getSentMessages().get(0);
-        assertThat(mimeMessageWrapper.getFrom(), hasSize(1));
-        InternetAddress fromAddress = (InternetAddress) mimeMessageWrapper.getFrom().get(0);
-        assertThat(fromAddress.getAddress(), equalTo("something-specific@bestcompany.example.com"));
-        assertThat(fromAddress.getPersonal(), equalTo("Best Company"));
+        FakeJavaMailSender.MimeMessageWrapper mimeMessageWrapper = mailSender.getSentMessages().getFirst();
+        assertThat(mimeMessageWrapper.getFrom()).hasSize(1);
+        InternetAddress fromAddress = (InternetAddress) mimeMessageWrapper.getFrom().getFirst();
+        assertThat(fromAddress.getAddress()).isEqualTo("something-specific@bestcompany.example.com");
+        assertThat(fromAddress.getPersonal()).isEqualTo("Best Company");
     }
 }
