@@ -1,18 +1,29 @@
 package org.cloudfoundry.identity.uaa.login;
 
+import jakarta.annotation.PostConstruct;
 import org.cloudfoundry.identity.uaa.TestClassNullifier;
-import org.cloudfoundry.identity.uaa.account.*;
+import org.cloudfoundry.identity.uaa.account.ConflictException;
+import org.cloudfoundry.identity.uaa.account.ForgotPasswordInfo;
+import org.cloudfoundry.identity.uaa.account.NotFoundException;
+import org.cloudfoundry.identity.uaa.account.ResetPasswordController;
+import org.cloudfoundry.identity.uaa.account.ResetPasswordService;
 import org.cloudfoundry.identity.uaa.codestore.ExpiringCode;
 import org.cloudfoundry.identity.uaa.codestore.ExpiringCodeStore;
 import org.cloudfoundry.identity.uaa.codestore.InMemoryExpiringCodeStore;
+import org.cloudfoundry.identity.uaa.extensions.PollutionPreventionExtension;
 import org.cloudfoundry.identity.uaa.home.BuildInfo;
 import org.cloudfoundry.identity.uaa.message.MessageService;
 import org.cloudfoundry.identity.uaa.message.MessageType;
-import org.cloudfoundry.identity.uaa.extensions.PollutionPreventionExtension;
 import org.cloudfoundry.identity.uaa.user.UaaUser;
 import org.cloudfoundry.identity.uaa.user.UaaUserDatabase;
 import org.cloudfoundry.identity.uaa.util.TimeServiceImpl;
-import org.cloudfoundry.identity.uaa.zone.*;
+import org.cloudfoundry.identity.uaa.util.beans.TestBuildInfo;
+import org.cloudfoundry.identity.uaa.zone.BrandingInformation;
+import org.cloudfoundry.identity.uaa.zone.IdentityZone;
+import org.cloudfoundry.identity.uaa.zone.IdentityZoneConfiguration;
+import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
+import org.cloudfoundry.identity.uaa.zone.MultitenancyFixture;
+import org.cloudfoundry.identity.uaa.zone.beans.IdentityZoneManagerImpl;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -26,8 +37,7 @@ import org.springframework.context.annotation.Import;
 import org.springframework.context.support.ResourceBundleMessageSource;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.annotation.DirtiesContext;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 import org.springframework.test.context.web.WebAppConfiguration;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
@@ -35,24 +45,35 @@ import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
 import org.springframework.web.servlet.config.annotation.DefaultServletHandlerConfigurer;
 import org.springframework.web.servlet.config.annotation.EnableWebMvc;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurerAdapter;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
+import org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerAdapter;
 import org.thymeleaf.TemplateEngine;
 
 import java.sql.Timestamp;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.Matchers.containsString;
-import static org.junit.Assert.assertThat;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.anyString;
+import static org.mockito.Mockito.contains;
+import static org.mockito.Mockito.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 import static org.springframework.http.MediaType.APPLICATION_FORM_URLENCODED;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.head;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.header;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.model;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.redirectedUrl;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.view;
 
-@ExtendWith(SpringExtension.class)
 @ExtendWith(PollutionPreventionExtension.class)
 @WebAppConfiguration
-@ContextConfiguration(classes = ResetPasswordControllerTest.ContextConfiguration.class)
+@SpringJUnitConfig(classes = ResetPasswordControllerTest.ContextConfiguration.class)
 @DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_EACH_TEST_METHOD)
 class ResetPasswordControllerTest extends TestClassNullifier {
     private MockMvc mockMvc;
@@ -83,7 +104,7 @@ class ResetPasswordControllerTest extends TestClassNullifier {
         IdentityZoneHolder.set(IdentityZone.getUaa());
 
         mockMvc = MockMvcBuilders.webAppContextSetup(webApplicationContext)
-            .build();
+                .build();
     }
 
     @AfterEach
@@ -93,25 +114,25 @@ class ResetPasswordControllerTest extends TestClassNullifier {
     }
 
     @Test
-    void testForgotPasswordPage() throws Exception {
+    void forgotPasswordPage() throws Exception {
         mockMvc.perform(get("/forgot_password")
-            .param("client_id", "example")
-            .param("redirect_uri", "http://example.com"))
-            .andExpect(status().isOk())
-            .andExpect(view().name("forgot_password"))
-            .andExpect(model().attribute("client_id", "example"))
-            .andExpect(model().attribute("redirect_uri", "http://example.com"));
+                        .param("client_id", "example")
+                        .param("redirect_uri", "http://example.com"))
+                .andExpect(status().isOk())
+                .andExpect(view().name("forgot_password"))
+                .andExpect(model().attribute("client_id", "example"))
+                .andExpect(model().attribute("redirect_uri", "http://example.com"));
     }
 
     @Test
-    void testForgotPasswordWithSelfServiceDisabled() throws Exception {
+    void forgotPasswordWithSelfServiceDisabled() throws Exception {
         IdentityZone zone = MultitenancyFixture.identityZone("test-zone-id", "testsubdomain");
         zone.getConfig().getLinks().getSelfService().setSelfServiceLinksEnabled(false);
         IdentityZoneHolder.set(zone);
 
         mockMvc.perform(get("/forgot_password")
-                .param("client_id", "example")
-                .param("redirect_uri", "http://example.com"))
+                        .param("client_id", "example")
+                        .param("redirect_uri", "http://example.com"))
                 .andExpect(status().isNotFound())
                 .andExpect(view().name("error"))
                 .andExpect(model().attribute("error_message_code", "self_service_disabled"));
@@ -141,8 +162,8 @@ class ResetPasswordControllerTest extends TestClassNullifier {
             String domain = zoneDomain == null ? "localhost" : zoneDomain + ".localhost";
             when(resetPasswordService.forgotPassword("user@example.com", "", "")).thenThrow(new ConflictException("abcd", "user@example.com"));
             MockHttpServletRequestBuilder post = post("/forgot_password.do")
-              .contentType(APPLICATION_FORM_URLENCODED)
-              .param("username", "user@example.com");
+                    .contentType(APPLICATION_FORM_URLENCODED)
+                    .param("username", "user@example.com");
 
             post.with(request -> {
                 request.setServerName(domain);
@@ -150,21 +171,21 @@ class ResetPasswordControllerTest extends TestClassNullifier {
             });
 
             mockMvc.perform(post)
-              .andExpect(status().isFound())
-              .andExpect(redirectedUrl("email_sent?code=reset_password"));
+                    .andExpect(status().isFound())
+                    .andExpect(redirectedUrl("email_sent?code=reset_password"));
             ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
 
             Mockito.verify(messageService).sendMessage(
-              eq("user@example.com"),
-              eq(MessageType.PASSWORD_RESET),
-              eq(companyName + " account password reset request"),
-              captor.capture()
+                    eq("user@example.com"),
+                    eq(MessageType.PASSWORD_RESET),
+                    eq(companyName + " account password reset request"),
+                    captor.capture()
             );
 
             String emailContent = captor.getValue();
-            assertThat(emailContent, containsString(String.format("A request has been made to reset your %s account password for %s", companyName, "user@example.com")));
-            assertThat(emailContent, containsString("Your account credentials for " + domain + " are managed by an external service. Please contact your administrator for password recovery requests."));
-            assertThat(emailContent, containsString("Thank you,<br />\n    " + companyName));
+            assertThat(emailContent).contains("A request has been made to reset your %s account password for %s".formatted(companyName, "user@example.com"));
+            assertThat(emailContent).contains("Your account credentials for " + domain + " are managed by an external service. Please contact your administrator for password recovery requests.");
+            assertThat(emailContent).contains("Thank you,<br />\n    " + companyName);
         } finally {
             IdentityZoneHolder.get().setConfig(defaultConfig);
         }
@@ -174,11 +195,11 @@ class ResetPasswordControllerTest extends TestClassNullifier {
     void forgotPassword_DoesNotSendEmail_UserNotFound() throws Exception {
         when(resetPasswordService.forgotPassword("user@example.com", "", "")).thenThrow(new NotFoundException());
         MockHttpServletRequestBuilder post = post("/forgot_password.do")
-            .contentType(APPLICATION_FORM_URLENCODED)
-            .param("username", "user@example.com");
+                .contentType(APPLICATION_FORM_URLENCODED)
+                .param("username", "user@example.com");
         mockMvc.perform(post)
-            .andExpect(status().isFound())
-            .andExpect(redirectedUrl("email_sent?code=reset_password"));
+                .andExpect(status().isFound())
+                .andExpect(redirectedUrl("email_sent?code=reset_password"));
 
         Mockito.verifyNoInteractions(messageService);
     }
@@ -190,7 +211,7 @@ class ResetPasswordControllerTest extends TestClassNullifier {
 
     @Test
     void forgotPassword_SuccessfulDefaultCompanyName() throws Exception {
-        ResetPasswordController controller = new ResetPasswordController(resetPasswordService, messageService, templateEngine, codeStore, userDatabase);
+        ResetPasswordController controller = new ResetPasswordController(new IdentityZoneManagerImpl(), resetPasswordService, messageService, templateEngine, codeStore, userDatabase, "http://localhost");
         mockMvc = MockMvcBuilders
                 .standaloneSetup(controller)
                 .setViewResolvers(getResolver())
@@ -212,10 +233,10 @@ class ResetPasswordControllerTest extends TestClassNullifier {
         IdentityZoneHolder.set(zone);
 
         mockMvc.perform(post("/forgot_password.do")
-                .contentType(APPLICATION_FORM_URLENCODED)
-                .param("username", "user@example.com")
-                .param("client_id", "example")
-                .param("redirect_uri", "redirect.example.com"))
+                        .contentType(APPLICATION_FORM_URLENCODED)
+                        .param("username", "user@example.com")
+                        .param("client_id", "example")
+                        .param("redirect_uri", "redirect.example.com"))
                 .andExpect(status().isNotFound())
                 .andExpect(view().name("error"))
                 .andExpect(model().attribute("error_message_code", "self_service_disabled"));
@@ -235,10 +256,10 @@ class ResetPasswordControllerTest extends TestClassNullifier {
         try {
             when(resetPasswordService.forgotPassword("user@example.com", "example", "redirect.example.com")).thenReturn(new ForgotPasswordInfo("123", "user@example.com", new ExpiringCode("code1", new Timestamp(System.currentTimeMillis()), "someData", null)));
             MockHttpServletRequestBuilder post = post("/forgot_password.do")
-              .contentType(APPLICATION_FORM_URLENCODED)
-              .param("username", "user@example.com")
-              .param("client_id", "example")
-              .param("redirect_uri", "redirect.example.com");
+                    .contentType(APPLICATION_FORM_URLENCODED)
+                    .param("username", "user@example.com")
+                    .param("client_id", "example")
+                    .param("redirect_uri", "redirect.example.com");
 
             if (!IdentityZoneHolder.isUaa()) {
                 post.with(request -> {
@@ -248,13 +269,13 @@ class ResetPasswordControllerTest extends TestClassNullifier {
             }
 
             mockMvc.perform(post)
-              .andExpect(status().isFound())
-              .andExpect(redirectedUrl("email_sent?code=reset_password"));
+                    .andExpect(status().isFound())
+                    .andExpect(redirectedUrl("email_sent?code=reset_password"));
             verify(messageService).sendMessage(
-              eq("user@example.com"),
-              eq(MessageType.PASSWORD_RESET),
-              eq(companyName + " account password reset request"),
-              contains("<a href=\"" + url + "\">Reset your password</a>")
+                    eq("user@example.com"),
+                    eq(MessageType.PASSWORD_RESET),
+                    eq(companyName + " account password reset request"),
+                    contains("<a href=\"" + url + "\">Reset your password</a>")
             );
         } finally {
             IdentityZoneHolder.get().setConfig(defaultConfig);
@@ -262,48 +283,71 @@ class ResetPasswordControllerTest extends TestClassNullifier {
     }
 
     @Test
-    void testInstructions() throws Exception {
+    void instructions() throws Exception {
         mockMvc.perform(get("/email_sent").param("code", "reset_password"))
-            .andExpect(status().isOk())
-            .andExpect(header().string("Content-Security-Policy", "frame-ancestors 'none'"))
-            .andExpect(model().attribute("code", "reset_password"));
+                .andExpect(status().isOk())
+                .andExpect(header().string("Content-Security-Policy", "frame-ancestors 'none'"))
+                .andExpect(model().attribute("code", "reset_password"));
     }
 
     @Test
-    void testResetPasswordPage() throws Exception {
+    void resetPasswordPage() throws Exception {
         ExpiringCode code = codeStore.generateCode("{\"user_id\" : \"some-user-id\"}", new Timestamp(System.currentTimeMillis() + 1000000), null, IdentityZoneHolder.get().getId());
         mockMvc.perform(get("/reset_password").param("email", "user@example.com").param("code", code.getCode()))
-            .andExpect(status().isOk())
-            .andDo(print())
-            .andExpect(view().name("reset_password"))
-            .andExpect(model().attribute("email", "email"))
-            .andExpect(model().attribute("username", "username"))
-            .andExpect(content().string(containsString("<div class=\"email-display\">Username: username</div>")))
-            .andExpect(content().string(containsString("<input type=\"hidden\" name=\"username\" value=\"username\"/>")));
+                .andExpect(status().isOk())
+                .andDo(print())
+                .andExpect(view().name("reset_password"))
+                .andExpect(model().attribute("email", "email"))
+                .andExpect(model().attribute("username", "username"))
+                .andExpect(content().string(containsString("<div class=\"email-display\">Username: username</div>")))
+                .andExpect(content().string(containsString("<input type=\"hidden\" name=\"username\" value=\"username\"/>")));
     }
 
     @Test
-    void testResetPasswordPageDuplicate() throws Exception {
+    void resetPasswordPageWithPriorHeadRequest() throws Exception {
+        ExpiringCode code = codeStore.generateCode("{\"user_id\" : \"some-user-id\"}", new Timestamp(System.currentTimeMillis() + 1000000), null, IdentityZoneHolder.get().getId());
+        mockMvc.perform(head("/reset_password").param("email", "user@example.com").param("code", code.getCode()))
+                .andExpect(status().isOk());
+        mockMvc.perform(get("/reset_password").param("email", "user@example.com").param("code", code.getCode()))
+                .andExpect(status().isOk())
+                .andDo(print())
+                .andExpect(view().name("reset_password"))
+                .andExpect(model().attribute("email", "email"))
+                .andExpect(model().attribute("username", "username"))
+                .andExpect(content().string(containsString("<div class=\"email-display\">Username: username</div>")))
+                .andExpect(content().string(containsString("<input type=\"hidden\" name=\"username\" value=\"username\"/>")));
+    }
+
+    @Test
+    void resetPasswordPageDuplicate() throws Exception {
         ExpiringCode code = codeStore.generateCode("{\"user_id\" : \"some-user-id\"}", new Timestamp(System.currentTimeMillis() + 1000000), null, IdentityZoneHolder.get().getId());
         mockMvc.perform(get("/reset_password").param("email", "user@example.com").param("code", code.getCode()))
-            .andExpect(status().isOk())
-            .andExpect(view().name("reset_password"));
+                .andExpect(status().isOk())
+                .andExpect(view().name("reset_password"));
         mockMvc.perform(get("/reset_password").param("email", "user@example.com").param("code", code.getCode()))
-            .andExpect(status().isUnprocessableEntity())
-            .andExpect(view().name("forgot_password"));
+                .andExpect(status().isUnprocessableEntity())
+                .andExpect(view().name("forgot_password"));
     }
 
     @Test
-    void testResetPasswordPageWhenExpiringCodeNull() throws Exception {
+    void resetPasswordPageWhenExpiringCodeNull() throws Exception {
         mockMvc.perform(get("/reset_password").param("email", "user@example.com").param("code", "code1"))
-            .andExpect(status().isUnprocessableEntity())
-            .andExpect(view().name("forgot_password"))
-            .andExpect(model().attribute("message_code", "bad_code"));
+                .andExpect(status().isUnprocessableEntity())
+                .andExpect(view().name("forgot_password"))
+                .andExpect(model().attribute("message_code", "bad_code"));
     }
 
     @EnableWebMvc
     @Import(ThymeleafConfig.class)
-    static class ContextConfiguration extends WebMvcConfigurerAdapter {
+    static class ContextConfiguration implements WebMvcConfigurer {
+
+        @Autowired
+        private RequestMappingHandlerAdapter requestMappingHandlerAdapter;
+
+        @PostConstruct
+        public void init() {
+            requestMappingHandlerAdapter.setIgnoreDefaultModelOnRedirect(false);
+        }
 
         @Override
         public void configureDefaultServletHandling(DefaultServletHandlerConfigurer configurer) {
@@ -312,7 +356,7 @@ class ResetPasswordControllerTest extends TestClassNullifier {
 
         @Bean
         BuildInfo buildInfo() {
-            return new BuildInfo();
+            return new TestBuildInfo();
         }
 
         @Bean
@@ -340,7 +384,7 @@ class ResetPasswordControllerTest extends TestClassNullifier {
         @Bean
         public UaaUserDatabase userDatabase() {
             UaaUserDatabase userDatabase = mock(UaaUserDatabase.class);
-            when(userDatabase.retrieveUserById(anyString())).thenReturn(new UaaUser("username","password","email","givenname","familyname"));
+            when(userDatabase.retrieveUserById(anyString())).thenReturn(new UaaUser("username", "password", "email", "givenname", "familyname"));
             return userDatabase;
         }
 
@@ -350,7 +394,7 @@ class ResetPasswordControllerTest extends TestClassNullifier {
                                                         TemplateEngine mailTemplateEngine,
                                                         ExpiringCodeStore codeStore,
                                                         UaaUserDatabase userDatabase) {
-            return new ResetPasswordController(resetPasswordService, messageService, mailTemplateEngine, codeStore, userDatabase);
+            return new ResetPasswordController(new IdentityZoneManagerImpl(), resetPasswordService, messageService, mailTemplateEngine, codeStore, userDatabase, "http://localhost");
         }
     }
 
