@@ -1,29 +1,41 @@
 package org.cloudfoundry.identity.uaa.scim.bootstrap;
 
+import org.apache.commons.lang3.tuple.Triple;
 import org.cloudfoundry.identity.uaa.annotations.WithDatabaseContext;
 import org.cloudfoundry.identity.uaa.audit.event.EntityDeletedEvent;
 import org.cloudfoundry.identity.uaa.authentication.manager.ExternalGroupAuthorizationEvent;
 import org.cloudfoundry.identity.uaa.authentication.manager.InvitedUserAuthenticatedEvent;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
+import org.cloudfoundry.identity.uaa.oauth.common.util.RandomValueStringGenerator;
+import org.cloudfoundry.identity.uaa.provider.IdentityProviderProvisioning;
+import org.cloudfoundry.identity.uaa.provider.JdbcIdentityProviderProvisioning;
 import org.cloudfoundry.identity.uaa.resources.jdbc.JdbcPagingListFactory;
 import org.cloudfoundry.identity.uaa.resources.jdbc.LimitSqlAdapterFactory;
+import org.cloudfoundry.identity.uaa.resources.jdbc.SimpleSearchQueryConverter;
 import org.cloudfoundry.identity.uaa.scim.ScimGroup;
 import org.cloudfoundry.identity.uaa.scim.ScimGroupMember;
 import org.cloudfoundry.identity.uaa.scim.ScimUser;
+import org.cloudfoundry.identity.uaa.scim.ScimUserAliasHandler;
 import org.cloudfoundry.identity.uaa.scim.endpoints.ScimUserEndpoints;
 import org.cloudfoundry.identity.uaa.scim.exception.InvalidPasswordException;
 import org.cloudfoundry.identity.uaa.scim.exception.MemberNotFoundException;
 import org.cloudfoundry.identity.uaa.scim.jdbc.JdbcScimGroupMembershipManager;
 import org.cloudfoundry.identity.uaa.scim.jdbc.JdbcScimGroupProvisioning;
 import org.cloudfoundry.identity.uaa.scim.jdbc.JdbcScimUserProvisioning;
+import org.cloudfoundry.identity.uaa.scim.services.ScimUserService;
 import org.cloudfoundry.identity.uaa.security.IsSelfCheck;
 import org.cloudfoundry.identity.uaa.test.TestUtils;
+import org.cloudfoundry.identity.uaa.user.UaaAuthority;
 import org.cloudfoundry.identity.uaa.user.UaaUser;
+import org.cloudfoundry.identity.uaa.user.UaaUserPrototype;
+import org.cloudfoundry.identity.uaa.util.AlphanumericRandomValueStringGenerator;
 import org.cloudfoundry.identity.uaa.util.TimeServiceImpl;
+import org.cloudfoundry.identity.uaa.util.beans.DbUtils;
 import org.cloudfoundry.identity.uaa.zone.IdentityZone;
 import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
+import org.cloudfoundry.identity.uaa.zone.JdbcIdentityZoneProvisioning;
+import org.cloudfoundry.identity.uaa.zone.beans.IdentityZoneManager;
 import org.cloudfoundry.identity.uaa.zone.beans.IdentityZoneManagerImpl;
-import org.hamcrest.collection.IsArrayContainingInAnyOrder;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -34,13 +46,18 @@ import org.springframework.context.ApplicationEvent;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.context.event.ContextRefreshedEvent;
 import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.AuthorityUtils;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.oauth2.common.util.RandomValueStringGenerator;
+import org.springframework.transaction.TransactionStatus;
+import org.springframework.transaction.support.TransactionCallback;
+import org.springframework.transaction.support.TransactionTemplate;
+import org.springframework.util.StringUtils;
 
+import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -54,13 +71,8 @@ import java.util.UUID;
 
 import static java.util.Collections.emptyList;
 import static java.util.Optional.ofNullable;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doAnswer;
@@ -70,6 +82,7 @@ import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @WithDatabaseContext
 class ScimUserBootstrapTests {
@@ -83,17 +96,44 @@ class ScimUserBootstrapTests {
     private JdbcTemplate jdbcTemplate;
 
     @Autowired
+    NamedParameterJdbcTemplate namedJdbcTemplate;
+
+    @Autowired
     private PasswordEncoder passwordEncoder;
+    private ScimUserService scimUserService;
+    private JdbcIdentityZoneProvisioning identityZoneProvisioning;
+    private IdentityZoneManager identityZoneManager;
+    private IdentityProviderProvisioning idpProvisioning;
 
     @BeforeEach
-    void init() {
-        JdbcPagingListFactory pagingListFactory = new JdbcPagingListFactory(jdbcTemplate, LimitSqlAdapterFactory.getLimitSqlAdapter());
-        jdbcScimUserProvisioning = spy(new JdbcScimUserProvisioning(jdbcTemplate, pagingListFactory, passwordEncoder));
-        jdbcScimGroupProvisioning = new JdbcScimGroupProvisioning(jdbcTemplate, pagingListFactory);
-        jdbcScimGroupMembershipManager = new JdbcScimGroupMembershipManager(jdbcTemplate, new TimeServiceImpl(), jdbcScimUserProvisioning, null);
+    void init() throws SQLException {
+        JdbcPagingListFactory pagingListFactory = new JdbcPagingListFactory(namedJdbcTemplate, LimitSqlAdapterFactory.getLimitSqlAdapter());
+        identityZoneManager = new IdentityZoneManagerImpl();
+        identityZoneProvisioning = new JdbcIdentityZoneProvisioning(jdbcTemplate);
+        jdbcScimUserProvisioning = spy(new JdbcScimUserProvisioning(namedJdbcTemplate, pagingListFactory, passwordEncoder,
+                identityZoneManager, identityZoneProvisioning, new SimpleSearchQueryConverter(), new SimpleSearchQueryConverter(), new TimeServiceImpl(), true));
+        DbUtils dbUtils = new DbUtils();
+        jdbcScimGroupProvisioning = new JdbcScimGroupProvisioning(namedJdbcTemplate, pagingListFactory, dbUtils);
+        jdbcScimGroupMembershipManager = new JdbcScimGroupMembershipManager(
+                identityZoneManager, jdbcTemplate, new TimeServiceImpl(), jdbcScimUserProvisioning, null, dbUtils);
         jdbcScimGroupMembershipManager.setScimGroupProvisioning(jdbcScimGroupProvisioning);
+        idpProvisioning = new JdbcIdentityProviderProvisioning(jdbcTemplate);
+        final ScimUserAliasHandler scimUserAliasHandler = new ScimUserAliasHandler(
+                identityZoneProvisioning,
+                jdbcScimUserProvisioning,
+                idpProvisioning,
+                identityZoneManager,
+                false
+        );
+        scimUserService = new ScimUserService(
+                scimUserAliasHandler,
+                jdbcScimUserProvisioning,
+                identityZoneManager,
+                null, // not required since alias is disabled
+                false
+        );
         scimUserEndpoints = new ScimUserEndpoints(
-                new IdentityZoneManagerImpl(),
+                identityZoneManager,
                 new IsSelfCheck(null),
                 jdbcScimUserProvisioning,
                 null,
@@ -102,30 +142,39 @@ class ScimUserBootstrapTests {
                 null,
                 null,
                 null,
+                jdbcScimGroupMembershipManager,
+                scimUserService,
                 null,
-                jdbcScimGroupMembershipManager, 5);
+                null,
+                false,
+                5
+        );
         IdentityZoneHolder.get().getConfig().getUserConfig().setDefaultGroups(emptyList());
     }
 
     @AfterEach
-    void tearDown() {
+    void tearDown() throws SQLException {
         TestUtils.cleanAndSeedDb(jdbcTemplate);
         IdentityZoneHolder.get().getConfig().getUserConfig().setDefaultGroups(emptyList());
     }
 
     @AfterEach
-    void tearDown(@Autowired ApplicationContext applicationContext) {
+    void tearDown(@Autowired ApplicationContext applicationContext) throws SQLException {
         TestUtils.restoreToDefaults(applicationContext);
     }
 
     @Test
-    void canDeleteUsersButOnlyInDefaultZone() throws Exception {
+    void canDeleteUsersButOnlyInDefaultZone() {
         String randomZoneId = "randomZoneId-" + new RandomValueStringGenerator().generate().toLowerCase();
-        canAddUsers(OriginKeys.UAA, IdentityZone.getUaaZoneId(), jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager);
-        canAddUsers(OriginKeys.LDAP, IdentityZone.getUaaZoneId(), jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager);
-        canAddUsers(OriginKeys.UAA, randomZoneId, jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager); //this is just an update of the same two users, zoneId is ignored
+        canAddUsers(OriginKeys.UAA, IdentityZone.getUaaZoneId(), jdbcScimUserProvisioning, jdbcScimGroupProvisioning,
+                jdbcScimGroupMembershipManager, scimUserService);
+        canAddUsers(OriginKeys.LDAP, IdentityZone.getUaaZoneId(), jdbcScimUserProvisioning, jdbcScimGroupProvisioning,
+                jdbcScimGroupMembershipManager, scimUserService);
+        //this is just an update of the same two users, zoneId is ignored
+        canAddUsers(OriginKeys.UAA, randomZoneId, jdbcScimUserProvisioning, jdbcScimGroupProvisioning,
+                jdbcScimGroupMembershipManager, scimUserService);
         List<ScimUser> users = jdbcScimUserProvisioning.retrieveAll(IdentityZone.getUaaZoneId());
-        assertEquals(4, users.size());
+        assertThat(users).hasSize(4);
         reset(jdbcScimUserProvisioning);
         ApplicationEventPublisher publisher = mock(ApplicationEventPublisher.class);
         doAnswer(invocation -> {
@@ -136,134 +185,135 @@ class ScimUserBootstrapTests {
                 .when(publisher).publishEvent(any(EntityDeletedEvent.class));
 
         List<String> usersToDelete = Arrays.asList("joe", "mabel", "non-existent");
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, emptyList(), false, usersToDelete);
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, emptyList(), false, usersToDelete, false);
         bootstrap.setApplicationEventPublisher(publisher);
         bootstrap.afterPropertiesSet();
         bootstrap.onApplicationEvent(mock(ContextRefreshedEvent.class));
         ArgumentCaptor<ApplicationEvent> captor = ArgumentCaptor.forClass(EntityDeletedEvent.class);
         verify(publisher, times(2)).publishEvent(captor.capture());
         List<EntityDeletedEvent<ScimUser>> deleted = new LinkedList(ofNullable(captor.getAllValues()).orElse(emptyList()));
-        assertNotNull(deleted);
-        assertEquals(2, deleted.size());
-        deleted.forEach(event -> assertEquals(OriginKeys.UAA, event.getDeleted().getOrigin()));
-        assertEquals(2, jdbcScimUserProvisioning.retrieveAll(IdentityZone.getUaaZoneId()).size());
+        assertThat(deleted)
+                .isNotNull()
+                .hasSize(2);
+        deleted.forEach(event -> assertThat(event.getDeleted().getOrigin()).isEqualTo(OriginKeys.UAA));
+        assertThat(jdbcScimUserProvisioning.retrieveAll(IdentityZone.getUaaZoneId())).hasSize(2);
     }
 
     @Test
     void slatedForDeleteDoesNotAdd() {
         UaaUser joe = new UaaUser("joe", "password", "joe@test.org", "Joe", "User");
         UaaUser mabel = new UaaUser("mabel", "password", "mabel@blah.com", "Mabel", "User");
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Arrays.asList(joe, mabel), false, Arrays.asList("joe", "mabel"));
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Arrays.asList(joe, mabel), false, Arrays.asList("joe", "mabel"), false);
         bootstrap.afterPropertiesSet();
         String zoneId = IdentityZone.getUaaZoneId();
         verify(jdbcScimUserProvisioning, never()).create(any(), eq(zoneId));
         Collection<ScimUser> users = jdbcScimUserProvisioning.retrieveAll(zoneId);
-        assertEquals(0, users.size());
+        assertThat(users).isEmpty();
     }
 
     @Test
-    void canAddUsers() throws Exception {
-        canAddUsers(OriginKeys.UAA, IdentityZone.getUaaZoneId(), jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager);
+    void canAddUsers() {
+        canAddUsers(OriginKeys.UAA, IdentityZone.getUaaZoneId(), jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, scimUserService);
         Collection<ScimUser> users = jdbcScimUserProvisioning.retrieveAll(IdentityZone.getUaaZoneId());
-        assertEquals(2, users.size());
+        assertThat(users).hasSize(2);
     }
 
     @Test
     void addedUsersAreVerified() {
         UaaUser uaaJoe = new UaaUser("joe", "password", "joe@test.org", "Joe", "User");
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(uaaJoe), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(uaaJoe), false, Collections.emptyList(), false);
 
         bootstrap.afterPropertiesSet();
 
         List<ScimUser> users = jdbcScimUserProvisioning.retrieveAll(IdentityZone.getUaaZoneId());
 
-        ScimUser scimJoe = users.get(0);
-        assertTrue(scimJoe.isVerified());
+        ScimUser scimJoe = users.getFirst();
+        assertThat(scimJoe.isVerified()).isTrue();
     }
 
     @Test
     void canAddUserWithAuthorities() {
         UaaUser joe = new UaaUser("joe", "password", "joe@test.org", "Joe", "User");
         joe = joe.authorities(AuthorityUtils.commaSeparatedStringToAuthorityList("openid,read"));
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
         @SuppressWarnings("unchecked")
         Collection<Map<String, Object>> users = (Collection<Map<String, Object>>) scimUserEndpoints.findUsers("id",
                 "id pr", "id", "ascending", 1, 100).getResources();
-        assertEquals(1, users.size());
+        assertThat(users).hasSize(1);
 
         String id = (String) users.iterator().next().get("id");
         ScimUser user = scimUserEndpoints.getUser(id, new MockHttpServletResponse());
         // uaa.user is always added
-        assertEquals(3, user.getGroups().size());
+        assertThat(user.getGroups()).hasSize(3);
     }
 
     @Test
     void cannotAddUserWithNoPassword() {
         UaaUser joe = new UaaUser("joe", "", "joe@test.org", "Joe", "User", OriginKeys.UAA, null);
         joe = joe.authorities(AuthorityUtils.commaSeparatedStringToAuthorityList("openid,read"));
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), false, Collections.emptyList());
-        assertThrows(InvalidPasswordException.class, bootstrap::afterPropertiesSet);
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), false, Collections.emptyList(), false);
+        assertThatExceptionOfType(InvalidPasswordException.class).isThrownBy(bootstrap::afterPropertiesSet);
     }
 
     @Test
     void noOverrideByDefault() {
         UaaUser joe = new UaaUser("joe", "password", "joe@test.org", "Joe", "User");
         joe = joe.authorities(AuthorityUtils.commaSeparatedStringToAuthorityList("openid,read"));
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
         joe = new UaaUser("joe", "password", "joe@test.org", "Joel", "User");
-        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), false, Collections.emptyList());
+        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
         @SuppressWarnings("unchecked")
         Collection<Map<String, Object>> users = (Collection<Map<String, Object>>) scimUserEndpoints.findUsers("id",
                 "id pr", "id", "ascending", 1, 100).getResources();
-        assertEquals(1, users.size());
+        assertThat(users).hasSize(1);
 
         String id = (String) users.iterator().next().get("id");
         ScimUser user = scimUserEndpoints.getUser(id, new MockHttpServletResponse());
         // uaa.user is always added
-        assertEquals("Joe", user.getGivenName());
+        assertThat(user.getGivenName()).isEqualTo("Joe");
     }
 
     @Test
     void canOverride() {
         UaaUser joe = new UaaUser("joe", "password", "joe@test.org", "Joe", "User");
         joe = joe.authorities(AuthorityUtils.commaSeparatedStringToAuthorityList("openid,read"));
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
         joe = new UaaUser("joe", "password", "joe@test.org", "Joel", "User");
-        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), true, Collections.emptyList());
+        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), true, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
         @SuppressWarnings("unchecked")
         Collection<Map<String, Object>> users = (Collection<Map<String, Object>>) scimUserEndpoints.findUsers("id",
                 "id pr", "id", "ascending", 1, 100).getResources();
-        assertEquals(1, users.size());
+        assertThat(users).hasSize(1);
 
         String id = (String) users.iterator().next().get("id");
         ScimUser user = scimUserEndpoints.getUser(id, new MockHttpServletResponse());
         // uaa.user is always added
-        assertEquals("Joel", user.getGivenName());
+        assertThat(user.getGivenName()).isEqualTo("Joel");
     }
 
     @Test
     void canOverrideAuthorities() {
         UaaUser joe = new UaaUser("joe", "password", "joe@test.org", "Joe", "User");
         joe = joe.authorities(AuthorityUtils.commaSeparatedStringToAuthorityList("openid,read"));
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
         joe = joe.authorities(AuthorityUtils.commaSeparatedStringToAuthorityList("openid,read,write"));
-        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), true, Collections.emptyList());
+        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), true, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
         @SuppressWarnings("unchecked")
         Collection<Map<String, Object>> users = (Collection<Map<String, Object>>) scimUserEndpoints.findUsers("id",
                 "id pr", "id", "ascending", 1, 100).getResources();
-        assertEquals(1, users.size());
+        assertThat(users).hasSize(1);
 
         String id = (String) users.iterator().next().get("id");
         ScimUser user = scimUserEndpoints.getUser(id, new MockHttpServletResponse());
         // uaa.user is always added
-        assertEquals(4, user.getGroups().size());
+        assertThat(user.getGroups()).hasSize(4);
     }
 
     @Test
@@ -272,74 +322,287 @@ class ScimUserBootstrapTests {
         String joeUserId = "joe" + randomValueStringGenerator.generate();
         UaaUser joe = new UaaUser(joeUserId, "password", "joe@test.org", "Joe", "User");
         joe = joe.authorities(AuthorityUtils.commaSeparatedStringToAuthorityList("openid,read"));
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
         joe = joe.authorities(AuthorityUtils.commaSeparatedStringToAuthorityList("openid"));
         System.err.println(jdbcTemplate.queryForList("SELECT * FROM group_membership"));
-        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), true, Collections.emptyList());
+        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), true, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
 
         List<ScimUser> users = jdbcScimUserProvisioning.query("userName eq \"" + joeUserId + "\"", IdentityZone.getUaaZoneId());
-        assertEquals(1, users.size());
+        assertThat(users).hasSize(1);
 
-        ScimUser user = scimUserEndpoints.getUser(users.get(0).getId(), new MockHttpServletResponse());
+        ScimUser user = scimUserEndpoints.getUser(users.getFirst().getId(), new MockHttpServletResponse());
         // uaa.user is always added
-        assertEquals(2, user.getGroups().size());
+        assertThat(user.getGroups()).hasSize(2);
     }
 
     @Test
     void canUpdateUsers() {
         UaaUser joe = new UaaUser("joe", "password", "joe@test.org", "Joe", "User");
         joe = joe.modifyOrigin(OriginKeys.UAA);
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
 
-        String passwordHash = jdbcTemplate.queryForObject("select password from users where username='joe'", new Object[0], String.class);
+        String passwordHash = jdbcTemplate.queryForObject("select password from users where username='joe'", String.class, new Object[0]);
 
         joe = new UaaUser("joe", "new", "joe@test.org", "Joe", "Bloggs");
         joe = joe.modifyOrigin(OriginKeys.UAA);
-        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), true, Collections.emptyList());
+        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), true, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
         Collection<ScimUser> users = jdbcScimUserProvisioning.retrieveAll(IdentityZone.getUaaZoneId());
-        assertEquals(1, users.size());
-        assertEquals("Bloggs", users.iterator().next().getFamilyName());
-        assertNotEquals(passwordHash, jdbcTemplate.queryForObject("select password from users where username='joe'", new Object[0], String.class));
+        assertThat(users).hasSize(1);
+        assertThat(users.iterator().next().getFamilyName()).isEqualTo("Bloggs");
+        assertThat(jdbcTemplate.queryForObject("select password from users where username='joe'", String.class, new Object[0])).isNotEqualTo(passwordHash);
 
-        passwordHash = jdbcTemplate.queryForObject("select password from users where username='joe'", new Object[0], String.class);
+        passwordHash = jdbcTemplate.queryForObject("select password from users where username='joe'", String.class, new Object[0]);
         bootstrap.afterPropertiesSet();
-        assertEquals(passwordHash, jdbcTemplate.queryForObject("select password from users where username='joe'", new Object[0], String.class));
+        assertThat(jdbcTemplate.queryForObject("select password from users where username='joe'", String.class, new Object[0])).isEqualTo(passwordHash);
+    }
+
+    @Test
+    void shouldPropagateAliasPropertiesOfExistingUserDuringUpdate() {
+        // arrange custom zone exists
+        final String customZoneId = new AlphanumericRandomValueStringGenerator(8).generate();
+        createCustomZone(customZoneId);
+
+        // create a user with alias
+        final String originKey = new AlphanumericRandomValueStringGenerator(8).generate();
+        final String userName = "john.doe-" + new AlphanumericRandomValueStringGenerator(8).generate();
+        final String givenName = "John";
+        final String familyName = "Doe";
+        final String emailAddress = "john.doe@example.com";
+        final Triple<String, String, ScimUser> userIdsAndOriginalUser = createUserWithAlias(customZoneId, originKey,
+                emailAddress, userName, givenName, familyName);
+        final String originalUserId = userIdsAndOriginalUser.getLeft();
+        final String aliasUserId = userIdsAndOriginalUser.getMiddle();
+
+        // create and emit event that contains the user with changed fields
+        final String externalId = new AlphanumericRandomValueStringGenerator(8).generate();
+        final String phoneNumber = "12345";
+        final UaaUserPrototype userPrototype = new UaaUserPrototype()
+                .withVerified(true)
+                .withUsername(userName)
+                .withPassword("")
+                .withEmail(emailAddress)
+                .withAuthorities(UaaAuthority.USER_AUTHORITIES)
+                .withGivenName(givenName)
+                .withFamilyName(familyName)
+                .withCreated(new Date())
+                .withModified(new Date())
+                .withOrigin(originKey)
+                .withExternalId(externalId) // changed field
+                .withZoneId(IdentityZone.getUaaZoneId())
+                .withPhoneNumber(phoneNumber); // changed field
+        final UaaUser uaaUser = new UaaUser(userPrototype);
+
+        final ExternalGroupAuthorizationEvent event = new ExternalGroupAuthorizationEvent(uaaUser, true, Collections.emptyList(), true);
+        final ScimUserBootstrap bootstrap = buildScimUserBootstrapWithAliasEnabled();
+        bootstrap.onApplicationEvent(event);
+
+        // should update both users and the alias reference should stay intact
+        final ScimUser originalUserAfterEvent = jdbcScimUserProvisioning.retrieve(originalUserId, IdentityZone.getUaaZoneId());
+        assertThat(originalUserAfterEvent.getAliasId()).isEqualTo(aliasUserId);
+        assertThat(originalUserAfterEvent.getAliasZid()).isEqualTo(customZoneId);
+        assertThat(originalUserAfterEvent.getExternalId()).isEqualTo(externalId);
+        assertThat(originalUserAfterEvent.getPhoneNumbers().getFirst().getValue()).isEqualTo(phoneNumber);
+
+        final ScimUser aliasUserAfterEvent = jdbcScimUserProvisioning.retrieve(aliasUserId, customZoneId);
+        assertThat(aliasUserAfterEvent.getAliasId()).isEqualTo(originalUserId);
+        assertThat(aliasUserAfterEvent.getAliasZid()).isEqualTo(IdentityZone.getUaaZoneId());
+        assertThat(aliasUserAfterEvent.getExternalId()).isEqualTo(externalId);
+        assertThat(aliasUserAfterEvent.getPhoneNumbers().getFirst().getValue()).isEqualTo(phoneNumber);
+    }
+
+    @Test
+    void shouldOnlyUpdateOriginalUser_WhenUserHasAliasButAliasEntitiesDisabled() {
+        // arrange custom zone exists
+        final String customZoneId = new AlphanumericRandomValueStringGenerator(8).generate();
+        createCustomZone(customZoneId);
+
+        // create a user with alias
+        final String originKey = new AlphanumericRandomValueStringGenerator(8).generate();
+        final String userName = "john.doe-" + new AlphanumericRandomValueStringGenerator(8).generate();
+        final String givenName = "John";
+        final String familyName = "Doe";
+        final String emailAddress = "john.doe@example.com";
+        final Triple<String, String, ScimUser> userIdsAndOriginalUser = createUserWithAlias(customZoneId, originKey,
+                emailAddress, userName, givenName, familyName);
+        final String originalUserId = userIdsAndOriginalUser.getLeft();
+        final String aliasUserId = userIdsAndOriginalUser.getMiddle();
+        final ScimUser originalUser = userIdsAndOriginalUser.getRight();
+
+        // create and emit event that contains the user with changed fields
+        final String externalId = new AlphanumericRandomValueStringGenerator(8).generate();
+        final String phoneNumber = "12345";
+        final UaaUserPrototype userPrototype = new UaaUserPrototype()
+                .withVerified(true)
+                .withUsername(userName)
+                .withPassword("")
+                .withEmail(emailAddress)
+                .withAuthorities(UaaAuthority.USER_AUTHORITIES)
+                .withGivenName(givenName)
+                .withFamilyName(familyName)
+                .withCreated(new Date())
+                .withModified(new Date())
+                .withOrigin(originKey)
+                .withExternalId(externalId) // changed field
+                .withZoneId(IdentityZone.getUaaZoneId())
+                .withPhoneNumber(phoneNumber); // changed field
+        final UaaUser uaaUser = new UaaUser(userPrototype);
+
+        final ExternalGroupAuthorizationEvent event = new ExternalGroupAuthorizationEvent(uaaUser, true, Collections.emptyList(), true);
+        final ScimUserBootstrap bootstrapAliasDisabled = new ScimUserBootstrap(
+                jdbcScimUserProvisioning,
+                scimUserService,
+                jdbcScimGroupProvisioning,
+                jdbcScimGroupMembershipManager,
+                identityZoneManager,
+                Collections.emptyList(),
+                false,
+                Collections.emptyList(),
+                false
+        );
+        bootstrapAliasDisabled.onApplicationEvent(event);
+
+        // should only update the original user and the alias reference should stay intact
+        final ScimUser originalUserAfterEvent = jdbcScimUserProvisioning.retrieve(originalUserId, IdentityZone.getUaaZoneId());
+        assertThat(originalUserAfterEvent.getAliasId()).isEqualTo(aliasUserId);
+        assertThat(originalUserAfterEvent.getAliasZid()).isEqualTo(customZoneId);
+        assertThat(originalUserAfterEvent.getExternalId()).isEqualTo(externalId);
+        assertThat(originalUserAfterEvent.getPhoneNumbers().getFirst().getValue()).isEqualTo(phoneNumber);
+
+        assertThat(originalUserAfterEvent.getExternalId()).isNotEqualTo(originalUser.getExternalId());
+        assertThat(originalUserAfterEvent.getPhoneNumbers()).isNotEqualTo(originalUser.getPhoneNumbers());
+
+        final ScimUser aliasUserAfterEvent = jdbcScimUserProvisioning.retrieve(aliasUserId, customZoneId);
+        assertThat(aliasUserAfterEvent.getAliasId()).isEqualTo(originalUserId);
+        assertThat(aliasUserAfterEvent.getAliasZid()).isEqualTo(IdentityZone.getUaaZoneId());
+        assertThat(aliasUserAfterEvent.getExternalId()).isEqualTo(originalUser.getExternalId()); // should be left unchanged
+        assertThat(aliasUserAfterEvent.getPhoneNumbers()).isEqualTo(originalUser.getPhoneNumbers()); // should be left unchanged
+    }
+
+    private void createCustomZone(final String customZoneId) {
+        final IdentityZone customZone = new IdentityZone();
+        customZone.setId(customZoneId);
+        customZone.setSubdomain(customZoneId);
+        customZone.setName(customZoneId);
+        identityZoneProvisioning.create(customZone);
+    }
+
+    /**
+     * @return a triple of the original user's ID, the alias user's ID and the original user
+     */
+    private Triple<String, String, ScimUser> createUserWithAlias(
+            final String customZoneId,
+            final String originKey,
+            final String emailAddress,
+            final String userName,
+            final String givenName,
+            final String familyName
+    ) {
+        // arrange that a user with alias exists
+        final ScimUser scimUser = new ScimUser(null, userName, givenName, familyName);
+        final ScimUser.Email email = new ScimUser.Email();
+        email.setPrimary(true);
+        email.setValue(emailAddress);
+        scimUser.setEmails(Collections.singletonList(email));
+        scimUser.setOrigin(originKey);
+        scimUser.setZoneId(IdentityZone.getUaaZoneId());
+        final ScimUser createdOriginalUser = jdbcScimUserProvisioning.createUser(scimUser, "", IdentityZone.getUaaZoneId());
+        final String originalUserId = createdOriginalUser.getId();
+        assertThat(StringUtils.hasText(originalUserId)).isTrue();
+
+        // create an alias of the user in the custom zone
+        createdOriginalUser.setId(null);
+        createdOriginalUser.setZoneId(customZoneId);
+        createdOriginalUser.setAliasId(originalUserId);
+        createdOriginalUser.setAliasZid(IdentityZone.getUaaZoneId());
+        final ScimUser createdAliasUser = jdbcScimUserProvisioning.createUser(createdOriginalUser, "", customZoneId);
+        final String aliasUserId = createdAliasUser.getId();
+        assertThat(StringUtils.hasText(aliasUserId)).isTrue();
+
+        // update the original user to point ot the alias user
+        createdOriginalUser.setId(originalUserId);
+        createdOriginalUser.setZoneId(IdentityZone.getUaaZoneId());
+        createdOriginalUser.setAliasId(aliasUserId);
+        createdOriginalUser.setAliasZid(customZoneId);
+        final ScimUser originalUser = jdbcScimUserProvisioning.update(originalUserId, createdOriginalUser, IdentityZone.getUaaZoneId());
+
+        return Triple.of(originalUserId, aliasUserId, originalUser);
+    }
+
+    private ScimUserBootstrap buildScimUserBootstrapWithAliasEnabled() {
+        final ScimUserService scimUserServiceAliasEnabled = buildScimUserServiceAliasEnabled();
+        return new ScimUserBootstrap(
+                jdbcScimUserProvisioning,
+                scimUserServiceAliasEnabled,
+                jdbcScimGroupProvisioning,
+                jdbcScimGroupMembershipManager,
+                identityZoneManager,
+                Collections.emptyList(),
+                false,
+                Collections.emptyList(),
+                true
+        );
+    }
+
+    private ScimUserService buildScimUserServiceAliasEnabled() {
+        final ScimUserAliasHandler aliasHandlerAliasEnabled = buildScimUserAliasHandlerAliasEnabled();
+        final TransactionTemplate txTemplate = mock(TransactionTemplate.class);
+        when(txTemplate.execute(any())).then(invocationOnMock -> {
+            final TransactionCallback<?> action = invocationOnMock.getArgument(0);
+            return action.doInTransaction(mock(TransactionStatus.class));
+        });
+        return new ScimUserService(
+                aliasHandlerAliasEnabled,
+                jdbcScimUserProvisioning,
+                identityZoneManager,
+                txTemplate,
+                true
+        );
+    }
+
+    private ScimUserAliasHandler buildScimUserAliasHandlerAliasEnabled() {
+        return new ScimUserAliasHandler(
+                identityZoneProvisioning,
+                jdbcScimUserProvisioning,
+                idpProvisioning,
+                identityZoneManager,
+                true
+        );
     }
 
     @Test
     void unsuccessfulAttemptToUpdateUsersNotFatal() {
         UaaUser joe = new UaaUser("joe", "password", "joe@test.org", "Joe", "User");
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
         joe = new UaaUser("joe", "new", "joe@test.org", "Joe", "Bloggs");
-        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), false, Collections.emptyList());
+        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
         Collection<ScimUser> users = jdbcScimUserProvisioning.retrieveAll(IdentityZone.getUaaZoneId());
-        assertEquals(1, users.size());
-        assertEquals("User", users.iterator().next().getFamilyName());
+        assertThat(users).hasSize(1);
+        assertThat(users.iterator().next().getFamilyName()).isEqualTo("User");
     }
 
     @Test
     void updateUserWithEmptyPasswordDoesNotChangePassword() {
         UaaUser joe = new UaaUser("joe", "password", "joe@test.org", "Joe", "User");
         joe = joe.modifyOrigin(OriginKeys.UAA);
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
 
-        String passwordHash = jdbcTemplate.queryForObject("select password from users where username='joe'", new Object[0], String.class);
+        String passwordHash = jdbcTemplate.queryForObject("select password from users where username='joe'", String.class, new Object[0]);
 
         joe = new UaaUser("joe", "", "joe@test.org", "Joe", "Bloggs");
         joe = joe.modifyOrigin(OriginKeys.UAA);
-        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(joe), true, Collections.emptyList());
+        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(joe), true, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
         Collection<ScimUser> users = jdbcScimUserProvisioning.retrieveAll(IdentityZone.getUaaZoneId());
-        assertEquals(1, users.size());
-        assertEquals("Bloggs", users.iterator().next().getFamilyName());
-        assertEquals(passwordHash, jdbcTemplate.queryForObject("select password from users where username='joe'", new Object[0], String.class));
+        assertThat(users).hasSize(1);
+        assertThat(users.iterator().next().getFamilyName()).isEqualTo("Bloggs");
+        assertThat(jdbcTemplate.queryForObject("select password from users where username='joe'", String.class, new Object[0])).isEqualTo(passwordHash);
     }
 
     @Test
@@ -353,7 +616,7 @@ class ScimUserBootstrapTests {
 
         String username = new RandomValueStringGenerator().generate().toLowerCase();
         UaaUser user = getUaaUser(new String[0], origin, email, firstName, lastName, password, externalId, "not-used-id", username);
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(user), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(user), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
 
         ScimUser existingUser = jdbcScimUserProvisioning.retrieveAll(IdentityZone.getUaaZoneId())
@@ -370,7 +633,7 @@ class ScimUserBootstrapTests {
 
         ScimUser modifiedUser = jdbcScimUserProvisioning.retrieve(userId, IdentityZone.getUaaZoneId());
 
-        assertTrue(modifiedUser.isVerified());
+        assertThat(modifiedUser.isVerified()).isTrue();
     }
 
     @Test
@@ -385,7 +648,7 @@ class ScimUserBootstrapTests {
 
         String username = new RandomValueStringGenerator().generate().toLowerCase();
         UaaUser user = getUaaUser(new String[0], origin, email, firstName, lastName, password, externalId, "not-used-id", username);
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(user), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(user), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
 
         ScimUser existingUser = jdbcScimUserProvisioning.retrieveAll(IdentityZone.getUaaZoneId())
@@ -402,23 +665,62 @@ class ScimUserBootstrapTests {
 
         ScimUser modifiedUser = jdbcScimUserProvisioning.retrieve(userId, IdentityZone.getUaaZoneId());
 
-        assertFalse(modifiedUser.isVerified());
+        assertThat(modifiedUser.isVerified()).isFalse();
     }
 
     @Test
-    void canAddNonExistentGroupThroughEvent() throws Exception {
-        nonExistentGroupThroughEvent(true, jdbcTemplate, jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager);
+    void canAddNonExistentGroupThroughEvent() {
+        nonExistentGroupThroughEvent(true, jdbcTemplate, jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, scimUserService);
     }
 
     @Test
-    void doNotAddNonExistentUsers() throws Exception {
-        nonExistentGroupThroughEvent(false, jdbcTemplate, jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager);
+    void doNotAddNonExistentUsers() {
+        nonExistentGroupThroughEvent(false, jdbcTemplate, jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, scimUserService);
+    }
+
+    @Test
+    void addNonExistentGroupWithQuote() {
+        String[] externalAuthorities = new String[]{"\"extTest1", "extTest2\"", "\"extTest3\""};
+        String[] userAuthorities = new String[]{};
+        String origin = "testOrigin";
+        addIdentityProvider(jdbcTemplate, origin);
+        String email = "test@test.org";
+        String firstName = "FirstName";
+        String lastName = "LastName";
+        String password = "testPassword";
+        String externalId = null;
+        String userId = new RandomValueStringGenerator().generate();
+        String username = new RandomValueStringGenerator().generate();
+        UaaUser user = getUaaUser(new String[] {}, origin, email, firstName, lastName, password, externalId, userId, username);
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(
+                jdbcScimUserProvisioning,
+                scimUserService,
+                jdbcScimGroupProvisioning,
+                jdbcScimGroupMembershipManager,
+                new IdentityZoneManagerImpl(),
+                Collections.singletonList(user),
+                false,
+                Collections.emptyList(),
+                false
+        );
+        bootstrap.afterPropertiesSet();
+
+        List<ScimUser> users = jdbcScimUserProvisioning.query("userName eq \"" + username + "\" and origin eq \"" + origin + "\"", IdentityZone.getUaaZoneId());
+        assertThat(users).hasSize(1);
+        userId = users.getFirst().getId();
+
+        user = getUaaUser(userAuthorities, origin, email, firstName, lastName, password, externalId, userId, username);
+        bootstrap.onApplicationEvent(new ExternalGroupAuthorizationEvent(user, false, getAuthorities(externalAuthorities), true));
+
+        users = jdbcScimUserProvisioning.query("userName eq \"" + username + "\" and origin eq \"" + origin + "\"", IdentityZone.getUaaZoneId());
+        assertThat(users).hasSize(1);
+        ScimUser created = users.getFirst();
+        validateAuthoritiesCreated(externalAuthorities, userAuthorities, origin, created, jdbcScimGroupMembershipManager);
     }
 
     @Test
     void canUpdateEmailThroughEvent() {
         String[] externalAuthorities = new String[]{"extTest1", "extTest2", "extTest3"};
-        String[] userAuthorities = new String[]{"usrTest1", "usrTest2", "usrTest3"};
         String origin = "testOrigin";
         addIdentityProvider(jdbcTemplate, origin);
         String email = "test@test.org";
@@ -429,41 +731,38 @@ class ScimUserBootstrapTests {
         String externalId = null;
         String userId = new RandomValueStringGenerator().generate();
         String username = new RandomValueStringGenerator().generate();
-        UaaUser user = getUaaUser(userAuthorities, origin, email, firstName, lastName, password, externalId, userId, username);
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(user), false, Collections.emptyList());
+        UaaUser user = getUaaUser(externalAuthorities, origin, email, firstName, lastName, password, externalId, userId, username);
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(user), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
 
         List<ScimUser> users = jdbcScimUserProvisioning.query("userName eq \"" + username + "\" and origin eq \"" + origin + "\"", IdentityZone.getUaaZoneId());
-        assertEquals(1, users.size());
-        userId = users.get(0).getId();
-        user = getUaaUser(userAuthorities, origin, newEmail, firstName, lastName, password, externalId, userId, username);
+        assertThat(users).hasSize(1);
+        userId = users.getFirst().getId();
+        user = getUaaUser(externalAuthorities, origin, newEmail, firstName, lastName, password, externalId, userId, username);
 
         bootstrap.onApplicationEvent(new ExternalGroupAuthorizationEvent(user, true, getAuthorities(externalAuthorities), true));
         users = jdbcScimUserProvisioning.query("userName eq \"" + username + "\" and origin eq \"" + origin + "\"", IdentityZone.getUaaZoneId());
-        assertEquals(1, users.size());
-        ScimUser created = users.get(0);
-        validateAuthoritiesCreated(externalAuthorities, userAuthorities, origin, created, jdbcScimGroupMembershipManager);
-        assertEquals(newEmail, created.getPrimaryEmail());
+        assertThat(users).hasSize(1);
+        ScimUser created = users.getFirst();
+        assertThat(created.getPrimaryEmail()).isEqualTo(newEmail);
 
         user = user.modifyEmail("test123@test.org");
         //Ensure email doesn't get updated if event instructs not to update.
         bootstrap.onApplicationEvent(new ExternalGroupAuthorizationEvent(user, false, getAuthorities(externalAuthorities), true));
         users = jdbcScimUserProvisioning.query("userName eq \"" + username + "\" and origin eq \"" + origin + "\"", IdentityZone.getUaaZoneId());
-        assertEquals(1, users.size());
-        created = users.get(0);
-        validateAuthoritiesCreated(externalAuthorities, userAuthorities, origin, created, jdbcScimGroupMembershipManager);
-        assertEquals(newEmail, created.getPrimaryEmail());
+        assertThat(users).hasSize(1);
+        created = users.getFirst();
+        assertThat(created.getPrimaryEmail()).isEqualTo(newEmail);
 
         bootstrap.onApplicationEvent(new ExternalGroupAuthorizationEvent(user, true, getAuthorities(externalAuthorities), true));
         users = jdbcScimUserProvisioning.query("userName eq \"" + username + "\" and origin eq \"" + origin + "\"", IdentityZone.getUaaZoneId());
-        assertEquals(1, users.size());
-        created = users.get(0);
-        validateAuthoritiesCreated(externalAuthorities, userAuthorities, origin, created, jdbcScimGroupMembershipManager);
-        assertEquals("test123@test.org", created.getPrimaryEmail());
+        assertThat(users).hasSize(1);
+        created = users.getFirst();
+        assertThat(created.getPrimaryEmail()).isEqualTo("test123@test.org");
     }
 
     @Test
-    void testGroupsFromEventAreMadeUnique() {
+    void groupsFromEventAreMadeUnique() {
         String[] externalAuthorities = new String[]{"extTest1", "extTest2", "extTest3"};
         String[] userAuthorities = new String[]{"usrTest1", "usrTest2", "usrTest3"};
         String origin = "testOrigin";
@@ -478,22 +777,22 @@ class ScimUserBootstrapTests {
         String username = new RandomValueStringGenerator().generate();
         UaaUser user = getUaaUser(userAuthorities, origin, email, firstName, lastName, password, externalId, userId, username);
         JdbcScimGroupMembershipManager spy = spy(jdbcScimGroupMembershipManager);
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, spy, Collections.singletonList(user), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, spy, identityZoneManager, Collections.singletonList(user), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
 
         List<ScimUser> users = jdbcScimUserProvisioning.query("userName eq \"" + username + "\" and origin eq \"" + origin + "\"", IdentityZone.getUaaZoneId());
-        assertEquals(1, users.size());
-        userId = users.get(0).getId();
+        assertThat(users).hasSize(1);
+        userId = users.getFirst().getId();
         user = getUaaUser(userAuthorities, origin, newEmail, firstName, lastName, password, externalId, userId, username);
 
         List<GrantedAuthority> authorities = getAuthorities(externalAuthorities);
         authorities.addAll(getAuthorities(externalAuthorities));
-        assertEquals(2*externalAuthorities.length, authorities.size());
+        assertThat(authorities).hasSize(2 * externalAuthorities.length);
         verify(spy, times(externalAuthorities.length)).addMember(any(), any(), any());
 
         bootstrap.onApplicationEvent(new ExternalGroupAuthorizationEvent(user, true, authorities, true));
 
-        verify(spy, times(externalAuthorities.length*2)).addMember(any(), any(), any());
+        verify(spy, times(externalAuthorities.length * 2)).addMember(any(), any(), any());
     }
 
     @Test
@@ -508,13 +807,13 @@ class ScimUserBootstrapTests {
         String userId = new RandomValueStringGenerator().generate();
         String username = new RandomValueStringGenerator().generate();
         UaaUser user = getUaaUser(new String[0], origin, email, firstName, lastName, password, externalId, userId, username);
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(user), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(user), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
 
         addIdentityProvider(jdbcTemplate, "newOrigin");
-        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Arrays.asList(user, user.modifySource("newOrigin", "")), false, Collections.emptyList());
+        bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Arrays.asList(user, user.modifySource("newOrigin", "")), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
-        assertEquals(2, jdbcScimUserProvisioning.retrieveAll(IdentityZone.getUaaZoneId()).size());
+        assertThat(jdbcScimUserProvisioning.retrieveAll(IdentityZone.getUaaZoneId())).hasSize(2);
     }
 
     @Test
@@ -534,17 +833,17 @@ class ScimUserBootstrapTests {
         String userId = new RandomValueStringGenerator().generate();
         String username = new RandomValueStringGenerator().generate();
         UaaUser user = getUaaUser(userAuthorities, origin, email, firstName, lastName, password, externalId, userId, username);
-        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, Collections.singletonList(user), false, Collections.emptyList());
+        ScimUserBootstrap bootstrap = new ScimUserBootstrap(jdbcScimUserProvisioning, scimUserService, jdbcScimGroupProvisioning, jdbcScimGroupMembershipManager, identityZoneManager, Collections.singletonList(user), false, Collections.emptyList(), false);
         bootstrap.afterPropertiesSet();
 
         List<ScimUser> scimUsers = jdbcScimUserProvisioning.query("userName eq \"" + username + "\" and origin eq \"" + origin + "\"", IdentityZone.getUaaZoneId());
-        assertEquals(1, scimUsers.size());
-        ScimUser scimUser = scimUsers.get(0);
+        assertThat(scimUsers).hasSize(1);
+        ScimUser scimUser = scimUsers.getFirst();
         ScimGroupMember member = new ScimGroupMember<>(scimUser);
         user = getUaaUser(userAuthorities, origin, email, firstName, lastName, password, externalId, member.getMemberId(), username);
         for (int i = 0; i < numgroups; i++) {
             jdbcScimGroupProvisioning.create(new ScimGroup("group" + i, "group" + i, IdentityZone.getUaaZoneId()), IdentityZone.getUaaZoneId());
-            String gid = jdbcScimGroupProvisioning.query("displayName eq \"group" + i + "\"", IdentityZone.getUaaZoneId()).get(0).getId();
+            String gid = jdbcScimGroupProvisioning.query("displayName eq \"group" + i + "\"", IdentityZone.getUaaZoneId()).getFirst().getId();
             jdbcScimGroupMembershipManager.addMember(gid, member, IdentityZone.getUaaZoneId());
         }
 
@@ -574,16 +873,22 @@ class ScimUserBootstrapTests {
             String zoneId,
             JdbcScimUserProvisioning jdbcScimUserProvisioning,
             JdbcScimGroupProvisioning jdbcScimGroupProvisioning,
-            JdbcScimGroupMembershipManager jdbcScimGroupMembershipManager) {
+            JdbcScimGroupMembershipManager jdbcScimGroupMembershipManager,
+            ScimUserService scimUserService
+    ) {
         UaaUser joe = new UaaUser("joe", "password", "joe@test.org", "Joe", "User", origin, zoneId);
         UaaUser mabel = new UaaUser("mabel", "password", "mabel@blah.com", "Mabel", "User", origin, zoneId);
         ScimUserBootstrap bootstrap = new ScimUserBootstrap(
                 jdbcScimUserProvisioning,
+                scimUserService,
                 jdbcScimGroupProvisioning,
                 jdbcScimGroupMembershipManager,
+                new IdentityZoneManagerImpl(),
                 Arrays.asList(joe, mabel),
                 false,
-                Collections.emptyList());
+                Collections.emptyList(),
+                false
+        );
         bootstrap.afterPropertiesSet();
     }
 
@@ -592,7 +897,9 @@ class ScimUserBootstrapTests {
             final JdbcTemplate jdbcTemplate,
             final JdbcScimUserProvisioning jdbcScimUserProvisioning,
             final JdbcScimGroupProvisioning jdbcScimGroupProvisioning,
-            final JdbcScimGroupMembershipManager jdbcScimGroupMembershipManager) {
+            final JdbcScimGroupMembershipManager jdbcScimGroupMembershipManager,
+            final ScimUserService scimUserService
+    ) {
         String[] externalAuthorities = new String[]{"extTest1", "extTest2", "extTest3"};
         String[] userAuthorities = new String[]{"usrTest1", "usrTest2", "usrTest3"};
         String origin = "testOrigin";
@@ -604,25 +911,42 @@ class ScimUserBootstrapTests {
         String externalId = null;
         String userId = new RandomValueStringGenerator().generate();
         String username = new RandomValueStringGenerator().generate();
-        UaaUser user = getUaaUser(userAuthorities, origin, email, firstName, lastName, password, externalId, userId, username);
+        UaaUser user = getUaaUser(new String[]{}, origin, email, firstName, lastName, password, externalId, userId, username);
         ScimUserBootstrap bootstrap = new ScimUserBootstrap(
                 jdbcScimUserProvisioning,
+                scimUserService,
                 jdbcScimGroupProvisioning,
                 jdbcScimGroupMembershipManager,
+                new IdentityZoneManagerImpl(),
                 Collections.singletonList(user),
                 false,
-                Collections.emptyList());
+                Collections.emptyList(),
+                false
+        );
         bootstrap.afterPropertiesSet();
 
         List<ScimUser> users = jdbcScimUserProvisioning.query("userName eq \"" + username + "\" and origin eq \"" + origin + "\"", IdentityZone.getUaaZoneId());
-        assertEquals(1, users.size());
-        userId = users.get(0).getId();
+        assertThat(users).hasSize(1);
+        userId = users.getFirst().getId();
+
+        // add all the user authorities on the uaa origin
+        for (String userAuthority : userAuthorities) {
+            ScimGroup group = new ScimGroup(null, userAuthority, IdentityZoneHolder.get().getId());
+            group = jdbcScimGroupProvisioning.createOrGet(group, IdentityZoneHolder.get().getId());
+            ScimGroupMember groupMember = new ScimGroupMember(userId);
+            groupMember.setOrigin(OriginKeys.UAA);
+            jdbcScimGroupMembershipManager.addMember(group.getId(), groupMember, IdentityZoneHolder.get().getId());
+        }
+
+        ScimUser created = users.getFirst();
+        validateAuthoritiesCreated(new String[0], userAuthorities, origin, created, jdbcScimGroupMembershipManager);
+
         user = getUaaUser(userAuthorities, origin, email, firstName, lastName, password, externalId, userId, username);
         bootstrap.onApplicationEvent(new ExternalGroupAuthorizationEvent(user, false, getAuthorities(externalAuthorities), add));
 
         users = jdbcScimUserProvisioning.query("userName eq \"" + username + "\" and origin eq \"" + origin + "\"", IdentityZone.getUaaZoneId());
-        assertEquals(1, users.size());
-        ScimUser created = users.get(0);
+        assertThat(users).hasSize(1);
+        created = users.getFirst();
         validateAuthoritiesCreated(add ? externalAuthorities : new String[0], userAuthorities, origin, created, jdbcScimGroupMembershipManager);
 
         externalAuthorities = new String[]{"extTest1", "extTest2"};
@@ -639,15 +963,15 @@ class ScimUserBootstrapTests {
         Set<ScimGroup> groups = jdbcScimGroupMembershipManager.getGroupsWithMember(created.getId(), true, IdentityZone.getUaaZoneId());
         String[] expected = merge(externalAuthorities, userAuthorities);
         String[] actual = getGroupNames(groups);
-        assertThat(actual, IsArrayContainingInAnyOrder.arrayContainingInAnyOrder(expected));
+        assertThat(actual).containsExactlyInAnyOrder(expected);
 
         List<String> external = Arrays.asList(externalAuthorities);
         for (ScimGroup g : groups) {
             ScimGroupMember m = jdbcScimGroupMembershipManager.getMemberById(g.getId(), created.getId(), IdentityZone.getUaaZoneId());
             if (external.contains(g.getDisplayName())) {
-                assertEquals(origin, m.getOrigin(), "Expecting relationship for Group[" + g.getDisplayName() + "] be of different origin.");
+                assertThat(m.getOrigin()).as("Expecting relationship for Group[" + g.getDisplayName() + "] be of different origin.").isEqualTo(origin);
             } else {
-                assertEquals(OriginKeys.UAA, m.getOrigin(), "Expecting relationship for Group[" + g.getDisplayName() + "] be of different origin.");
+                assertThat(m.getOrigin()).as("Expecting relationship for Group[" + g.getDisplayName() + "] be of different origin.").isEqualTo(OriginKeys.UAA);
             }
         }
     }
@@ -683,7 +1007,7 @@ class ScimUserBootstrapTests {
 
     private static class AuthEventRunnable implements Runnable {
 
-        static volatile AssertionError failure = null;
+        static volatile AssertionError failure;
         private final int iterations = 50;
 
         private final ExternalGroupAuthorizationEvent externalGroupAuthorizationEvent;
@@ -697,7 +1021,9 @@ class ScimUserBootstrapTests {
         @Override
         public void run() {
             for (int i = 0; i < iterations; i++) {
-                if (failure != null) break;
+                if (failure != null) {
+                    break;
+                }
                 try {
                     bootstrap.onApplicationEvent(externalGroupAuthorizationEvent);
                 } catch (MemberNotFoundException e) {
