@@ -4,9 +4,9 @@ import org.cloudfoundry.identity.uaa.codestore.ExpiringCode;
 import org.cloudfoundry.identity.uaa.codestore.ExpiringCodeStore;
 import org.cloudfoundry.identity.uaa.codestore.ExpiringCodeType;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
+import org.cloudfoundry.identity.uaa.extensions.PollutionPreventionExtension;
 import org.cloudfoundry.identity.uaa.scim.ScimUser;
 import org.cloudfoundry.identity.uaa.scim.exception.InvalidScimResourceException;
-import org.cloudfoundry.identity.uaa.extensions.PollutionPreventionExtension;
 import org.cloudfoundry.identity.uaa.zone.IdentityZone;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -19,15 +19,18 @@ import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.List;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.is;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
+import static org.mockito.Mockito.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(PollutionPreventionExtension.class)
 class ScimUtilsTest {
@@ -64,8 +67,9 @@ class ScimUtilsTest {
                 eq("REGISTRATION"),
                 eq(currentZoneId));
 
-        assertThat(timestampArgumentCaptor.getValue().after(before), is(true));
-        assertThat(timestampArgumentCaptor.getValue().before(after), is(true));
+        assertThat(timestampArgumentCaptor.getValue())
+                .isAfter(before)
+                .isBefore(after);
     }
 
     @Nested
@@ -100,12 +104,9 @@ class ScimUtilsTest {
             @Test
             void getVerificationURL() throws MalformedURLException {
                 URL actual = ScimUtils.getVerificationURL(mockExpiringCode, IdentityZone.getUaa());
-
-                URL expected = new URL("http://localhost:8080/uaa/verify_user?code=code");
-
-                assertThat(actual.toString(), is(expected.toString()));
+                URL expected = URI.create("http://localhost:8080/uaa/verify_user?code=code").toURL();
+                assertThat(actual).hasToString(expected.toString());
             }
-
         }
 
         @Nested
@@ -117,10 +118,8 @@ class ScimUtilsTest {
                 when(mockIdentityZone.getSubdomain()).thenReturn("subdomain");
 
                 URL actual = ScimUtils.getVerificationURL(mockExpiringCode, mockIdentityZone);
-
-                URL expected = new URL("http://subdomain.localhost:8080/uaa/verify_user?code=code");
-
-                assertThat(actual.toString(), is(expected.toString()));
+                URL expected = URI.create("http://subdomain.localhost:8080/uaa/verify_user?code=code").toURL();
+                assertThat(actual).hasToString(expected.toString());
             }
         }
     }
@@ -137,7 +136,7 @@ class ScimUtilsTest {
         emails.add(email2);
         user.setEmails(emails);
 
-        assertThrows(InvalidScimResourceException.class, () -> ScimUtils.validate(user));
+        assertThatExceptionOfType(InvalidScimResourceException.class).isThrownBy(() -> ScimUtils.validate(user));
     }
 
     @Test
@@ -149,7 +148,7 @@ class ScimUtilsTest {
         emails.add(email);
         user.setEmails(emails);
 
-        assertThrows(InvalidScimResourceException.class, () -> ScimUtils.validate(user));
+        assertThatExceptionOfType(InvalidScimResourceException.class).isThrownBy(() -> ScimUtils.validate(user));
     }
 
     @Test
@@ -158,7 +157,6 @@ class ScimUtilsTest {
         user.setOrigin(OriginKeys.UAA);
         user.addEmail("jo@blah.com");
 
-        assertThrows(InvalidScimResourceException.class, () -> ScimUtils.validate(user));
+        assertThatExceptionOfType(InvalidScimResourceException.class).isThrownBy(() -> ScimUtils.validate(user));
     }
-
 }
