@@ -16,34 +16,26 @@
 package org.cloudfoundry.identity.uaa.web;
 
 import org.cloudfoundry.identity.uaa.util.EmptyEnumerationOfString;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpMethod;
 import org.springframework.mock.web.MockHttpServletRequest;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
-public class HttpHeadersFilterRequestWrapperTest {
+class HttpHeadersFilterRequestWrapperTest {
 
-    public static List<String> BAD_HEADERS = Arrays.asList("X-Forwarded-For", "X-Forwarded-Host", "X-Forwarded-Proto", "X-Forwarded-Prefix", "Forwarded");
+    private static final List<String> BAD_HEADERS = List.of("X-Forwarded-For", "X-Forwarded-Host", "X-Forwarded-Proto", "X-Forwarded-Prefix", "Forwarded");
 
     MockHttpServletRequest mock;
     private HttpHeadersFilterRequestWrapper request;
 
-    @Before
-    public void setUp() {
+    @BeforeEach
+    void setUp() {
         mock = new MockHttpServletRequest(HttpMethod.GET.name(), "http://localhost:8080/uaa/login");
         mock.addHeader("X-Forwarded-For", "proxy-ip");
         mock.addHeader("X-Forwarded-Host", "proxy-host");
@@ -54,85 +46,68 @@ public class HttpHeadersFilterRequestWrapperTest {
         request = new HttpHeadersFilterRequestWrapper(BAD_HEADERS, mock);
     }
 
-    @After
-    public void tearDown() {
-    }
-
     @Test
-    public void filter_is_case_insensitive() {
+    void filter_is_case_insensitive() {
         request = new HttpHeadersFilterRequestWrapper(Collections.singletonList("x-forwarded-host"), mock);
-        assertNull(request.getHeader("X-Forwarded-Host"));
-        assertNotNull(request.getHeader("X-Forwarded-For"));
+        assertThat(request.getHeader("X-Forwarded-Host")).isNull();
+        assertThat(request.getHeader("X-Forwarded-For")).isNotNull();
     }
 
     @Test
-    public void null_filter_list() {
+    void null_filter_list() {
         request = new HttpHeadersFilterRequestWrapper(null, mock);
         List<String> actual = Collections.list(request.getHeaderNames());
         List<String> wanted = new ArrayList<>(BAD_HEADERS);
         wanted.add("Other-header");
-        assertThat(actual, containsInAnyOrder(wanted.toArray()));
+        assertThat(actual).containsExactlyInAnyOrderElementsOf(wanted);
     }
 
     @Test
-    public void filtered_available_headers() {
+    void filtered_available_headers() {
         request = new HttpHeadersFilterRequestWrapper(BAD_HEADERS, mock);
         List<String> actual = Collections.list(request.getHeaderNames());
         List<String> wanted = Collections.singletonList("Other-header");
-        assertThat(actual, containsInAnyOrder(wanted.toArray()));
+        assertThat(actual).containsExactlyInAnyOrderElementsOf(wanted);
     }
 
     @Test
-    public void non_filtered_available_headers() {
+    void non_filtered_available_headers() {
         request = new HttpHeadersFilterRequestWrapper(Collections.emptyList(), mock);
         List<String> actual = Collections.list(request.getHeaderNames());
         List<String> wanted = new ArrayList<>(BAD_HEADERS);
         wanted.add("Other-header");
-        assertThat(actual, containsInAnyOrder(wanted.toArray()));
+        assertThat(actual).containsExactlyInAnyOrderElementsOf(wanted);
     }
 
     @Test
-    public void filtered_x_forwarded_headers_single_header() {
+    void filtered_x_forwarded_headers_single_header() {
         for (String header : BAD_HEADERS) {
-            assertNull(String.format("Header %s should be filtered.", header), request.getHeader(header));
+            assertThat(request.getHeader(header)).as("Header %s should be filtered.".formatted(header)).isNull();
         }
     }
 
     @Test
-    public void non_filtered_x_forwarded_headers_single_header() {
+    void non_filtered_x_forwarded_headers_single_header() {
         request = new HttpHeadersFilterRequestWrapper(Collections.emptyList(), mock);
         for (String header : BAD_HEADERS) {
-            assertNotNull(String.format("Header %s should be present.", header), request.getHeader(header));
+            assertThat(request.getHeader(header)).as("Header %s should be present.".formatted(header)).isNotNull();
         }
     }
 
     @Test
-    public void filtered_x_forwarded_headers_multi_header() {
+    void filtered_x_forwarded_headers_multi_header() {
         for (String header : BAD_HEADERS) {
-            assertFalse(String.format("Header %s should return empty enumeration.", header), request.getHeaders(header).hasMoreElements());
-            assertSame(
-                String.format("Header %s should return singleton enumeration .", header),
-                EmptyEnumerationOfString.EMPTY_ENUMERATION,
-                request.getHeaders(header)
-            );
+            assertThat(request.getHeaders(header).hasMoreElements()).as("Header %s should return empty enumeration.".formatted(header)).isFalse();
+            assertThat(request.getHeaders(header)).as("Header %s should return singleton enumeration .".formatted(header)).isSameAs(EmptyEnumerationOfString.EMPTY_ENUMERATION);
         }
     }
 
     @Test
-    public void non_filtered_x_forwarded_headers_multi_header() {
+    void non_filtered_x_forwarded_headers_multi_header() {
         request = new HttpHeadersFilterRequestWrapper(Collections.emptyList(), mock);
         for (String header : BAD_HEADERS) {
-            assertTrue(String.format("Header %s should return empty enumeration.", header), request.getHeaders(header).hasMoreElements());
-            assertNotNull(
-                String.format("Header %s should return a value.", header),
-                request.getHeaders(header).nextElement()
-            );
+            assertThat(request.getHeaders(header).hasMoreElements()).as("Header %s should return empty enumeration.".formatted(header)).isTrue();
+            assertThat(request.getHeaders(header).nextElement()).as("Header %s should return a value.".formatted(header)).isNotNull();
         }
     }
-
-    @Test
-    public void filter_creates_wrapper() {
-
-    }
-
 }
