@@ -1,4 +1,5 @@
-/*******************************************************************************
+/*
+ * *****************************************************************************
  * Cloud Foundry
  * Copyright (c) [2009-2017] Pivotal Software, Inc. All Rights Reserved.
  * <p/>
@@ -46,14 +47,14 @@ import static java.util.Optional.ofNullable;
 import static org.springframework.util.ReflectionUtils.findMethod;
 
 public class UaaMetricsEmitter {
-    private static Logger logger = LoggerFactory.getLogger(UaaMetricsEmitter.class);
+    private static final Logger logger = LoggerFactory.getLogger(UaaMetricsEmitter.class);
 
     private static final RequestMetricSummary MISSING_METRICS = new RequestMetricSummary(0L, 0d, 0L, 0d, 0L, 0d, 0L, 0d);
     private final StatsDClient statsDClient;
     private final MBeanServerConnection server;
     private final MetricsUtils metricsUtils;
     private boolean notificationsEnabled;
-    private ConcurrentMap<String, Long> delta = new ConcurrentHashMap<>();
+    private final ConcurrentMap<String, Long> delta = new ConcurrentHashMap<>();
 
     public UaaMetricsEmitter(MetricsUtils metricsUtils, StatsDClient statsDClient, MBeanServerConnection server) {
         this.statsDClient = statsDClient;
@@ -77,7 +78,7 @@ public class UaaMetricsEmitter {
                 properties.entrySet()
                         .stream()
                         .filter(e -> e.getValue() != null && e.getValue() instanceof Integer)
-                        .forEach(e -> statsDClient.gauge(prefix+e.getKey(), ((Integer) e.getValue()).longValue()));
+                        .forEach(e -> statsDClient.gauge(prefix + e.getKey(), ((Integer) e.getValue()).longValue()));
             }
         }
     }
@@ -105,14 +106,14 @@ public class UaaMetricsEmitter {
     }
 
     private void emitUrlGroupRequestMetrics(UaaMetrics metrics) {
-        Map<String,String> perUrlMetrics = metrics.getSummary();
+        Map<String, String> perUrlMetrics = metrics.getSummary();
         String prefix = "requests.%s.";
-        for(String key : perUrlMetrics.keySet()) {
+        for (String key : perUrlMetrics.keySet()) {
             String prefixName = key.startsWith("/") ? key.substring(1) : key;
             MetricsQueue metric = JsonUtils.readValue(perUrlMetrics.get(key), MetricsQueue.class);
             RequestMetricSummary metricTotals = metric.getTotals();
-            statsDClient.gauge(String.format(prefix + "completed.count", prefixName), metricTotals.getCount());
-            statsDClient.gauge(String.format(prefix + "completed.time", prefixName), (long) metricTotals.getAverageTime());
+            statsDClient.gauge((prefix + "completed.count").formatted(prefixName), metricTotals.getCount());
+            statsDClient.gauge((prefix + "completed.time").formatted(prefixName), (long) metricTotals.getAverageTime());
         }
     }
 
@@ -130,19 +131,19 @@ public class UaaMetricsEmitter {
         String prefix = "requests.global.";
         RequestMetricSummary totals = globals.getTotals();
         statsDClient.gauge(prefix + "completed.time", (long) totals.getAverageTime());
-        statsDClient.count(prefix + "completed.count", getMetricDelta(prefix + "completed.count",totals.getCount()));
-        statsDClient.count(prefix + "unhealthy.count",getMetricDelta(prefix + "unhealthy.count",totals.getIntolerableCount()));
+        statsDClient.count(prefix + "completed.count", getMetricDelta(prefix + "completed.count", totals.getCount()));
+        statsDClient.count(prefix + "unhealthy.count", getMetricDelta(prefix + "unhealthy.count", totals.getIntolerableCount()));
         statsDClient.gauge(prefix + "unhealthy.time", (long) totals.getAverageIntolerableTime());
         //status codes
         for (StatusCodeGroup family : StatusCodeGroup.values()) {
             RequestMetricSummary summary = ofNullable(globals.getDetailed().get(family)).orElse(MISSING_METRICS);
             String aspect = prefix + "status_" + family.getName() + ".count";
-            statsDClient.count(aspect, getMetricDelta(aspect,summary.getCount()));
+            statsDClient.count(aspect, getMetricDelta(aspect, summary.getCount()));
         }
         //database metrics
         prefix = "database.global.";
         statsDClient.gauge(prefix + "completed.time", (long) totals.getAverageDatabaseQueryTime());
-        statsDClient.count(prefix + "completed.count", getMetricDelta(prefix + "completed.count",totals.getDatabaseQueryCount()));
+        statsDClient.count(prefix + "completed.count", getMetricDelta(prefix + "completed.count", totals.getDatabaseQueryCount()));
         statsDClient.count(prefix + "unhealthy.count", getMetricDelta(prefix + "unhealthy.count", totals.getDatabaseIntolerableQueryCount()));
         statsDClient.gauge(prefix + "unhealthy.time", (long) totals.getAverageDatabaseIntolerableQueryTime());
     }
@@ -152,7 +153,7 @@ public class UaaMetricsEmitter {
         OperatingSystemMXBean mbean = (OperatingSystemMXBean) ManagementFactory.getOperatingSystemMXBean();
         String prefix = "vitals.vm.";
         statsDClient.gauge(prefix + "cpu.count", mbean.getAvailableProcessors());
-        statsDClient.gauge(prefix + "cpu.load", (long)(mbean.getSystemLoadAverage()*100));
+        statsDClient.gauge(prefix + "cpu.load", (long) (mbean.getSystemLoadAverage() * 100));
         statsDClient.gauge(prefix + "memory.total", mbean.getTotalPhysicalMemorySize());
         statsDClient.gauge(prefix + "memory.committed", mbean.getCommittedVirtualMemorySize());
         statsDClient.gauge(prefix + "memory.free", mbean.getFreePhysicalMemorySize());
@@ -196,7 +197,7 @@ public class UaaMetricsEmitter {
             boolean original = method.isAccessible();
             method.setAccessible(true);
             try {
-                return (Number)ReflectionUtils.invokeMethod(method, mbean);
+                return (Number) ReflectionUtils.invokeMethod(method, mbean);
             } catch (Exception e) {
                 logger.debug("Unable to invoke metric", e);
             } finally {
@@ -219,10 +220,10 @@ public class UaaMetricsEmitter {
             emitter.addNotificationListener((notification, handback) -> {
                 String key = notification.getType();
                 String prefix = key.startsWith("/") ? key.substring(1) : key;
-                statsDClient.time(String.format("requests.%s.latency", prefix),  (Long) notification.getSource());
+                statsDClient.time("requests.%s.latency".formatted(prefix), (Long) notification.getSource());
             }, null, null);
             notificationsEnabled = true;
-        } catch(Exception instanceNotFound) {
+        } catch (Exception instanceNotFound) {
             try {
                 throwIfOtherThanNotFound(instanceNotFound);
             } catch (Exception e) {
