@@ -1,5 +1,6 @@
-/*******************************************************************************
- *     Cloud Foundry 
+/*
+ * *****************************************************************************
+ *     Cloud Foundry
  *     Copyright (c) [2009-2016] Pivotal Software, Inc. All Rights Reserved.
  *
  *     This product is licensed to you under the Apache License, Version 2.0 (the "License").
@@ -13,45 +14,42 @@
 
 package org.cloudfoundry.identity.uaa.integration;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-
-import java.util.Collections;
-
-import org.cloudfoundry.identity.uaa.ServerRunning;
+import org.cloudfoundry.identity.uaa.ServerRunningExtension;
+import org.cloudfoundry.identity.uaa.oauth.client.resource.ImplicitResourceDetails;
+import org.cloudfoundry.identity.uaa.oauth.token.DefaultAccessTokenRequest;
 import org.cloudfoundry.identity.uaa.test.UaaTestAccounts;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.oauth2.client.token.DefaultAccessTokenRequest;
-import org.springframework.security.oauth2.client.token.grant.implicit.ImplicitResourceDetails;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 
+import java.util.Collections;
+
+import static org.assertj.core.api.Assertions.assertThat;
+
 /**
  * @author Dave Syer
- * 
  */
-public class CfAuthenticationTests {
+class CfAuthenticationTests {
 
-    @Rule
-    public ServerRunning serverRunning = ServerRunning.isRunning();
+    @RegisterExtension
+    private static final ServerRunningExtension serverRunning = ServerRunningExtension.connect();
 
-    private UaaTestAccounts testAccounts = UaaTestAccounts.standard(serverRunning);
+    private final UaaTestAccounts testAccounts = UaaTestAccounts.standard(serverRunning);
 
     private MultiValueMap<String, String> params;
 
     private HttpHeaders headers;
 
-    @Before
-    public void init() {
+    @BeforeEach
+    void init() {
         ImplicitResourceDetails resource = testAccounts.getDefaultImplicitResource();
-        params = new LinkedMultiValueMap<String, String>();
+        params = new LinkedMultiValueMap<>();
         params.set("client_id", resource.getClientId());
         params.set("redirect_uri", resource.getRedirectUri(new DefaultAccessTokenRequest()));
         params.set("response_type", "token");
@@ -60,33 +58,31 @@ public class CfAuthenticationTests {
     }
 
     @Test
-    public void testDefaultScopes() {
+    void defaultScopes() {
         params.set(
-                        "credentials",
-                        String.format("{\"username\":\"%s\",\"password\":\"%s\"}", testAccounts.getUserName(),
-                                        testAccounts.getPassword()));
+                "credentials",
+                "{\"username\":\"%s\",\"password\":\"%s\"}".formatted(testAccounts.getUserName(),
+                        testAccounts.getPassword()));
         ResponseEntity<Void> response = serverRunning.postForResponse(serverRunning.getAuthorizationUri(), headers,
-                        params);
-        assertEquals(HttpStatus.FOUND, response.getStatusCode());
+                params);
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.FOUND);
         String location = response.getHeaders().getLocation().toString();
-        assertTrue("Not authenticated (no access token): " + location, location.contains("access_token"));
+        assertThat(location).as("Not authenticated (no access token): " + location).contains("access_token");
     }
 
     @Test
-    public void testInvalidScopes() {
+    void invalidScopes() {
         params.set(
-                        "credentials",
-                        String.format("{\"username\":\"%s\",\"password\":\"%s\"}", testAccounts.getUserName(),
-                                        testAccounts.getPassword()));
+                "credentials",
+                "{\"username\":\"%s\",\"password\":\"%s\"}".formatted(testAccounts.getUserName(),
+                        testAccounts.getPassword()));
         params.set("scope", "read");
         ResponseEntity<Void> response = serverRunning.postForResponse(serverRunning.getAuthorizationUri(), headers,
-                        params);
-        assertEquals(HttpStatus.FOUND, response.getStatusCode());
+                params);
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.FOUND);
         String location = response.getHeaders().getLocation().toString();
-        // System.err.println(location);
-        assertTrue(location.startsWith(params.getFirst("redirect_uri")));
-        assertTrue(location.contains("error=invalid_scope"));
-        assertFalse(location.contains("credentials="));
+        assertThat(location).startsWith(params.getFirst("redirect_uri"))
+                .contains("error=invalid_scope")
+                .doesNotContain("credentials=");
     }
-
 }
