@@ -3,20 +3,28 @@ package org.cloudfoundry.identity.uaa.integration.util;
 import com.dumbster.smtp.SimpleSmtpServer;
 import com.dumbster.smtp.SmtpMessage;
 import com.fasterxml.jackson.core.type.TypeReference;
-import org.apache.commons.io.FileUtils;
-import org.apache.http.client.CookieStore;
-import org.apache.http.client.HttpClient;
-import org.apache.http.impl.client.BasicCookieStore;
-import org.apache.http.impl.client.HttpClientBuilder;
-import org.apache.http.impl.cookie.BasicClientCookie;
-import org.cloudfoundry.identity.uaa.ServerRunning;
+import org.apache.hc.client5.http.classic.HttpClient;
+import org.apache.hc.client5.http.cookie.BasicCookieStore;
+import org.apache.hc.client5.http.cookie.CookieStore;
+import org.apache.hc.client5.http.impl.classic.HttpClientBuilder;
+import org.apache.hc.client5.http.impl.cookie.BasicClientCookie;
+import org.cloudfoundry.identity.uaa.ServerRunningExtension;
 import org.cloudfoundry.identity.uaa.account.UserAccountStatus;
 import org.cloudfoundry.identity.uaa.account.UserInfoResponse;
+import org.cloudfoundry.identity.uaa.client.UaaClientDetails;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
 import org.cloudfoundry.identity.uaa.integration.feature.TestClient;
-import org.cloudfoundry.identity.uaa.mfa.GoogleMfaProviderConfig;
-import org.cloudfoundry.identity.uaa.mfa.MfaProvider;
+import org.cloudfoundry.identity.uaa.oauth.client.OAuth2RestTemplate;
+import org.cloudfoundry.identity.uaa.oauth.client.http.OAuth2ErrorHandler;
+import org.cloudfoundry.identity.uaa.oauth.client.resource.AuthorizationCodeResourceDetails;
+import org.cloudfoundry.identity.uaa.oauth.client.resource.ClientCredentialsResourceDetails;
+import org.cloudfoundry.identity.uaa.oauth.common.AuthenticationScheme;
+import org.cloudfoundry.identity.uaa.oauth.common.DefaultOAuth2AccessToken;
+import org.cloudfoundry.identity.uaa.oauth.common.OAuth2AccessToken;
+import org.cloudfoundry.identity.uaa.oauth.common.util.RandomValueStringGenerator;
+import org.cloudfoundry.identity.uaa.oauth.jwt.JwtClientAuthentication;
 import org.cloudfoundry.identity.uaa.provider.AbstractExternalOAuthIdentityProviderDefinition;
+import org.cloudfoundry.identity.uaa.provider.AbstractIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
 import org.cloudfoundry.identity.uaa.provider.OIDCIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.provider.SamlIdentityProviderDefinition;
@@ -28,102 +36,112 @@ import org.cloudfoundry.identity.uaa.scim.ScimUser;
 import org.cloudfoundry.identity.uaa.scim.ScimUser.PhoneNumber;
 import org.cloudfoundry.identity.uaa.security.web.CookieBasedCsrfTokenRepository;
 import org.cloudfoundry.identity.uaa.test.UaaTestAccounts;
+import org.cloudfoundry.identity.uaa.test.UaaWebDriver;
 import org.cloudfoundry.identity.uaa.util.JsonUtils;
 import org.cloudfoundry.identity.uaa.zone.IdentityZone;
 import org.cloudfoundry.identity.uaa.zone.IdentityZoneConfiguration;
 import org.cloudfoundry.identity.uaa.zone.IdentityZoneSwitchingFilter;
-import org.hamcrest.CoreMatchers;
 import org.hamcrest.Description;
-import org.hamcrest.Matchers;
 import org.hamcrest.TypeSafeMatcher;
-import org.junit.Assert;
-import org.openqa.selenium.*;
+import org.openqa.selenium.By;
+import org.openqa.selenium.Cookie;
+import org.openqa.selenium.WebDriver;
 import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.http.*;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
+import org.springframework.http.MediaType;
+import org.springframework.http.RequestEntity;
+import org.springframework.http.ResponseEntity;
 import org.springframework.http.client.ClientHttpResponse;
 import org.springframework.http.client.HttpComponentsClientHttpRequestFactory;
 import org.springframework.http.converter.StringHttpMessageConverter;
-import org.springframework.security.crypto.codec.Base64;
-import org.springframework.security.oauth2.client.OAuth2RestTemplate;
-import org.springframework.security.oauth2.client.http.OAuth2ErrorHandler;
-import org.springframework.security.oauth2.client.token.grant.client.ClientCredentialsResourceDetails;
-import org.springframework.security.oauth2.client.token.grant.code.AuthorizationCodeResourceDetails;
-import org.springframework.security.oauth2.common.AuthenticationScheme;
-import org.springframework.security.oauth2.common.DefaultOAuth2AccessToken;
-import org.springframework.security.oauth2.common.OAuth2AccessToken;
-import org.springframework.security.oauth2.common.util.RandomValueStringGenerator;
-import org.springframework.security.oauth2.provider.client.BaseClientDetails;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 import org.springframework.util.StringUtils;
 import org.springframework.web.client.DefaultResponseErrorHandler;
+import org.springframework.web.client.HttpClientErrorException;
+import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestOperations;
 import org.springframework.web.client.RestTemplate;
 
-import java.io.File;
-import java.io.IOException;
-import java.net.*;
+import java.net.Inet4Address;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.net.UnknownHostException;
 import java.nio.charset.StandardCharsets;
 import java.security.SecureRandom;
-import java.text.SimpleDateFormat;
-import java.util.*;
+import java.util.Arrays;
+import java.util.Base64;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+import static java.util.stream.Collectors.joining;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.cloudfoundry.identity.uaa.oauth.common.util.OAuth2Utils.USER_OAUTH_APPROVAL;
 import static org.cloudfoundry.identity.uaa.oauth.token.TokenConstants.GRANT_TYPE_AUTHORIZATION_CODE;
 import static org.cloudfoundry.identity.uaa.provider.ExternalIdentityProviderDefinition.USER_NAME_ATTRIBUTE_NAME;
 import static org.cloudfoundry.identity.uaa.security.web.CookieBasedCsrfTokenRepository.DEFAULT_CSRF_COOKIE_NAME;
 import static org.cloudfoundry.identity.uaa.util.UaaHttpRequestUtils.createRequestFactory;
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.core.StringStartsWith.startsWith;
-import static org.junit.Assert.*;
 import static org.springframework.http.HttpHeaders.ACCEPT;
 import static org.springframework.http.HttpHeaders.AUTHORIZATION;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
-import static org.springframework.security.oauth2.common.util.OAuth2Utils.USER_OAUTH_APPROVAL;
 import static org.springframework.util.StringUtils.hasText;
 
 public class IntegrationTestUtils {
 
-    public static final String SIMPLESAMLPHP_UAA_ACCEPTANCE = "http://simplesamlphp.uaa-acceptance.cf-app.com";
-    public static final String SIMPLESAMLPHP_LOGIN_PROMPT_XPATH_EXPR =
-        "//h2[contains(text(), 'Enter your username and password')]";
-
-
-    public static final String EXAMPLE_DOT_COM_SAML_IDP_METADATA = "<?xml version=\"1.0\"?>\n" +
-            "<md:EntityDescriptor xmlns:md=\"urn:oasis:names:tc:SAML:2.0:metadata\" xmlns:ds=\"http://www.w3.org/2000/09/xmldsig#\" entityID=\"http://example.com/saml2/idp/metadata.php\" ID=\"_7a1d882b1a0cb702f97968d831d70eecce036d6d0c249ae65cca0e91f5656d58\"><ds:Signature>\n" +
-            "  <ds:SignedInfo><ds:CanonicalizationMethod Algorithm=\"http://www.w3.org/2001/10/xml-exc-c14n#\"/>\n" +
-            "    <ds:SignatureMethod Algorithm=\"http://www.w3.org/2001/04/xmldsig-more#rsa-sha256\"/>\n" +
-            "  <ds:Reference URI=\"#_7a1d882b1a0cb702f97968d831d70eecce036d6d0c249ae65cca0e91f5656d58\"><ds:Transforms><ds:Transform Algorithm=\"http://www.w3.org/2000/09/xmldsig#enveloped-signature\"/><ds:Transform Algorithm=\"http://www.w3.org/2001/10/xml-exc-c14n#\"/></ds:Transforms><ds:DigestMethod Algorithm=\"http://www.w3.org/2001/04/xmlenc#sha256\"/><ds:DigestValue>HOSWDJYkLvErI1gVynUVmufFVDCKPqExLnnnMjXgoJQ=</ds:DigestValue></ds:Reference></ds:SignedInfo><ds:SignatureValue>ryMe0PXC+vR/c0nSEhSJsTaF0lHiuZ6PguqCbul7RC9WKLmFS9DD7Dgp3WHQ2zWpRimCTHxw/VO9hyCTxAcW9zxW4OdpD4YorqcmXtLkpasBCVuFLbQ8oylnjrem4kpGflfnuk3bW1mp6AXy52jwALDm8MsTwLK+O74YkeVTPP5bki/PK0N4jHnhYhvhHKUyT8Gug0v2o4KA/1ik83e9vcYEFc/9WGpXFeDMF6pXsJQqC/+eWoLfZJDNrwSsSlg+oD+ZF91YccN9i9lJoaIPcVvPWDfEv7vL79LgnmPBeYxm/fWb4/ANMxvCLIP1R3Ixrz5oFoIX2NP1+uZOpoRWbg==</ds:SignatureValue>\n" +
-            "<ds:KeyInfo><ds:X509Data><ds:X509Certificate>MIIEEzCCAvugAwIBAgIJAIc1qzLrv+5nMA0GCSqGSIb3DQEBCwUAMIGfMQswCQYDVQQGEwJVUzELMAkGA1UECAwCQ08xFDASBgNVBAcMC0Nhc3RsZSBSb2NrMRwwGgYDVQQKDBNTYW1sIFRlc3RpbmcgU2VydmVyMQswCQYDVQQLDAJJVDEgMB4GA1UEAwwXc2ltcGxlc2FtbHBocC5jZmFwcHMuaW8xIDAeBgkqhkiG9w0BCQEWEWZoYW5pa0BwaXZvdGFsLmlvMB4XDTE1MDIyMzIyNDUwM1oXDTI1MDIyMjIyNDUwM1owgZ8xCzAJBgNVBAYTAlVTMQswCQYDVQQIDAJDTzEUMBIGA1UEBwwLQ2FzdGxlIFJvY2sxHDAaBgNVBAoME1NhbWwgVGVzdGluZyBTZXJ2ZXIxCzAJBgNVBAsMAklUMSAwHgYDVQQDDBdzaW1wbGVzYW1scGhwLmNmYXBwcy5pbzEgMB4GCSqGSIb3DQEJARYRZmhhbmlrQHBpdm90YWwuaW8wggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQC4cn62E1xLqpN34PmbrKBbkOXFjzWgJ9b+pXuaRft6A339uuIQeoeH5qeSKRVTl32L0gdz2ZivLwZXW+cqvftVW1tvEHvzJFyxeTW3fCUeCQsebLnA2qRa07RkxTo6Nf244mWWRDodcoHEfDUSbxfTZ6IExSojSIU2RnD6WllYWFdD1GFpBJOmQB8rAc8wJIBdHFdQnX8Ttl7hZ6rtgqEYMzYVMuJ2F2r1HSU1zSAvwpdYP6rRGFRJEfdA9mm3WKfNLSc5cljz0X/TXy0vVlAV95l9qcfFzPmrkNIst9FZSwpvB49LyAVke04FQPPwLgVH4gphiJH3jvZ7I+J5lS8VAgMBAAGjUDBOMB0GA1UdDgQWBBTTyP6Cc5HlBJ5+ucVCwGc5ogKNGzAfBgNVHSMEGDAWgBTTyP6Cc5HlBJ5+ucVCwGc5ogKNGzAMBgNVHRMEBTADAQH/MA0GCSqGSIb3DQEBCwUAA4IBAQAvMS4EQeP/ipV4jOG5lO6/tYCb/iJeAduOnRhkJk0DbX329lDLZhTTL/x/w/9muCVcvLrzEp6PN+VWfw5E5FWtZN0yhGtP9R+vZnrV+oc2zGD+no1/ySFOe3EiJCO5dehxKjYEmBRv5sU/LZFKZpozKN/BMEa6CqLuxbzb7ykxVr7EVFXwltPxzE9TmL9OACNNyF5eJHWMRMllarUvkcXlh4pux4ks9e6zV9DQBy2zds9f1I3qxg0eX6JnGrXi/ZiCT+lJgVe3ZFXiejiLAiKB04sXW3ti0LW3lx13Y1YlQ4/tlpgTgfIJxKV6nyPiLoK0nywbMd+vpAirDt2Oc+hk</ds:X509Certificate></ds:X509Data></ds:KeyInfo></ds:Signature>\n" +
-            "  <md:IDPSSODescriptor protocolSupportEnumeration=\"urn:oasis:names:tc:SAML:2.0:protocol\">\n" +
-            "    <md:KeyDescriptor use=\"signing\">\n" +
-            "      <ds:KeyInfo xmlns:ds=\"http://www.w3.org/2000/09/xmldsig#\">\n" +
-            "        <ds:X509Data>\n" +
-            "          <ds:X509Certificate>MIIEEzCCAvugAwIBAgIJAIc1qzLrv+5nMA0GCSqGSIb3DQEBCwUAMIGfMQswCQYDVQQGEwJVUzELMAkGA1UECAwCQ08xFDASBgNVBAcMC0Nhc3RsZSBSb2NrMRwwGgYDVQQKDBNTYW1sIFRlc3RpbmcgU2VydmVyMQswCQYDVQQLDAJJVDEgMB4GA1UEAwwXc2ltcGxlc2FtbHBocC5jZmFwcHMuaW8xIDAeBgkqhkiG9w0BCQEWEWZoYW5pa0BwaXZvdGFsLmlvMB4XDTE1MDIyMzIyNDUwM1oXDTI1MDIyMjIyNDUwM1owgZ8xCzAJBgNVBAYTAlVTMQswCQYDVQQIDAJDTzEUMBIGA1UEBwwLQ2FzdGxlIFJvY2sxHDAaBgNVBAoME1NhbWwgVGVzdGluZyBTZXJ2ZXIxCzAJBgNVBAsMAklUMSAwHgYDVQQDDBdzaW1wbGVzYW1scGhwLmNmYXBwcy5pbzEgMB4GCSqGSIb3DQEJARYRZmhhbmlrQHBpdm90YWwuaW8wggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQC4cn62E1xLqpN34PmbrKBbkOXFjzWgJ9b+pXuaRft6A339uuIQeoeH5qeSKRVTl32L0gdz2ZivLwZXW+cqvftVW1tvEHvzJFyxeTW3fCUeCQsebLnA2qRa07RkxTo6Nf244mWWRDodcoHEfDUSbxfTZ6IExSojSIU2RnD6WllYWFdD1GFpBJOmQB8rAc8wJIBdHFdQnX8Ttl7hZ6rtgqEYMzYVMuJ2F2r1HSU1zSAvwpdYP6rRGFRJEfdA9mm3WKfNLSc5cljz0X/TXy0vVlAV95l9qcfFzPmrkNIst9FZSwpvB49LyAVke04FQPPwLgVH4gphiJH3jvZ7I+J5lS8VAgMBAAGjUDBOMB0GA1UdDgQWBBTTyP6Cc5HlBJ5+ucVCwGc5ogKNGzAfBgNVHSMEGDAWgBTTyP6Cc5HlBJ5+ucVCwGc5ogKNGzAMBgNVHRMEBTADAQH/MA0GCSqGSIb3DQEBCwUAA4IBAQAvMS4EQeP/ipV4jOG5lO6/tYCb/iJeAduOnRhkJk0DbX329lDLZhTTL/x/w/9muCVcvLrzEp6PN+VWfw5E5FWtZN0yhGtP9R+vZnrV+oc2zGD+no1/ySFOe3EiJCO5dehxKjYEmBRv5sU/LZFKZpozKN/BMEa6CqLuxbzb7ykxVr7EVFXwltPxzE9TmL9OACNNyF5eJHWMRMllarUvkcXlh4pux4ks9e6zV9DQBy2zds9f1I3qxg0eX6JnGrXi/ZiCT+lJgVe3ZFXiejiLAiKB04sXW3ti0LW3lx13Y1YlQ4/tlpgTgfIJxKV6nyPiLoK0nywbMd+vpAirDt2Oc+hk</ds:X509Certificate>\n" +
-            "        </ds:X509Data>\n" +
-            "      </ds:KeyInfo>\n" +
-            "    </md:KeyDescriptor>\n" +
-            "    <md:KeyDescriptor use=\"encryption\">\n" +
-            "      <ds:KeyInfo xmlns:ds=\"http://www.w3.org/2000/09/xmldsig#\">\n" +
-            "        <ds:X509Data>\n" +
-            "          <ds:X509Certificate>MIIEEzCCAvugAwIBAgIJAIc1qzLrv+5nMA0GCSqGSIb3DQEBCwUAMIGfMQswCQYDVQQGEwJVUzELMAkGA1UECAwCQ08xFDASBgNVBAcMC0Nhc3RsZSBSb2NrMRwwGgYDVQQKDBNTYW1sIFRlc3RpbmcgU2VydmVyMQswCQYDVQQLDAJJVDEgMB4GA1UEAwwXc2ltcGxlc2FtbHBocC5jZmFwcHMuaW8xIDAeBgkqhkiG9w0BCQEWEWZoYW5pa0BwaXZvdGFsLmlvMB4XDTE1MDIyMzIyNDUwM1oXDTI1MDIyMjIyNDUwM1owgZ8xCzAJBgNVBAYTAlVTMQswCQYDVQQIDAJDTzEUMBIGA1UEBwwLQ2FzdGxlIFJvY2sxHDAaBgNVBAoME1NhbWwgVGVzdGluZyBTZXJ2ZXIxCzAJBgNVBAsMAklUMSAwHgYDVQQDDBdzaW1wbGVzYW1scGhwLmNmYXBwcy5pbzEgMB4GCSqGSIb3DQEJARYRZmhhbmlrQHBpdm90YWwuaW8wggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQC4cn62E1xLqpN34PmbrKBbkOXFjzWgJ9b+pXuaRft6A339uuIQeoeH5qeSKRVTl32L0gdz2ZivLwZXW+cqvftVW1tvEHvzJFyxeTW3fCUeCQsebLnA2qRa07RkxTo6Nf244mWWRDodcoHEfDUSbxfTZ6IExSojSIU2RnD6WllYWFdD1GFpBJOmQB8rAc8wJIBdHFdQnX8Ttl7hZ6rtgqEYMzYVMuJ2F2r1HSU1zSAvwpdYP6rRGFRJEfdA9mm3WKfNLSc5cljz0X/TXy0vVlAV95l9qcfFzPmrkNIst9FZSwpvB49LyAVke04FQPPwLgVH4gphiJH3jvZ7I+J5lS8VAgMBAAGjUDBOMB0GA1UdDgQWBBTTyP6Cc5HlBJ5+ucVCwGc5ogKNGzAfBgNVHSMEGDAWgBTTyP6Cc5HlBJ5+ucVCwGc5ogKNGzAMBgNVHRMEBTADAQH/MA0GCSqGSIb3DQEBCwUAA4IBAQAvMS4EQeP/ipV4jOG5lO6/tYCb/iJeAduOnRhkJk0DbX329lDLZhTTL/x/w/9muCVcvLrzEp6PN+VWfw5E5FWtZN0yhGtP9R+vZnrV+oc2zGD+no1/ySFOe3EiJCO5dehxKjYEmBRv5sU/LZFKZpozKN/BMEa6CqLuxbzb7ykxVr7EVFXwltPxzE9TmL9OACNNyF5eJHWMRMllarUvkcXlh4pux4ks9e6zV9DQBy2zds9f1I3qxg0eX6JnGrXi/ZiCT+lJgVe3ZFXiejiLAiKB04sXW3ti0LW3lx13Y1YlQ4/tlpgTgfIJxKV6nyPiLoK0nywbMd+vpAirDt2Oc+hk</ds:X509Certificate>\n" +
-            "        </ds:X509Data>\n" +
-            "      </ds:KeyInfo>\n" +
-            "    </md:KeyDescriptor>\n" +
-            "    <md:SingleLogoutService Binding=\"urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect\" Location=\"http://example.com/saml2/idp/SingleLogoutService.php\"/>\n" +
-            "    <md:NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</md:NameIDFormat>\n" +
-            "    <md:SingleSignOnService Binding=\"urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect\" Location=\"http://example.com/saml2/idp/SSOService.php\"/>\n" +
-            "  </md:IDPSSODescriptor>\n" +
-            "  <md:ContactPerson contactType=\"technical\">\n" +
-            "    <md:GivenName>Filip</md:GivenName>\n" +
-            "    <md:SurName>Hanik</md:SurName>\n" +
-            "    <md:EmailAddress>fhanik@pivotal.io</md:EmailAddress>\n" +
-            "  </md:ContactPerson>\n" +
-            "</md:EntityDescriptor>\n";
+    public static final String EXAMPLE_DOT_COM_SAML_IDP_METADATA = """
+            <?xml version="1.0"?>
+            <md:EntityDescriptor xmlns:md="urn:oasis:names:tc:SAML:2.0:metadata" xmlns:ds="http://www.w3.org/2000/09/xmldsig#" entityID="http://example.com/saml2/idp/metadata.php" ID="_7a1d882b1a0cb702f97968d831d70eecce036d6d0c249ae65cca0e91f5656d58"><ds:Signature>
+              <ds:SignedInfo><ds:CanonicalizationMethod Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#"/>
+                <ds:SignatureMethod Algorithm="http://www.w3.org/2001/04/xmldsig-more#rsa-sha256"/>
+              <ds:Reference URI="#_7a1d882b1a0cb702f97968d831d70eecce036d6d0c249ae65cca0e91f5656d58"><ds:Transforms><ds:Transform Algorithm="http://www.w3.org/2000/09/xmldsig#enveloped-signature"/><ds:Transform Algorithm="http://www.w3.org/2001/10/xml-exc-c14n#"/></ds:Transforms><ds:DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha256"/><ds:DigestValue>HOSWDJYkLvErI1gVynUVmufFVDCKPqExLnnnMjXgoJQ=</ds:DigestValue></ds:Reference></ds:SignedInfo><ds:SignatureValue>ryMe0PXC+vR/c0nSEhSJsTaF0lHiuZ6PguqCbul7RC9WKLmFS9DD7Dgp3WHQ2zWpRimCTHxw/VO9hyCTxAcW9zxW4OdpD4YorqcmXtLkpasBCVuFLbQ8oylnjrem4kpGflfnuk3bW1mp6AXy52jwALDm8MsTwLK+O74YkeVTPP5bki/PK0N4jHnhYhvhHKUyT8Gug0v2o4KA/1ik83e9vcYEFc/9WGpXFeDMF6pXsJQqC/+eWoLfZJDNrwSsSlg+oD+ZF91YccN9i9lJoaIPcVvPWDfEv7vL79LgnmPBeYxm/fWb4/ANMxvCLIP1R3Ixrz5oFoIX2NP1+uZOpoRWbg==</ds:SignatureValue>
+            <ds:KeyInfo><ds:X509Data><ds:X509Certificate>MIIEEzCCAvugAwIBAgIJAIc1qzLrv+5nMA0GCSqGSIb3DQEBCwUAMIGfMQswCQYDVQQGEwJVUzELMAkGA1UECAwCQ08xFDASBgNVBAcMC0Nhc3RsZSBSb2NrMRwwGgYDVQQKDBNTYW1sIFRlc3RpbmcgU2VydmVyMQswCQYDVQQLDAJJVDEgMB4GA1UEAwwXc2ltcGxlc2FtbHBocC5jZmFwcHMuaW8xIDAeBgkqhkiG9w0BCQEWEWZoYW5pa0BwaXZvdGFsLmlvMB4XDTE1MDIyMzIyNDUwM1oXDTI1MDIyMjIyNDUwM1owgZ8xCzAJBgNVBAYTAlVTMQswCQYDVQQIDAJDTzEUMBIGA1UEBwwLQ2FzdGxlIFJvY2sxHDAaBgNVBAoME1NhbWwgVGVzdGluZyBTZXJ2ZXIxCzAJBgNVBAsMAklUMSAwHgYDVQQDDBdzaW1wbGVzYW1scGhwLmNmYXBwcy5pbzEgMB4GCSqGSIb3DQEJARYRZmhhbmlrQHBpdm90YWwuaW8wggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQC4cn62E1xLqpN34PmbrKBbkOXFjzWgJ9b+pXuaRft6A339uuIQeoeH5qeSKRVTl32L0gdz2ZivLwZXW+cqvftVW1tvEHvzJFyxeTW3fCUeCQsebLnA2qRa07RkxTo6Nf244mWWRDodcoHEfDUSbxfTZ6IExSojSIU2RnD6WllYWFdD1GFpBJOmQB8rAc8wJIBdHFdQnX8Ttl7hZ6rtgqEYMzYVMuJ2F2r1HSU1zSAvwpdYP6rRGFRJEfdA9mm3WKfNLSc5cljz0X/TXy0vVlAV95l9qcfFzPmrkNIst9FZSwpvB49LyAVke04FQPPwLgVH4gphiJH3jvZ7I+J5lS8VAgMBAAGjUDBOMB0GA1UdDgQWBBTTyP6Cc5HlBJ5+ucVCwGc5ogKNGzAfBgNVHSMEGDAWgBTTyP6Cc5HlBJ5+ucVCwGc5ogKNGzAMBgNVHRMEBTADAQH/MA0GCSqGSIb3DQEBCwUAA4IBAQAvMS4EQeP/ipV4jOG5lO6/tYCb/iJeAduOnRhkJk0DbX329lDLZhTTL/x/w/9muCVcvLrzEp6PN+VWfw5E5FWtZN0yhGtP9R+vZnrV+oc2zGD+no1/ySFOe3EiJCO5dehxKjYEmBRv5sU/LZFKZpozKN/BMEa6CqLuxbzb7ykxVr7EVFXwltPxzE9TmL9OACNNyF5eJHWMRMllarUvkcXlh4pux4ks9e6zV9DQBy2zds9f1I3qxg0eX6JnGrXi/ZiCT+lJgVe3ZFXiejiLAiKB04sXW3ti0LW3lx13Y1YlQ4/tlpgTgfIJxKV6nyPiLoK0nywbMd+vpAirDt2Oc+hk</ds:X509Certificate></ds:X509Data></ds:KeyInfo></ds:Signature>
+              <md:IDPSSODescriptor protocolSupportEnumeration="urn:oasis:names:tc:SAML:2.0:protocol">
+                <md:KeyDescriptor use="signing">
+                  <ds:KeyInfo xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
+                    <ds:X509Data>
+                      <ds:X509Certificate>MIIEEzCCAvugAwIBAgIJAIc1qzLrv+5nMA0GCSqGSIb3DQEBCwUAMIGfMQswCQYDVQQGEwJVUzELMAkGA1UECAwCQ08xFDASBgNVBAcMC0Nhc3RsZSBSb2NrMRwwGgYDVQQKDBNTYW1sIFRlc3RpbmcgU2VydmVyMQswCQYDVQQLDAJJVDEgMB4GA1UEAwwXc2ltcGxlc2FtbHBocC5jZmFwcHMuaW8xIDAeBgkqhkiG9w0BCQEWEWZoYW5pa0BwaXZvdGFsLmlvMB4XDTE1MDIyMzIyNDUwM1oXDTI1MDIyMjIyNDUwM1owgZ8xCzAJBgNVBAYTAlVTMQswCQYDVQQIDAJDTzEUMBIGA1UEBwwLQ2FzdGxlIFJvY2sxHDAaBgNVBAoME1NhbWwgVGVzdGluZyBTZXJ2ZXIxCzAJBgNVBAsMAklUMSAwHgYDVQQDDBdzaW1wbGVzYW1scGhwLmNmYXBwcy5pbzEgMB4GCSqGSIb3DQEJARYRZmhhbmlrQHBpdm90YWwuaW8wggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQC4cn62E1xLqpN34PmbrKBbkOXFjzWgJ9b+pXuaRft6A339uuIQeoeH5qeSKRVTl32L0gdz2ZivLwZXW+cqvftVW1tvEHvzJFyxeTW3fCUeCQsebLnA2qRa07RkxTo6Nf244mWWRDodcoHEfDUSbxfTZ6IExSojSIU2RnD6WllYWFdD1GFpBJOmQB8rAc8wJIBdHFdQnX8Ttl7hZ6rtgqEYMzYVMuJ2F2r1HSU1zSAvwpdYP6rRGFRJEfdA9mm3WKfNLSc5cljz0X/TXy0vVlAV95l9qcfFzPmrkNIst9FZSwpvB49LyAVke04FQPPwLgVH4gphiJH3jvZ7I+J5lS8VAgMBAAGjUDBOMB0GA1UdDgQWBBTTyP6Cc5HlBJ5+ucVCwGc5ogKNGzAfBgNVHSMEGDAWgBTTyP6Cc5HlBJ5+ucVCwGc5ogKNGzAMBgNVHRMEBTADAQH/MA0GCSqGSIb3DQEBCwUAA4IBAQAvMS4EQeP/ipV4jOG5lO6/tYCb/iJeAduOnRhkJk0DbX329lDLZhTTL/x/w/9muCVcvLrzEp6PN+VWfw5E5FWtZN0yhGtP9R+vZnrV+oc2zGD+no1/ySFOe3EiJCO5dehxKjYEmBRv5sU/LZFKZpozKN/BMEa6CqLuxbzb7ykxVr7EVFXwltPxzE9TmL9OACNNyF5eJHWMRMllarUvkcXlh4pux4ks9e6zV9DQBy2zds9f1I3qxg0eX6JnGrXi/ZiCT+lJgVe3ZFXiejiLAiKB04sXW3ti0LW3lx13Y1YlQ4/tlpgTgfIJxKV6nyPiLoK0nywbMd+vpAirDt2Oc+hk</ds:X509Certificate>
+                    </ds:X509Data>
+                  </ds:KeyInfo>
+                </md:KeyDescriptor>
+                <md:KeyDescriptor use="encryption">
+                  <ds:KeyInfo xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
+                    <ds:X509Data>
+                      <ds:X509Certificate>MIIEEzCCAvugAwIBAgIJAIc1qzLrv+5nMA0GCSqGSIb3DQEBCwUAMIGfMQswCQYDVQQGEwJVUzELMAkGA1UECAwCQ08xFDASBgNVBAcMC0Nhc3RsZSBSb2NrMRwwGgYDVQQKDBNTYW1sIFRlc3RpbmcgU2VydmVyMQswCQYDVQQLDAJJVDEgMB4GA1UEAwwXc2ltcGxlc2FtbHBocC5jZmFwcHMuaW8xIDAeBgkqhkiG9w0BCQEWEWZoYW5pa0BwaXZvdGFsLmlvMB4XDTE1MDIyMzIyNDUwM1oXDTI1MDIyMjIyNDUwM1owgZ8xCzAJBgNVBAYTAlVTMQswCQYDVQQIDAJDTzEUMBIGA1UEBwwLQ2FzdGxlIFJvY2sxHDAaBgNVBAoME1NhbWwgVGVzdGluZyBTZXJ2ZXIxCzAJBgNVBAsMAklUMSAwHgYDVQQDDBdzaW1wbGVzYW1scGhwLmNmYXBwcy5pbzEgMB4GCSqGSIb3DQEJARYRZmhhbmlrQHBpdm90YWwuaW8wggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQC4cn62E1xLqpN34PmbrKBbkOXFjzWgJ9b+pXuaRft6A339uuIQeoeH5qeSKRVTl32L0gdz2ZivLwZXW+cqvftVW1tvEHvzJFyxeTW3fCUeCQsebLnA2qRa07RkxTo6Nf244mWWRDodcoHEfDUSbxfTZ6IExSojSIU2RnD6WllYWFdD1GFpBJOmQB8rAc8wJIBdHFdQnX8Ttl7hZ6rtgqEYMzYVMuJ2F2r1HSU1zSAvwpdYP6rRGFRJEfdA9mm3WKfNLSc5cljz0X/TXy0vVlAV95l9qcfFzPmrkNIst9FZSwpvB49LyAVke04FQPPwLgVH4gphiJH3jvZ7I+J5lS8VAgMBAAGjUDBOMB0GA1UdDgQWBBTTyP6Cc5HlBJ5+ucVCwGc5ogKNGzAfBgNVHSMEGDAWgBTTyP6Cc5HlBJ5+ucVCwGc5ogKNGzAMBgNVHRMEBTADAQH/MA0GCSqGSIb3DQEBCwUAA4IBAQAvMS4EQeP/ipV4jOG5lO6/tYCb/iJeAduOnRhkJk0DbX329lDLZhTTL/x/w/9muCVcvLrzEp6PN+VWfw5E5FWtZN0yhGtP9R+vZnrV+oc2zGD+no1/ySFOe3EiJCO5dehxKjYEmBRv5sU/LZFKZpozKN/BMEa6CqLuxbzb7ykxVr7EVFXwltPxzE9TmL9OACNNyF5eJHWMRMllarUvkcXlh4pux4ks9e6zV9DQBy2zds9f1I3qxg0eX6JnGrXi/ZiCT+lJgVe3ZFXiejiLAiKB04sXW3ti0LW3lx13Y1YlQ4/tlpgTgfIJxKV6nyPiLoK0nywbMd+vpAirDt2Oc+hk</ds:X509Certificate>
+                    </ds:X509Data>
+                  </ds:KeyInfo>
+                </md:KeyDescriptor>
+                <md:SingleLogoutService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="http://example.com/saml2/idp/SingleLogoutService.php"/>
+                <md:NameIDFormat>urn:oasis:names:tc:SAML:2.0:nameid-format:transient</md:NameIDFormat>
+                <md:SingleSignOnService Binding="urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect" Location="http://example.com/saml2/idp/SSOService.php"/>
+              </md:IDPSSODescriptor>
+              <md:ContactPerson contactType="technical">
+                <md:GivenName>Filip</md:GivenName>
+                <md:SurName>Hanik</md:SurName>
+                <md:EmailAddress>fhanik@pivotal.io</md:EmailAddress>
+              </md:ContactPerson>
+            </md:EntityDescriptor>
+            """;
 
     public static final String OIDC_ACCEPTANCE_URL = "https://oidc10.uaa-acceptance.cf-app.com/";
+    private static final Base64.Encoder BASE_64_ENCODER = Base64.getEncoder();
+
+    private static final DefaultResponseErrorHandler fiveHundredErrorHandler = new DefaultResponseErrorHandler() {
+        @Override
+        protected boolean hasError(HttpStatusCode statusCode) {
+            return statusCode.is5xxServerError();
+        }
+    };
 
     public static void updateUserToForcePasswordChange(RestTemplate restTemplate, String baseUrl, String adminToken, String userId) {
         updateUserToForcePasswordChange(restTemplate, baseUrl, adminToken, userId, null);
@@ -137,10 +155,11 @@ public class IntegrationTestUtils {
         }
         UserAccountStatus userAccountStatus = new UserAccountStatus();
         userAccountStatus.setPasswordChangeRequired(true);
-        restTemplate.exchange(baseUrl + "/Users/{user-id}/status", HttpMethod.PATCH, new HttpEntity<>(userAccountStatus, headers), UserAccountStatus.class, userId);
+        final ResponseEntity<UserAccountStatus> response = restTemplate.exchange(baseUrl + "/Users/{user-id}/status", HttpMethod.PATCH, new HttpEntity<>(userAccountStatus, headers), UserAccountStatus.class, userId);
+        assertStatusCode(response, HttpStatus.OK);
     }
 
-    public static ScimUser createUnapprovedUser(ServerRunning serverRunning) {
+    public static ScimUser createUnapprovedUser(ServerRunningExtension serverRunning) {
         String userName = "bob-" + new RandomValueStringGenerator().generate();
         String userEmail = userName + "@example.com";
 
@@ -154,13 +173,13 @@ public class IntegrationTestUtils {
         user.setVerified(true);
 
         ResponseEntity<ScimUser> result = restTemplate.postForEntity(serverRunning.getUrl("/Users"), user, ScimUser.class);
-        assertEquals(HttpStatus.CREATED, result.getStatusCode());
+        assertThat(result.getStatusCode()).isEqualTo(HttpStatus.CREATED);
 
         return user;
     }
 
     public static boolean isMember(String userId, ScimGroup group) {
-        for (ScimGroupMember member : group.getMembers()) {
+        for (ScimGroupMember<?> member : group.getMembers()) {
             if (userId.equals(member.getMemberId())) {
                 return true;
             }
@@ -168,14 +187,17 @@ public class IntegrationTestUtils {
         return false;
     }
 
-
     public static UserInfoResponse getUserInfo(String url, String token) throws URISyntaxException {
         RestTemplate rest = new RestTemplate(createRequestFactory(true, 60_000));
         MultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
         headers.add(AUTHORIZATION, "Bearer " + token);
         headers.add(ACCEPT, APPLICATION_JSON_VALUE);
         RequestEntity<Void> request = new RequestEntity<>(headers, HttpMethod.GET, new URI(url + "/userinfo"));
-        return rest.exchange(request, UserInfoResponse.class).getBody();
+        final ResponseEntity<UserInfoResponse> response = rest.exchange(request, UserInfoResponse.class);
+        assertStatusCode(response, HttpStatus.OK);
+        final UserInfoResponse responseBody = response.getBody();
+        assertThat(responseBody).isNotNull();
+        return responseBody;
     }
 
     public static void deleteZone(String baseUrl, String id, String adminToken) throws URISyntaxException {
@@ -184,62 +206,32 @@ public class IntegrationTestUtils {
         headers.add(AUTHORIZATION, "Bearer " + adminToken);
         headers.add(ACCEPT, APPLICATION_JSON_VALUE);
         RequestEntity<Void> request = new RequestEntity<>(headers, HttpMethod.DELETE, new URI(baseUrl + "/identity-zones/" + id));
-        rest.exchange(request, Void.class);
+        final ResponseEntity<Void> response = rest.exchange(request, Void.class);
+        assertStatusCode(response, HttpStatus.OK);
     }
 
-    public static MfaProvider createGoogleMfaProvider(String url, String token, MfaProvider<GoogleMfaProviderConfig> provider, String zoneSwitchId) {
-        RestTemplate template = new RestTemplate();
-        MultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
-        headers.add("Accept", APPLICATION_JSON_VALUE);
-        headers.add("Authorization", "bearer " + token);
-        headers.add("Content-Type", APPLICATION_JSON_VALUE);
-        if (hasText(zoneSwitchId)) {
-            headers.add(IdentityZoneSwitchingFilter.HEADER, zoneSwitchId);
-        }
-        HttpEntity getHeaders = new HttpEntity<>(provider, headers);
-        ResponseEntity<MfaProvider> providerResponse = template.exchange(
-                url + "/mfa-providers",
-                HttpMethod.POST,
-                getHeaders,
-                MfaProvider.class
+    public static boolean zoneExists(final String baseUrl, final String id, final String adminToken) throws URISyntaxException {
+        final RestTemplate restTemplate = new RestTemplate(createRequestFactory(true, 60_000));
+
+        final MultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
+        headers.add(AUTHORIZATION, "Bearer " + adminToken);
+        headers.add(ACCEPT, APPLICATION_JSON_VALUE);
+
+        final RequestEntity<Map<Object, Object>> request = new RequestEntity<>(
+                headers,
+                HttpMethod.GET,
+                new URI(baseUrl + "/identity-zones/" + id)
         );
-        if (providerResponse.getStatusCode() == HttpStatus.CREATED) {
-            return providerResponse.getBody();
+        try {
+            restTemplate.exchange(request, Map.class);
+        } catch (final RestClientException e) {
+            if (e instanceof HttpClientErrorException.NotFound) {
+                return false;
+            }
+            throw new RuntimeException(e);
         }
-        throw new RuntimeException("Invalid return code:" + providerResponse.getStatusCode());
-
+        return true;
     }
-
-    public static class RegexMatcher extends TypeSafeMatcher<String> {
-
-        private final String regex;
-
-        RegexMatcher(final String regex) {
-            this.regex = regex;
-        }
-
-        @Override
-        public void describeTo(final Description description) {
-            description.appendText("matches regex=`" + regex + "`");
-        }
-
-        @Override
-        public boolean matchesSafely(final String string) {
-            return string.matches(regex);
-        }
-
-
-        public static RegexMatcher matchesRegex(final String regex) {
-            return new RegexMatcher(regex);
-        }
-    }
-
-    private static final DefaultResponseErrorHandler fiveHundredErrorHandler = new DefaultResponseErrorHandler() {
-        @Override
-        protected boolean hasError(HttpStatus statusCode) {
-            return statusCode.is5xxServerError();
-        }
-    };
 
     public static boolean doesSupportZoneDNS() {
         try {
@@ -282,6 +274,7 @@ public class IntegrationTestUtils {
 
             @Override
             public void handleError(ClientHttpResponse response) {
+                // ignore
             }
         });
         return client;
@@ -313,7 +306,11 @@ public class IntegrationTestUtils {
         user.setActive(true);
         user.setPassword("secr3T");
         user.setPhoneNumbers(Collections.singletonList(new PhoneNumber(phoneNumber)));
-        return client.postForEntity(url + "/Users", user, ScimUser.class).getBody();
+        final ResponseEntity<ScimUser> response = client.postForEntity(url + "/Users", user, ScimUser.class);
+        assertStatusCode(response, HttpStatus.CREATED);
+        final ScimUser responseBody = response.getBody();
+        assertThat(responseBody).isNotNull();
+        return responseBody;
     }
 
     public static ScimUser createUser(String token, String url, ScimUser user, String zoneSwitchId) {
@@ -326,7 +323,7 @@ public class IntegrationTestUtils {
         if (hasText(zoneSwitchId)) {
             headers.add(IdentityZoneSwitchingFilter.HEADER, zoneSwitchId);
         }
-        HttpEntity getHeaders = new HttpEntity<>(user, headers);
+        HttpEntity<ScimUser> getHeaders = new HttpEntity<>(user, headers);
         ResponseEntity<ScimUser> userInfoGet = template.exchange(
                 url + "/Users",
                 HttpMethod.POST,
@@ -346,7 +343,7 @@ public class IntegrationTestUtils {
         headers.add("Authorization", "bearer " + token);
         headers.add("Content-Type", APPLICATION_JSON_VALUE);
         headers.add("If-Match", String.valueOf(user.getVersion()));
-        HttpEntity getHeaders = new HttpEntity<>(user, headers);
+        HttpEntity<ScimUser> getHeaders = new HttpEntity<>(user, headers);
         ResponseEntity<ScimUser> userInfoGet = template.exchange(
                 url + "/Users/" + user.getId(),
                 HttpMethod.PUT,
@@ -384,12 +381,12 @@ public class IntegrationTestUtils {
         if (userInfoGet.getStatusCode() == HttpStatus.OK) {
 
             SearchResults<ScimUser> results = JsonUtils.readValue(userInfoGet.getBody(), SearchResults.class);
-            assertNotNull(results);
+            assertThat(results).isNotNull();
             List<ScimUser> resources = results.getResources();
-            if (resources.size() < 1) {
+            if (resources.isEmpty()) {
                 return null;
             }
-            user = JsonUtils.readValue(JsonUtils.writeValueAsString(resources.get(0)), ScimUser.class);
+            user = JsonUtils.readValue(JsonUtils.writeValueAsString(resources.getFirst()), ScimUser.class);
         }
         return user;
     }
@@ -435,12 +432,12 @@ public class IntegrationTestUtils {
         if (userInfoGet.getStatusCode() == HttpStatus.OK) {
 
             HashMap results = JsonUtils.readValue(userInfoGet.getBody(), HashMap.class);
-            assertNotNull(results);
+            assertThat(results).isNotNull();
             List resources = (List) results.get("resources");
-            if (resources.size() < 1) {
+            if (resources.isEmpty()) {
                 return null;
             }
-            HashMap resource = (HashMap) resources.get(0);
+            HashMap resource = (HashMap) resources.getFirst();
             return (String) resource.get("id");
         }
         throw new RuntimeException("Invalid return code:" + userInfoGet.getStatusCode());
@@ -476,8 +473,8 @@ public class IntegrationTestUtils {
 
         @SuppressWarnings("rawtypes")
         Map results = response.getBody();
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertTrue("There should be more than zero groups", (Integer) results.get("totalResults") > 0);
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat((Integer) results.get("totalResults")).as("There should be more than zero groups").isPositive();
         return results;
     }
 
@@ -486,8 +483,8 @@ public class IntegrationTestUtils {
                                      String groupName) {
         Map map = findAllGroups(client, url);
         for (Map group : (List<Map>) map.get("resources")) {
-            assertTrue(group.containsKey("displayName"));
-            assertTrue(group.containsKey("id"));
+            assertThat(group).containsKey("displayName")
+                    .containsKey("id");
             if (groupName.equals(group.get("displayName"))) {
                 return (String) group.get("id");
             }
@@ -495,6 +492,23 @@ public class IntegrationTestUtils {
         return null;
     }
 
+    public static ScimGroup ensureGroupExists(
+            final String token,
+            final String zoneId,
+            final String url,
+            final String displayName
+    ) {
+        final ScimGroup existingGroup = getGroup(token, zoneId, url, displayName);
+        if (existingGroup != null) {
+            return existingGroup;
+        }
+        final ScimGroup group = new ScimGroup(null, displayName, zoneId);
+        return createGroup(token, zoneId, url, group);
+    }
+
+    /**
+     * @return the group or {@code null} if it does not exist
+     */
     public static ScimGroup getGroup(String token,
                                      String zoneId,
                                      String url,
@@ -511,37 +525,43 @@ public class IntegrationTestUtils {
                 url + "/Groups?filter=displayName eq \"{groupId}\"",
                 HttpMethod.GET,
                 new HttpEntity<>(headers),
-                new ParameterizedTypeReference<SearchResults<ScimGroup>>() {
+                new ParameterizedTypeReference<>() {
                 },
                 displayName
         );
+        assertStatusCode(findGroup, HttpStatus.OK);
         if (findGroup.getBody().getTotalResults() == 0) {
             return null;
         } else {
-            return findGroup.getBody().getResources().iterator().next();
+            return findGroup.getBody().getResources().getFirst();
         }
     }
 
-    public static ScimGroup createGroup(String token,
-                                        String zoneId,
-                                        String url,
-                                        ScimGroup group) {
-        RestTemplate template = new RestTemplate();
+    public static ScimGroup createGroup(
+            final String token,
+            final String zoneId,
+            final String url,
+            final ScimGroup group
+    ) {
+        final RestTemplate template = new RestTemplate();
         template.setErrorHandler(fiveHundredErrorHandler);
-        MultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
+        final MultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
         headers.add("Accept", APPLICATION_JSON_VALUE);
         headers.add("Authorization", "bearer " + token);
         headers.add("Content-Type", APPLICATION_JSON_VALUE);
         if (hasText(zoneId)) {
             headers.add(IdentityZoneSwitchingFilter.HEADER, zoneId);
         }
-        ResponseEntity<ScimGroup> createGroup = template.exchange(
+        final ResponseEntity<ScimGroup> response = template.exchange(
                 url + "/Groups",
                 HttpMethod.POST,
                 new HttpEntity<>(JsonUtils.writeValueAsBytes(group), headers),
                 ScimGroup.class
         );
-        return createGroup.getBody();
+        assertStatusCode(response, HttpStatus.CREATED);
+        final ScimGroup responseBody = response.getBody();
+        assertThat(responseBody).isNotNull();
+        return responseBody;
     }
 
     private static ScimGroup updateGroup(String token,
@@ -564,7 +584,7 @@ public class IntegrationTestUtils {
                 ScimGroup.class,
                 group.getId()
         );
-        assertEquals(HttpStatus.OK, updateGroup.getStatusCode());
+        assertThat(updateGroup.getStatusCode()).isEqualTo(HttpStatus.OK);
         return updateGroup.getBody();
     }
 
@@ -623,8 +643,9 @@ public class IntegrationTestUtils {
             headers.add(IdentityZoneSwitchingFilter.HEADER, zoneId);
         }
 
-
-        template.exchange(url + "/Groups/{groupId}", HttpMethod.DELETE, new HttpEntity<>(headers), ScimGroup.class, groupId);
+        final ResponseEntity<ScimGroup> response = template.exchange(url + "/Groups/{groupId}", HttpMethod.DELETE,
+                new HttpEntity<>(headers), ScimGroup.class, groupId);
+        assertStatusCode(response, HttpStatus.OK);
     }
 
     private static IdentityZone createZoneOrUpdateSubdomain(RestTemplate client,
@@ -638,7 +659,7 @@ public class IntegrationTestUtils {
 
         if (zoneGet.getStatusCode() == HttpStatus.OK) {
             IdentityZone existing = JsonUtils.readValue(zoneGet.getBody(), IdentityZone.class);
-            assertNotNull(existing);
+            assertThat(existing).isNotNull();
             existing.setSubdomain(subdomain);
             existing.setConfig(config);
             existing.setActive(active);
@@ -655,13 +676,16 @@ public class IntegrationTestUtils {
         identityZone.setConfig(config);
         identityZone.setActive(active);
         ResponseEntity<IdentityZone> zone = client.postForEntity(url + "/identity-zones", identityZone, IdentityZone.class);
-        return zone.getBody();
+        assertStatusCode(zone, HttpStatus.CREATED);
+        final IdentityZone responseBody = zone.getBody();
+        assertThat(responseBody).isNotNull();
+        return responseBody;
     }
 
     public static IdentityZone createInactiveIdentityZone(RestTemplate client, String url) {
         createZoneOrUpdateSubdomain(client, url, "testzoneinactive", "testzoneinactive", new IdentityZoneConfiguration(), false);
         ResponseEntity<IdentityZone> zoneGet = client.getForEntity(url + "/identity-zones/{id}", IdentityZone.class, "testzoneinactive");
-        if (!(zoneGet.getStatusCode() == HttpStatus.OK)) {
+        if (zoneGet.getStatusCode() != HttpStatus.OK) {
             throw new RuntimeException("Could not create inactive zone.");
         }
         return zoneGet.getBody();
@@ -682,12 +706,12 @@ public class IntegrationTestUtils {
     ) {
         ScimGroupMember groupMember = new ScimGroupMember(userId);
         ResponseEntity<String> response = client.postForEntity(url + "/Groups/{groupId}/members", groupMember, String.class, groupId);
-        assertEquals(HttpStatus.CREATED, response.getStatusCode());
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.CREATED);
     }
 
-    public static BaseClientDetails getClient(String token,
-                                              String url,
-                                              String clientId) {
+    public static UaaClientDetails getClient(String token,
+                                             String url,
+                                             String clientId) {
         RestTemplate template = new RestTemplate();
         MultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
         headers.add("Accept", APPLICATION_JSON_VALUE);
@@ -696,20 +720,36 @@ public class IntegrationTestUtils {
 
         HttpEntity getHeaders = new HttpEntity<>(null, headers);
 
-        ResponseEntity<BaseClientDetails> response = template.exchange(
+        ResponseEntity<UaaClientDetails> response = template.exchange(
                 url + "/oauth/clients/" + clientId,
                 HttpMethod.GET,
                 getHeaders,
-                BaseClientDetails.class
+                UaaClientDetails.class
         );
+        assertStatusCode(response, HttpStatus.OK);
 
         return response.getBody();
     }
 
-    public static BaseClientDetails createClientAsZoneAdmin(String zoneAdminToken,
-                                                            String url,
-                                                            String zoneId,
-                                                            BaseClientDetails client) {
+    private static void assertStatusCode(final ResponseEntity<?> response, final HttpStatus... expectedStatusCodes) {
+        final boolean matchesAnyExpectedStatusCode = Stream.of(expectedStatusCodes)
+                .anyMatch(it -> it.equals(response.getStatusCode()));
+        if (!matchesAnyExpectedStatusCode) {
+            final String expectedStatusCodesString = Arrays.stream(expectedStatusCodes)
+                    .map(HttpStatus::value)
+                    .map(Object::toString)
+                    .collect(joining(" or "));
+            throw new RuntimeException(
+                    "Invalid return code: expected %s, got %d".formatted(expectedStatusCodesString,
+                            response.getStatusCode().value())
+            );
+        }
+    }
+
+    public static UaaClientDetails createClientAsZoneAdmin(String zoneAdminToken,
+                                                           String url,
+                                                           String zoneId,
+                                                           UaaClientDetails client) {
 
         RestTemplate template = new RestTemplate();
         MultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
@@ -725,26 +765,26 @@ public class IntegrationTestUtils {
                 String.class
         );
         if (clientCreate.getStatusCode() == HttpStatus.CREATED) {
-            return JsonUtils.readValue(clientCreate.getBody(), BaseClientDetails.class);
+            return JsonUtils.readValue(clientCreate.getBody(), UaaClientDetails.class);
         }
         throw new RuntimeException("Invalid return code:" + clientCreate.getStatusCode());
     }
 
-    public static BaseClientDetails createClient(String adminToken,
-                                                 String url,
-                                                 BaseClientDetails client) {
+    public static UaaClientDetails createClient(String adminToken,
+                                                String url,
+                                                UaaClientDetails client) {
         return createOrUpdateClient(adminToken, url, null, client);
     }
 
-    public static BaseClientDetails createOrUpdateClient(String adminToken,
-                                                         String url,
-                                                         String switchToZoneId,
-                                                         BaseClientDetails client) {
+    public static UaaClientDetails createOrUpdateClient(String adminToken,
+                                                        String url,
+                                                        String switchToZoneId,
+                                                        UaaClientDetails client) {
 
         RestTemplate template = new RestTemplate();
         template.setErrorHandler(new DefaultResponseErrorHandler() {
             @Override
-            protected boolean hasError(HttpStatus statusCode) {
+            protected boolean hasError(HttpStatusCode statusCode) {
                 return statusCode.is5xxServerError();
             }
         });
@@ -763,7 +803,7 @@ public class IntegrationTestUtils {
                 String.class
         );
         if (clientCreate.getStatusCode() == HttpStatus.CREATED) {
-            return JsonUtils.readValue(clientCreate.getBody(), BaseClientDetails.class);
+            return JsonUtils.readValue(clientCreate.getBody(), UaaClientDetails.class);
         } else if (clientCreate.getStatusCode() == HttpStatus.CONFLICT) {
             HttpEntity putHeaders = new HttpEntity<>(JsonUtils.writeValueAsBytes(client), headers);
             ResponseEntity<String> clientUpdate = template.exchange(
@@ -773,7 +813,7 @@ public class IntegrationTestUtils {
                     String.class
             );
             if (clientUpdate.getStatusCode() == HttpStatus.OK) {
-                return JsonUtils.readValue(clientCreate.getBody(), BaseClientDetails.class);
+                return JsonUtils.readValue(clientCreate.getBody(), UaaClientDetails.class);
             } else {
                 throw new RuntimeException("Invalid update return code:" + clientUpdate.getStatusCode());
             }
@@ -783,7 +823,7 @@ public class IntegrationTestUtils {
 
     public static void updateClient(String url,
                                     String token,
-                                    BaseClientDetails client) {
+                                    UaaClientDetails client) {
 
         RestTemplate template = new RestTemplate();
         MultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
@@ -793,23 +833,23 @@ public class IntegrationTestUtils {
 
         HttpEntity getHeaders = new HttpEntity<>(client, headers);
 
-        ResponseEntity<BaseClientDetails> response = template.exchange(
+        ResponseEntity<UaaClientDetails> response = template.exchange(
                 url + "/oauth/clients/" + client.getClientId(),
                 HttpMethod.PUT,
                 getHeaders,
-                BaseClientDetails.class
+                UaaClientDetails.class
         );
-
-        response.getBody();
+        assertStatusCode(response, HttpStatus.OK);
+        assertThat(response.getBody()).isNotNull();
     }
 
-    public static IdentityProvider getProvider(String zoneAdminToken,
-                                               String url,
-                                               String zoneId,
-                                               String originKey) {
-        List<IdentityProvider> providers = getProviders(zoneAdminToken, url, zoneId);
+    public static IdentityProvider<? extends AbstractIdentityProviderDefinition> getProvider(String zoneAdminToken,
+                                                                                             String url,
+                                                                                             String zoneId,
+                                                                                             String originKey) {
+        List<IdentityProvider<? extends AbstractIdentityProviderDefinition>> providers = getProviders(zoneAdminToken, url, zoneId);
         if (providers != null) {
-            for (IdentityProvider p : providers) {
+            for (IdentityProvider<? extends AbstractIdentityProviderDefinition> p : providers) {
                 if (zoneId.equals(p.getIdentityZoneId()) && originKey.equals(p.getOriginKey())) {
                     return p;
                 }
@@ -818,16 +858,19 @@ public class IntegrationTestUtils {
         return null;
     }
 
-    private static List<IdentityProvider> getProviders(String zoneAdminToken,
-                                                       String url,
-                                                       String zoneId) {
+    /**
+     * @return the list of identity providers or {@code null} if the request was not successful
+     */
+    private static List<IdentityProvider<? extends AbstractIdentityProviderDefinition>> getProviders(String zoneAdminToken,
+                                                                                                     String url,
+                                                                                                     String zoneId) {
         RestTemplate client = new RestTemplate();
         MultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
         headers.add("Accept", APPLICATION_JSON_VALUE);
         headers.add("Authorization", "bearer " + zoneAdminToken);
         headers.add("Content-Type", APPLICATION_JSON_VALUE);
         headers.add(IdentityZoneSwitchingFilter.HEADER, zoneId);
-        HttpEntity getHeaders = new HttpEntity<>(headers);
+        HttpEntity<Object> getHeaders = new HttpEntity<>(headers);
         ResponseEntity<String> providerGet = client.exchange(
                 url + "/identity-providers",
                 HttpMethod.GET,
@@ -835,7 +878,7 @@ public class IntegrationTestUtils {
                 String.class
         );
         if (providerGet != null && providerGet.getStatusCode() == HttpStatus.OK) {
-            return JsonUtils.readValue(providerGet.getBody(), new TypeReference<List<IdentityProvider>>() {
+            return JsonUtils.readValue(providerGet.getBody(), new TypeReference<List<IdentityProvider<? extends AbstractIdentityProviderDefinition>>>() {
             });
         }
         return null;
@@ -845,43 +888,51 @@ public class IntegrationTestUtils {
                                       String url,
                                       String zoneId,
                                       String originKey) {
-        IdentityProvider provider = getProvider(zoneAdminToken, url, zoneId, originKey);
+        IdentityProvider<? extends AbstractIdentityProviderDefinition> provider = getProvider(zoneAdminToken, url, zoneId, originKey);
+        if (provider == null) {
+            return;
+        }
         RestTemplate client = new RestTemplate();
         MultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
         headers.add("Authorization", "bearer " + zoneAdminToken);
         headers.add(IdentityZoneSwitchingFilter.HEADER, zoneId);
-        HttpEntity getHeaders = new HttpEntity<>(headers);
-        client.exchange(
+        HttpEntity<?> getHeaders = new HttpEntity<>(headers);
+        final ResponseEntity<String> response = client.exchange(
                 url + "/identity-providers/" + provider.getId(),
                 HttpMethod.DELETE,
                 getHeaders,
                 String.class
         );
+        assertStatusCode(response, HttpStatus.OK);
     }
 
     /**
      * @param originKey            The unique identifier used to reference the identity provider in UAA.
      * @param addShadowUserOnLogin Specifies whether UAA should automatically create shadow users upon successful SAML authentication.
      * @return An object representation of an identity provider.
-     * @throws Exception on error
      */
-    public static IdentityProvider createIdentityProvider(String originKey, boolean addShadowUserOnLogin, String baseUrl, ServerRunning serverRunning) throws Exception {
+    public static IdentityProvider<SamlIdentityProviderDefinition> createIdentityProvider(String originKey,
+                                                                                          boolean addShadowUserOnLogin,
+                                                                                          String baseUrl,
+                                                                                          ServerRunningExtension serverRunning,
+                                                                                          String samlServerUrl) {
         getZoneAdminToken(baseUrl, serverRunning);
-        SamlIdentityProviderDefinition samlIdentityProviderDefinition = createSimplePHPSamlIDP(originKey, OriginKeys.UAA);
+        SamlIdentityProviderDefinition samlIdentityProviderDefinition = createSimplePHPSamlIDP(originKey, OriginKeys.UAA, samlServerUrl);
         return createIdentityProvider("simplesamlphp for uaa", addShadowUserOnLogin, baseUrl, serverRunning, samlIdentityProviderDefinition);
     }
 
     /**
      * @param addShadowUserOnLogin Specifies whether UAA should automatically create shadow users upon successful SAML authentication.
      * @return An object representation of an identity provider.
-     * @throws Exception on error
      */
-    public static IdentityProvider createIdentityProvider(String name, boolean addShadowUserOnLogin, String baseUrl, ServerRunning serverRunning, SamlIdentityProviderDefinition samlIdentityProviderDefinition) throws Exception {
+    public static IdentityProvider<SamlIdentityProviderDefinition> createIdentityProvider(
+            String name, boolean addShadowUserOnLogin, String baseUrl, ServerRunningExtension serverRunning,
+            SamlIdentityProviderDefinition samlIdentityProviderDefinition) {
         String zoneAdminToken = getZoneAdminToken(baseUrl, serverRunning);
 
         samlIdentityProviderDefinition.setAddShadowUserOnLogin(addShadowUserOnLogin);
 
-        IdentityProvider provider = new IdentityProvider();
+        IdentityProvider<SamlIdentityProviderDefinition> provider = new IdentityProvider<>();
         provider.setIdentityZoneId(OriginKeys.UAA);
         provider.setType(OriginKeys.SAML);
         provider.setActive(true);
@@ -890,7 +941,7 @@ public class IntegrationTestUtils {
         provider.setName(name);
 
         provider = IntegrationTestUtils.createOrUpdateProvider(zoneAdminToken, baseUrl, provider);
-        assertNotNull(provider.getId());
+        assertThat(provider.getId()).isNotNull();
         return provider;
     }
 
@@ -915,22 +966,21 @@ public class IntegrationTestUtils {
         IntegrationTestUtils.createOrUpdateProvider(clientCredentialsToken, baseUrl, identityProvider);
     }
 
-    public static String getZoneAdminToken(String baseUrl, ServerRunning serverRunning) throws Exception {
+    public static String getZoneAdminToken(String baseUrl, ServerRunningExtension serverRunning) {
         return getZoneAdminToken(baseUrl, serverRunning, OriginKeys.UAA);
     }
 
-    public static String getZoneAdminToken(String baseUrl, ServerRunning serverRunning, String zoneId) {
+    public static String getZoneAdminToken(String baseUrl, ServerRunningExtension serverRunning, String zoneId) {
         RestTemplate adminClient = IntegrationTestUtils.getClientCredentialsTemplate(
                 IntegrationTestUtils.getClientCredentialsResource(baseUrl, new String[0], "admin", "adminsecret")
         );
         String email = new RandomValueStringGenerator().generate() + "@samltesting.org";
         ScimUser user = IntegrationTestUtils.createUser(adminClient, baseUrl, email, "firstname", "lastname", email, true);
 
-        String groupName = "zones." + zoneId + ".admin";
-        ScimGroup group = new ScimGroup(null, groupName, null);
-        createGroup(getClientCredentialsToken(baseUrl, "admin", "adminsecret"), "", baseUrl, group);
+        String groupName = "zones.%s.admin".formatted(zoneId);
+        ensureGroupExists(getClientCredentialsToken(baseUrl, "admin", "adminsecret"), "", baseUrl, groupName);
         String groupId = IntegrationTestUtils.findGroupId(adminClient, baseUrl, groupName);
-        assertThat("Couldn't find group : " + groupId, groupId, is(CoreMatchers.notNullValue()));
+        assertThat(groupId).as("Couldn't find group : " + groupId).isNotNull();
         IntegrationTestUtils.addMemberToGroup(adminClient, baseUrl, user.getId(), groupId);
 
         return IntegrationTestUtils.getAccessTokenByAuthCode(serverRunning,
@@ -951,7 +1001,7 @@ public class IntegrationTestUtils {
     }
 
     public static void updateIdentityProvider(
-            String baseUrl, ServerRunning serverRunning, IdentityProvider provider) {
+            String baseUrl, ServerRunningExtension serverRunning, IdentityProvider<? extends AbstractIdentityProviderDefinition> provider) {
         RestTemplate adminClient = IntegrationTestUtils.getClientCredentialsTemplate(
                 IntegrationTestUtils.getClientCredentialsResource(baseUrl, new String[0], "admin", "adminsecret")
         );
@@ -970,15 +1020,15 @@ public class IntegrationTestUtils {
                         "secr3T");
 
         provider = IntegrationTestUtils.createOrUpdateProvider(zoneAdminToken, baseUrl, provider);
-        assertNotNull(provider.getId());
+        assertThat(provider.getId()).isNotNull();
     }
 
-    public static SamlIdentityProviderDefinition createSimplePHPSamlIDP(String alias, String zoneId) {
+    public static SamlIdentityProviderDefinition createSimplePHPSamlIDP(String alias, String zoneId, String samlServerUrl) {
         if (!("simplesamlphp".equals(alias) || "simplesamlphp2".equals(alias))) {
             throw new IllegalArgumentException("Only valid origins are: simplesamlphp,simplesamlphp2");
         }
         String idpMetaData = "simplesamlphp".equals(alias) ?
-                SIMPLESAMLPHP_UAA_ACCEPTANCE + "/saml2/idp/metadata.php" :
+                samlServerUrl + "/saml2/idp/metadata.php" :
                 EXAMPLE_DOT_COM_SAML_IDP_METADATA;
         SamlIdentityProviderDefinition def = new SamlIdentityProviderDefinition();
         def.setZoneId(zoneId);
@@ -992,18 +1042,19 @@ public class IntegrationTestUtils {
         return def;
     }
 
-    public static IdentityProvider createOrUpdateProvider(String accessToken,
-                                                          String url,
-                                                          IdentityProvider provider) {
+    public static <T extends AbstractIdentityProviderDefinition> IdentityProvider<T> createOrUpdateProvider(String accessToken,
+                                                                                                            String url,
+                                                                                                            IdentityProvider<T> provider) {
+
         RestTemplate client = new RestTemplate();
         MultiValueMap<String, String> headers = new LinkedMultiValueMap<>();
         headers.add("Accept", APPLICATION_JSON_VALUE);
         headers.add("Authorization", "bearer " + accessToken);
         headers.add("Content-Type", APPLICATION_JSON_VALUE);
         headers.add(IdentityZoneSwitchingFilter.HEADER, provider.getIdentityZoneId());
-        List<IdentityProvider> existing = getProviders(accessToken, url, provider.getIdentityZoneId());
+        List<IdentityProvider<? extends AbstractIdentityProviderDefinition>> existing = getProviders(accessToken, url, provider.getIdentityZoneId());
         if (existing != null) {
-            for (IdentityProvider p : existing) {
+            for (IdentityProvider<? extends AbstractIdentityProviderDefinition> p : existing) {
                 if (p.getOriginKey().equals(provider.getOriginKey()) && p.getIdentityZoneId().equals(provider.getIdentityZoneId())) {
                     provider.setId(p.getId());
                     HttpEntity putHeaders = new HttpEntity<>(provider, headers);
@@ -1023,11 +1074,10 @@ public class IntegrationTestUtils {
 
         HttpEntity postHeaders = new HttpEntity<>(provider, headers);
         ResponseEntity<String> providerPost = client.exchange(
-                url + "/identity-providers/{id}",
+                url + "/identity-providers",
                 HttpMethod.POST,
                 postHeaders,
-                String.class,
-                provider.getId()
+                String.class
         );
         if (providerPost.getStatusCode() == HttpStatus.CREATED) {
             return JsonUtils.readValue(providerPost.getBody(), IdentityProvider.class);
@@ -1046,7 +1096,7 @@ public class IntegrationTestUtils {
         HttpHeaders headers = new HttpHeaders();
         headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
         headers.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
-        headers.set("Authorization", "Basic " + new String(Base64.encode(String.format("%s:%s", clientId, clientSecret).getBytes())));
+        headers.set("Authorization", "Basic " + new String(BASE_64_ENCODER.encode("%s:%s".formatted(clientId, clientSecret).getBytes())));
 
         @SuppressWarnings("rawtypes")
         ResponseEntity<Map> response = template.exchange(
@@ -1055,10 +1105,12 @@ public class IntegrationTestUtils {
                 new HttpEntity<>(formData, headers),
                 Map.class);
 
-        Assert.assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
 
+        final Map responseBody = response.getBody();
+        assertThat(responseBody).isNotNull();
         @SuppressWarnings("unchecked")
-        OAuth2AccessToken accessToken = DefaultOAuth2AccessToken.valueOf(response.getBody());
+        OAuth2AccessToken accessToken = DefaultOAuth2AccessToken.valueOf(responseBody);
         return accessToken.getValue();
     }
 
@@ -1069,7 +1121,7 @@ public class IntegrationTestUtils {
                                        String password,
                                        String scopes) {
         RestTemplate template = new RestTemplate();
-        template.getMessageConverters().add(0, new StringHttpMessageConverter(StandardCharsets.UTF_8));
+        template.getMessageConverters().addFirst(new StringHttpMessageConverter(StandardCharsets.UTF_8));
         template.setRequestFactory(new StatelessRequestFactory());
         MultiValueMap<String, String> formData = new LinkedMultiValueMap<>();
         formData.add("grant_type", "password");
@@ -1083,7 +1135,7 @@ public class IntegrationTestUtils {
         HttpHeaders headers = new HttpHeaders();
         headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
         headers.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
-        headers.set("Authorization", "Basic " + new String(Base64.encode(String.format("%s:%s", clientId, clientSecret).getBytes())));
+        headers.set("Authorization", "Basic " + new String(BASE_64_ENCODER.encode("%s:%s".formatted(clientId, clientSecret).getBytes())));
 
         @SuppressWarnings("rawtypes")
         ResponseEntity<Map> response = template.exchange(
@@ -1092,11 +1144,47 @@ public class IntegrationTestUtils {
                 new HttpEntity<>(formData, headers),
                 Map.class);
 
-        Assert.assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
         return response.getBody();
     }
 
-    public static String getClientCredentialsToken(ServerRunning serverRunning,
+    public static Map getJwtBearerToken(String baseUrl,
+                                       String clientId,
+                                       String clientSecret,
+                                       String assertion,
+                                       String loginHint,
+                                       String scopes) {
+        RestTemplate template = new RestTemplate();
+        template.getMessageConverters().addFirst(new StringHttpMessageConverter(StandardCharsets.UTF_8));
+        template.setRequestFactory(new StatelessRequestFactory());
+        MultiValueMap<String, String> formData = new LinkedMultiValueMap<>();
+        formData.add("grant_type", "urn:ietf:params:oauth:grant-type:jwt-bearer");
+        formData.add("client_id", clientId);
+        formData.add("assertion", assertion);
+        if (loginHint != null) {
+            formData.add("login_hint", "{\"origin\": \""+loginHint+"\"}");
+        }
+        formData.add("response_type", "token id_token");
+        if (hasText(scopes)) {
+            formData.add("scope", scopes);
+        }
+        HttpHeaders headers = new HttpHeaders();
+        headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
+        headers.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
+        headers.set("Authorization", "Basic " + new String(BASE_64_ENCODER.encode("%s:%s".formatted(clientId, clientSecret).getBytes())));
+
+        @SuppressWarnings("rawtypes")
+        ResponseEntity<Map> response = template.exchange(
+                baseUrl + "/oauth/token",
+                HttpMethod.POST,
+                new HttpEntity<>(formData, headers),
+                Map.class);
+
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        return response.getBody();
+    }
+
+    public static String getClientCredentialsToken(ServerRunningExtension serverRunning,
                                                    String clientId,
                                                    String clientSecret) {
         MultiValueMap<String, String> formData = new LinkedMultiValueMap<>();
@@ -1105,18 +1193,20 @@ public class IntegrationTestUtils {
         HttpHeaders headers = new HttpHeaders();
         headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
         headers.set("Authorization",
-                "Basic " + new String(Base64.encode(String.format("%s:%s", clientId, clientSecret).getBytes())));
+                "Basic " + new String(BASE_64_ENCODER.encode("%s:%s".formatted(clientId, clientSecret).getBytes())));
 
         @SuppressWarnings("rawtypes")
         ResponseEntity<Map> response = serverRunning.postForMap("/oauth/token", formData, headers);
-        Assert.assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
 
+        final Map responseBody = response.getBody();
+        assertThat(responseBody).isNotNull();
         @SuppressWarnings("unchecked")
-        OAuth2AccessToken accessToken = DefaultOAuth2AccessToken.valueOf(response.getBody());
+        OAuth2AccessToken accessToken = DefaultOAuth2AccessToken.valueOf(responseBody);
         return accessToken.getValue();
     }
 
-    public static String getAccessTokenByAuthCode(ServerRunning serverRunning,
+    public static String getAccessTokenByAuthCode(ServerRunningExtension serverRunning,
                                                   UaaTestAccounts testAccounts,
                                                   String clientId,
                                                   String clientSecret,
@@ -1127,7 +1217,7 @@ public class IntegrationTestUtils {
                 .get("access_token");
     }
 
-    public static Map<String, String> getAuthorizationCodeTokenMap(ServerRunning serverRunning,
+    public static Map<String, String> getAuthorizationCodeTokenMap(ServerRunningExtension serverRunning,
                                                                    UaaTestAccounts testAccounts,
                                                                    String clientId,
                                                                    String clientSecret,
@@ -1138,7 +1228,6 @@ public class IntegrationTestUtils {
         resource.setClientSecret(clientSecret);
 
         return getAuthorizationCodeTokenMap(serverRunning,
-                testAccounts,
                 clientId,
                 clientSecret,
                 username,
@@ -1155,144 +1244,155 @@ public class IntegrationTestUtils {
 
         headers.setAccept(Arrays.asList(MediaType.TEXT_HTML, MediaType.ALL));
 
-        for (org.apache.http.cookie.Cookie cookie : cookies.getCookies()) {
+        for (org.apache.hc.client5.http.cookie.Cookie cookie : cookies.getCookies()) {
             headers.add("Cookie", cookie.getName() + "=" + cookie.getValue());
         }
         return headers;
-    } 	
-  
-    public static String getAuthorizationResponse(ServerRunning serverRunning,
-			  String clientId,
-			  String username,
-			  String password,
-			  String redirectUri,
-			  String codeChallenge,
-			  String codeChallengeMethod) throws Exception {
-    	BasicCookieStore cookies = new BasicCookieStore();
-    	String mystateid = "mystateid";
-    	ServerRunning.UriBuilder builder = serverRunning.buildUri("/oauth/authorize")
-    			.queryParam("response_type", "code")
-    			.queryParam("state", mystateid)
-    			.queryParam("client_id", clientId);
-    	if (hasText(redirectUri)) {
-    		builder = builder.queryParam("redirect_uri", redirectUri);
-    	}
-    	if (hasText(codeChallenge)) {
-    		builder = builder.queryParam("code_challenge", codeChallenge);
-    	}
-    	if (hasText(codeChallengeMethod)) {
-    		builder = builder.queryParam("code_challenge_method", codeChallengeMethod);
-    	}
-    	URI uri = builder.build();
-    	ResponseEntity<Void> result =
-    			serverRunning.createRestTemplate().exchange(
-    					uri.toString(),
-    					HttpMethod.GET,
-    					new HttpEntity<>(null, getHeaders(cookies)),
-    					Void.class
-    					);
-    	assertEquals(HttpStatus.FOUND, result.getStatusCode());
-    	String location = result.getHeaders().getLocation().toString();
-    	if (result.getHeaders().containsKey("Set-Cookie")) {
-    		for (String header : result.getHeaders().get("Set-Cookie")) {
-    			int nameLength = header.indexOf('=');
-    			cookies.addCookie(new BasicClientCookie(header.substring(0, nameLength), header.substring(nameLength + 1)));
-    		}
-    	}
-    	ResponseEntity<String> response = serverRunning.getForString(location, getHeaders(cookies));
-    	if (response.getHeaders().containsKey("Set-Cookie")) {
-    		for (String cookie : response.getHeaders().get("Set-Cookie")) {
-    			int nameLength = cookie.indexOf('=');
-    			cookies.addCookie(new BasicClientCookie(cookie.substring(0, nameLength), cookie.substring(nameLength + 1)));
-    		}
-    	}
-    	MultiValueMap<String, String> formData = new LinkedMultiValueMap<>();
-    	assertTrue(response.getBody().contains("/login.do"));
-    	assertTrue(response.getBody().contains("username"));
-    	assertTrue(response.getBody().contains("password"));
-    	String csrf = IntegrationTestUtils.extractCookieCsrf(response.getBody());
-    	formData.add("username", username);
-    	formData.add("password", password);
-    	formData.add(CookieBasedCsrfTokenRepository.DEFAULT_CSRF_COOKIE_NAME, csrf);
-    	// Should be redirected to the original URL, but now authenticated
-    	result = serverRunning.postForResponse("/login.do", getHeaders(cookies), formData);
-    	assertEquals(HttpStatus.FOUND, result.getStatusCode());
-    	cookies.clear();
-    	if (result.getHeaders().containsKey("Set-Cookie")) {
-    		for (String cookie : result.getHeaders().get("Set-Cookie")) {
-    			int nameLength = cookie.indexOf('=');
-    			cookies.addCookie(new BasicClientCookie(cookie.substring(0, nameLength), cookie.substring(nameLength + 1)));
-    		}
-    	}
-    	response = serverRunning.createRestTemplate().exchange(
-    			result.getHeaders().getLocation().toString(), HttpMethod.GET, new HttpEntity<>(null, getHeaders(cookies)),
-    			String.class);
-    	if (response.getHeaders().containsKey("Set-Cookie")) {
-    		for (String cookie : response.getHeaders().get("Set-Cookie")) {
-    			int nameLength = cookie.indexOf('=');
-    			cookies.addCookie(new BasicClientCookie(cookie.substring(0, nameLength), cookie.substring(nameLength + 1)));
-    		}
-    	}
-    	if (response.getStatusCode() == HttpStatus.OK) {
-    		// The grant access page should be returned
-    		assertTrue(response.getBody().contains("<h1>Application Authorization</h1>"));
-    		formData.clear();
-    		formData.add(USER_OAUTH_APPROVAL, "true");
-    		formData.add(DEFAULT_CSRF_COOKIE_NAME, IntegrationTestUtils.extractCookieCsrf(response.getBody()));
-    		result = serverRunning.postForResponse("/oauth/authorize", getHeaders(cookies), formData);
-    		assertEquals(HttpStatus.FOUND, result.getStatusCode());
-    		location = result.getHeaders().getLocation().toString();
-    	} else if(response.getStatusCode() == HttpStatus.BAD_REQUEST){
-    		return response.getBody();
-    	} else {
-    		// Token cached so no need for second approval
-    		assertEquals(HttpStatus.FOUND, response.getStatusCode());
-    		location = response.getHeaders().getLocation().toString();
-    	}
-    	return location;
     }
-    
-    public static ResponseEntity<Map> getTokens(ServerRunning serverRunning,
-            									UaaTestAccounts testAccounts,
-            									String clientId,
-            									String clientSecret,
-            									String redirectUri,
-            									String codeVerifier,
-            									String authorizationCode) throws Exception {
-    	MultiValueMap<String, String> formData = new LinkedMultiValueMap<>();
-    	formData.clear();
-    	formData.add("client_id", clientId);
-    	formData.add("grant_type", GRANT_TYPE_AUTHORIZATION_CODE);
-    	formData.add("code", authorizationCode);
-    	if (hasText(redirectUri)) {
-    		formData.add("redirect_uri", redirectUri);
-    	}
-    	if (hasText(codeVerifier)) {
-    		formData.add("code_verifier", codeVerifier);
-    	}
-    	HttpHeaders tokenHeaders = new HttpHeaders();
-    	tokenHeaders.set("Authorization", testAccounts.getAuthorizationHeader(clientId, clientSecret));
-    	return serverRunning.postForMap("/oauth/token", formData, tokenHeaders);
-	}
 
-    public static void callCheckToken(ServerRunning serverRunning,
-    		UaaTestAccounts testAccounts,
-    		String accessToken,
-    		String clientId,
-    		String clientSecret) {
-    	MultiValueMap<String, String> formData = new LinkedMultiValueMap<>();
+    public static String getAuthorizationResponse(ServerRunningExtension serverRunning,
+                                                  String clientId,
+                                                  String username,
+                                                  String password,
+                                                  String redirectUri,
+                                                  String codeChallenge,
+                                                  String codeChallengeMethod) throws Exception {
+        BasicCookieStore cookies = new BasicCookieStore();
+        String mystateid = "mystateid";
+        ServerRunningExtension.UriBuilder builder = serverRunning.buildUri("/oauth/authorize")
+                .queryParam("response_type", "code")
+                .queryParam("state", mystateid)
+                .queryParam("client_id", clientId);
+        if (hasText(redirectUri)) {
+            builder = builder.queryParam("redirect_uri", redirectUri);
+        }
+        if (hasText(codeChallenge)) {
+            builder = builder.queryParam("code_challenge", codeChallenge);
+        }
+        if (hasText(codeChallengeMethod)) {
+            builder = builder.queryParam("code_challenge_method", codeChallengeMethod);
+        }
+        URI uri = builder.build();
+        ResponseEntity<Void> result =
+                serverRunning.createRestTemplate().exchange(
+                        uri.toString(),
+                        HttpMethod.GET,
+                        new HttpEntity<>(null, getHeaders(cookies)),
+                        Void.class
+                );
+        assertThat(result.getStatusCode()).isEqualTo(HttpStatus.FOUND);
+        String location = result.getHeaders().getLocation().toString();
+        extractCookies(result, cookies);
+
+        ResponseEntity<String> response = serverRunning.getForString(location, getHeaders(cookies));
+        extractCookies(response, cookies);
+        MultiValueMap<String, String> formData = new LinkedMultiValueMap<>();
+        assertThat(response.getBody()).contains("/login.do")
+                .contains("username")
+                .contains("password");
+        String csrf = IntegrationTestUtils.extractCookieCsrf(response.getBody());
+        formData.add("username", username);
+        formData.add("password", password);
+        formData.add(CookieBasedCsrfTokenRepository.DEFAULT_CSRF_COOKIE_NAME, csrf);
+        // Should be redirected to the original URL, but now authenticated
+        result = serverRunning.postForResponse("/login.do", getHeaders(cookies), formData);
+        assertThat(result.getStatusCode()).isEqualTo(HttpStatus.FOUND);
+        cookies.clear();
+        extractCookies(result, cookies);
+
+        response = serverRunning.createRestTemplate().exchange(
+                result.getHeaders().getLocation().toString(), HttpMethod.GET, new HttpEntity<>(null, getHeaders(cookies)),
+                String.class);
+        extractCookies(response, cookies);
+        if (response.getStatusCode() == HttpStatus.OK) {
+            // The grant access page should be returned
+            assertThat(response.getBody()).contains("<h1>Application Authorization</h1>");
+            formData.clear();
+            formData.add(USER_OAUTH_APPROVAL, "true");
+            formData.add(DEFAULT_CSRF_COOKIE_NAME, IntegrationTestUtils.extractCookieCsrf(response.getBody()));
+            result = serverRunning.postForResponse("/oauth/authorize", getHeaders(cookies), formData);
+            assertThat(result.getStatusCode()).isEqualTo(HttpStatus.FOUND);
+            location = result.getHeaders().getLocation().toString();
+        } else if (response.getStatusCode() == HttpStatus.BAD_REQUEST) {
+            return response.getBody();
+        } else {
+            // Token cached so no need for second approval
+            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.FOUND);
+            location = response.getHeaders().getLocation().toString();
+        }
+        return location;
+    }
+
+    public static ResponseEntity<Map> getTokens(ServerRunningExtension serverRunning,
+                                                String clientId,
+                                                String clientSecret,
+                                                String redirectUri,
+                                                String codeVerifier,
+                                                String authorizationCode) {
+        MultiValueMap<String, String> formData = new LinkedMultiValueMap<>();
+        formData.clear();
+        formData.add("client_id", clientId);
+        formData.add("grant_type", GRANT_TYPE_AUTHORIZATION_CODE);
+        formData.add("code", authorizationCode);
+        if (hasText(redirectUri)) {
+            formData.add("redirect_uri", redirectUri);
+        }
+        if (hasText(codeVerifier)) {
+            formData.add("code_verifier", codeVerifier);
+        }
+        HttpHeaders tokenHeaders = new HttpHeaders();
+        tokenHeaders.set("Authorization", UaaTestAccounts.getAuthorizationHeader(clientId, clientSecret));
+        return serverRunning.postForMap("/oauth/token", formData, tokenHeaders);
+    }
+
+    public static void callCheckToken(ServerRunningExtension serverRunning,
+                                      String accessToken,
+                                      String clientId,
+                                      String clientSecret) {
+        MultiValueMap<String, String> formData = new LinkedMultiValueMap<>();
         HttpHeaders headers = new HttpHeaders();
-        headers.set("Authorization", testAccounts.getAuthorizationHeader(clientId, clientSecret));
+        headers.set("Authorization", UaaTestAccounts.getAuthorizationHeader(clientId, clientSecret));
         formData.add("token", accessToken);
         ResponseEntity<Map> tokenResponse = serverRunning.postForMap("/check_token", formData, headers);
-        assertEquals(HttpStatus.OK, tokenResponse.getStatusCode());
-        assertNotNull(tokenResponse.getBody().get("iss"));
+        assertThat(tokenResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+        final Map tokenResponseBody = tokenResponse.getBody();
+        assertThat(tokenResponseBody).isNotNull()
+                .containsKey("iss");
     }
 
-    public static Map<String, String> getAuthorizationCodeTokenMap(ServerRunning serverRunning,
-                                                                   UaaTestAccounts testAccounts,
+    public static String getAuthorizationCodeToken(
+            ServerRunningExtension serverRunning,
+            String clientId,
+            String clientAssertion,
+            String username,
+            String password,
+            String tokenResponseType,
+            String redirectUri,
+            String loginHint,
+            boolean callCheckToken) {
+        return getAuthorizationCodeTokenMap(serverRunning, clientId, null, clientAssertion,
+                username, password, tokenResponseType, null, redirectUri, loginHint, callCheckToken).get("access_token");
+    }
+
+    public static Map<String, String> getAuthorizationCodeTokenMap(
+            ServerRunningExtension serverRunning,
+            String clientId,
+            String clientSecret,
+            String username,
+            String password,
+            String tokenResponseType,
+            String jSessionId,
+            String redirectUri,
+            String loginHint,
+            boolean callCheckToken) {
+        return getAuthorizationCodeTokenMap(serverRunning, clientId, clientSecret, null, username, password,
+                tokenResponseType, jSessionId, redirectUri, loginHint, callCheckToken);
+    }
+
+    public static Map<String, String> getAuthorizationCodeTokenMap(ServerRunningExtension serverRunning,
                                                                    String clientId,
                                                                    String clientSecret,
+                                                                   String clientAssertion,
                                                                    String username,
                                                                    String password,
                                                                    String tokenResponseType,
@@ -1306,7 +1406,7 @@ public class IntegrationTestUtils {
         }
 
         String mystateid = "mystateid";
-        ServerRunning.UriBuilder builder = serverRunning.buildUri("/oauth/authorize")
+        ServerRunningExtension.UriBuilder builder = serverRunning.buildUri("/oauth/authorize")
                 .queryParam("response_type", "code")
                 .queryParam("state", mystateid)
                 .queryParam("client_id", clientId);
@@ -1326,31 +1426,19 @@ public class IntegrationTestUtils {
                         Void.class
                 );
 
-        assertEquals(HttpStatus.FOUND, result.getStatusCode());
+        assertThat(result.getStatusCode()).isEqualTo(HttpStatus.FOUND);
         String location = result.getHeaders().getLocation().toString();
-
-        if (result.getHeaders().containsKey("Set-Cookie")) {
-            for (String header : result.getHeaders().get("Set-Cookie")) {
-                int nameLength = header.indexOf('=');
-                cookies.addCookie(new BasicClientCookie(header.substring(0, nameLength), header.substring(nameLength + 1)));
-            }
-        }
+        extractCookies(result, cookies);
 
         ResponseEntity<String> response = serverRunning.getForString(location, getHeaders(cookies));
-
-        if (response.getHeaders().containsKey("Set-Cookie")) {
-            for (String cookie : response.getHeaders().get("Set-Cookie")) {
-                int nameLength = cookie.indexOf('=');
-                cookies.addCookie(new BasicClientCookie(cookie.substring(0, nameLength), cookie.substring(nameLength + 1)));
-            }
-        }
+        extractCookies(response, cookies);
 
         MultiValueMap<String, String> formData = new LinkedMultiValueMap<>();
         if (!hasText(jSessionId)) {
             // should be directed to the login screen...
-            assertTrue(response.getBody().contains("/login.do"));
-            assertTrue(response.getBody().contains("username"));
-            assertTrue(response.getBody().contains("password"));
+            assertThat(response.getBody()).contains("/login.do")
+                    .contains("username")
+                    .contains("password");
             String csrf = IntegrationTestUtils.extractCookieCsrf(response.getBody());
 
             formData.add("username", username);
@@ -1359,44 +1447,34 @@ public class IntegrationTestUtils {
 
             // Should be redirected to the original URL, but now authenticated
             result = serverRunning.postForResponse("/login.do", getHeaders(cookies), formData);
-            assertEquals(HttpStatus.FOUND, result.getStatusCode());
+            assertThat(result.getStatusCode()).isEqualTo(HttpStatus.FOUND);
 
             cookies.clear();
-            if (result.getHeaders().containsKey("Set-Cookie")) {
-                for (String cookie : result.getHeaders().get("Set-Cookie")) {
-                    int nameLength = cookie.indexOf('=');
-                    cookies.addCookie(new BasicClientCookie(cookie.substring(0, nameLength), cookie.substring(nameLength + 1)));
-                }
-            }
+            extractCookies(result, cookies);
         }
 
         response = serverRunning.createRestTemplate().exchange(
                 result.getHeaders().getLocation().toString(), HttpMethod.GET, new HttpEntity<>(null, getHeaders(cookies)),
                 String.class);
+        extractCookies(response, cookies);
 
-        if (response.getHeaders().containsKey("Set-Cookie")) {
-            for (String cookie : response.getHeaders().get("Set-Cookie")) {
-                int nameLength = cookie.indexOf('=');
-                cookies.addCookie(new BasicClientCookie(cookie.substring(0, nameLength), cookie.substring(nameLength + 1)));
-            }
-        }
         if (response.getStatusCode() == HttpStatus.OK) {
             // The grant access page should be returned
-            assertTrue(response.getBody().contains("<h1>Application Authorization</h1>"));
+            assertThat(response.getBody()).contains("<h1>Application Authorization</h1>");
 
             formData.clear();
             formData.add(USER_OAUTH_APPROVAL, "true");
             formData.add(DEFAULT_CSRF_COOKIE_NAME, IntegrationTestUtils.extractCookieCsrf(response.getBody()));
             result = serverRunning.postForResponse("/oauth/authorize", getHeaders(cookies), formData);
-            assertEquals(HttpStatus.FOUND, result.getStatusCode());
+            assertThat(result.getStatusCode()).isEqualTo(HttpStatus.FOUND);
             location = result.getHeaders().getLocation().toString();
         } else {
             // Token cached so no need for second approval
-            assertEquals(HttpStatus.FOUND, response.getStatusCode());
+            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.FOUND);
             location = response.getHeaders().getLocation().toString();
         }
         if (hasText(redirectUri)) {
-            assertTrue("Wrong location: " + location, location.matches(redirectUri + ".*code=.+"));
+            assertThat(location).as("Wrong location: " + location).matches(redirectUri + ".*code=.+");
         }
 
         formData.clear();
@@ -1410,10 +1488,15 @@ public class IntegrationTestUtils {
         }
         formData.add("code", location.split("code=")[1].split("&")[0]);
         HttpHeaders tokenHeaders = new HttpHeaders();
-        tokenHeaders.set("Authorization", testAccounts.getAuthorizationHeader(clientId, clientSecret));
+        if (clientSecret != null) {
+            tokenHeaders.set("Authorization", UaaTestAccounts.getAuthorizationHeader(clientId, clientSecret));
+        } else if (clientAssertion != null) {
+            formData.add(JwtClientAuthentication.CLIENT_ASSERTION_TYPE, JwtClientAuthentication.GRANT_TYPE);
+            formData.add(JwtClientAuthentication.CLIENT_ASSERTION, clientAssertion);
+        }
         @SuppressWarnings("rawtypes")
         ResponseEntity<Map> tokenResponse = serverRunning.postForMap("/oauth/token", formData, tokenHeaders);
-        assertEquals(HttpStatus.OK, tokenResponse.getStatusCode());
+        assertThat(tokenResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
 
         @SuppressWarnings("unchecked")
         OAuth2AccessToken accessToken = DefaultOAuth2AccessToken.valueOf(tokenResponse.getBody());
@@ -1421,16 +1504,37 @@ public class IntegrationTestUtils {
 
         formData = new LinkedMultiValueMap<>();
         HttpHeaders headers = new HttpHeaders();
-        headers.set("Authorization", testAccounts.getAuthorizationHeader(clientId, clientSecret));
+        if (clientSecret != null) {
+            headers.set("Authorization", UaaTestAccounts.getAuthorizationHeader(clientId, clientSecret));
+        } else if (clientAssertion != null) {
+            formData.add(JwtClientAuthentication.CLIENT_ASSERTION_TYPE, JwtClientAuthentication.GRANT_TYPE);
+            formData.add(JwtClientAuthentication.CLIENT_ASSERTION, clientAssertion);
+        }
         formData.add("token", accessToken.getValue());
 
         if (callCheckToken) {
             tokenResponse = serverRunning.postForMap("/check_token", formData, headers);
-            assertEquals(HttpStatus.OK, tokenResponse.getStatusCode());
-            //System.err.println(tokenResponse.getBody());
-            assertNotNull(tokenResponse.getBody().get("iss"));
+            assertThat(tokenResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+            assertThat(tokenResponse.getBody()).containsKey("iss");
         }
         return body;
+    }
+
+    public static void extractCookies(ResponseEntity<?> response, BasicCookieStore cookies) {
+        if (response.getHeaders().containsKey("Set-Cookie")) {
+            for (String cookie : response.getHeaders().get("Set-Cookie")) {
+                int nameLength = cookie.indexOf('=');
+                cookies.addCookie(new BasicClientCookie(cookie.substring(0, nameLength), cookie.substring(nameLength + 1)));
+            }
+        }
+    }
+
+    public static void copyCookies(ResponseEntity<?> response, HttpHeaders headers) {
+        if (response.getHeaders().containsKey("Set-Cookie")) {
+            for (String cookie : response.getHeaders().get("Set-Cookie")) {
+                headers.add("Cookie", cookie);
+            }
+        }
     }
 
     public static String extractCookieCsrf(String body) {
@@ -1444,38 +1548,83 @@ public class IntegrationTestUtils {
         return null;
     }
 
-    public static void takeScreenShot(WebDriver webDriver) {
-        takeScreenShot("testscreenshot-", webDriver);
-    }
-
-    public static void takeScreenShot(String prefix, WebDriver webDriver) {
-        File scrFile = ((TakesScreenshot) webDriver).getScreenshotAs(OutputType.FILE);
-        try {
-            SimpleDateFormat format = new SimpleDateFormat("yyyyMMdd-HHmmss.SSS");
-            String now = format.format(new Date(System.currentTimeMillis()));
-            FileUtils.copyFile(scrFile, new File("build/reports/", prefix + now + ".png"));
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    }
-
     public static void validateAccountChooserCookie(String baseUrl, WebDriver webDriver, IdentityZone identityZone) {
         if (identityZone.getConfig().isAccountChooserEnabled()) {
             List<String> cookies = getAccountChooserCookies(baseUrl, webDriver);
-            assertThat(cookies, Matchers.hasItem(startsWith("Saved-Account-")));
+            assertThat(cookies).anySatisfy(cookie -> assertThat(cookie).startsWith("Saved-Account-"));
         }
     }
 
     public static void validateUserLastLogon(ScimUser user, Long beforeTestTime, Long afterTestTime) {
         Long userLastLogon = user.getLastLogonTime();
-        assertNotNull(userLastLogon);
-        assertTrue((userLastLogon > beforeTestTime) && (userLastLogon < afterTestTime));
+        assertThat(userLastLogon).isNotNull();
+        assertThat((userLastLogon > beforeTestTime) && (userLastLogon < afterTestTime)).isTrue();
     }
 
     public static List<String> getAccountChooserCookies(String baseUrl, WebDriver webDriver) {
         webDriver.get(baseUrl + "/logout.do");
         webDriver.get(baseUrl + "/login");
-        return webDriver.manage().getCookies().stream().map(Cookie::getName).collect(Collectors.toList());
+        return webDriver.manage().getCookies().stream().map(Cookie::getName).toList();
+    }
+
+    public static String createAnotherUser(UaaWebDriver webDriver, String password, SimpleSmtpServer simpleSmtpServer, String url, TestClient testClient) {
+        String userEmail = "user" + new SecureRandom().nextInt() + "@example.com";
+
+        webDriver.get(url + "/create_account");
+        webDriver.findElement(By.name("email")).sendKeys(userEmail);
+        webDriver.findElement(By.name("password")).sendKeys(password);
+        webDriver.findElement(By.name("password_confirmation")).sendKeys(password);
+        webDriver.clickAndWait(By.xpath("//input[@value='Send activation link']"));
+
+        Iterator receivedEmail = simpleSmtpServer.getReceivedEmail();
+        SmtpMessage message = (SmtpMessage) receivedEmail.next();
+        receivedEmail.remove();
+        webDriver.get(testClient.extractLink(message.getBody()));
+
+        return userEmail;
+    }
+
+    public static HttpHeaders getAuthenticatedHeaders(String token) {
+        HttpHeaders headers = new HttpHeaders();
+        headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
+        headers.setContentType(MediaType.APPLICATION_JSON);
+        headers.set("Authorization", "Bearer " + token);
+        return headers;
+    }
+
+    public static String createClientAdminTokenInZone(String baseUrl, String uaaAdminToken, String zoneId, IdentityZoneConfiguration config) {
+        RestTemplate identityClient = getClientCredentialsTemplate(getClientCredentialsResource(baseUrl,
+                new String[]{"zones.write", "zones.read", "scim.zones"}, "identity", "identitysecret"));
+        createZoneOrUpdateSubdomain(identityClient, baseUrl, zoneId, zoneId, config);
+        String zoneUrl = baseUrl.replace("localhost", zoneId + ".localhost");
+        UaaClientDetails zoneClient = new UaaClientDetails("admin-client-in-zone", null, "openid",
+                "authorization_code,client_credentials", "uaa.admin,scim.read,scim.write,zones.testzone1.admin ", zoneUrl);
+        zoneClient.setClientSecret("admin-secret-in-zone");
+        createOrUpdateClient(uaaAdminToken, baseUrl, zoneId, zoneClient);
+        return getClientCredentialsToken(zoneUrl, "admin-client-in-zone", "admin-secret-in-zone");
+    }
+
+    public static class RegexMatcher extends TypeSafeMatcher<String> {
+
+        private final String regex;
+
+        RegexMatcher(final String regex) {
+            this.regex = regex;
+        }
+
+        public static RegexMatcher matchesRegex(final String regex) {
+            return new RegexMatcher(regex);
+        }
+
+        @Override
+        public void describeTo(final Description description) {
+            description.appendText("matches regex=`" + regex + "`");
+        }
+
+        @Override
+        public boolean matchesSafely(final String string) {
+            return string.matches(regex);
+        }
     }
 
     public static class HttpRequestFactory extends HttpComponentsClientHttpRequestFactory {
@@ -1501,28 +1650,9 @@ public class IntegrationTestUtils {
         }
     }
 
-    public static String createAnotherUser(WebDriver webDriver, String password, SimpleSmtpServer simpleSmtpServer, String url, TestClient testClient) {
-        String userEmail = "user" + new SecureRandom().nextInt() + "@example.com";
-
-        webDriver.get(url + "/create_account");
-        webDriver.findElement(By.name("email")).sendKeys(userEmail);
-        webDriver.findElement(By.name("password")).sendKeys(password);
-        webDriver.findElement(By.name("password_confirmation")).sendKeys(password);
-        webDriver.findElement(By.xpath("//input[@value='Send activation link']")).click();
-
-        Iterator receivedEmail = simpleSmtpServer.getReceivedEmail();
-        SmtpMessage message = (SmtpMessage) receivedEmail.next();
-        receivedEmail.remove();
-        webDriver.get(testClient.extractLink(message.getBody()));
-
-        return userEmail;
-    }
-
-
     public static class StatelessRequestFactory extends HttpRequestFactory {
         public StatelessRequestFactory() {
             super(true, true);
         }
     }
-
 }
